Fix for multiple languages : we have /e/ account not google
grep -rl master_clear_desc | xargs sed -i 's/Google/\/e\//g'

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Waarskuwing: Jou toestel sal uitgevee word na nog <xliff:g id="COUNT">^1</xliff:g> mislukte pogings om ontsluit te word!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Voer jou wagwoord in"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Enkripsie onsuksesvol"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Enkripsie is onderbreek en kan nie voltooi word nie. Gevolglik is die data op jou tablet nie langer toeganklik nie. \n\n Om gebruik van jou tablet te hervat, moet jy \'n fabriekterugstelling doen. As jy jou tablet opstel na die terugstelling, sal jy \'n geleentheid kry om enige inligting te herstel wat na jou Google-rekening gerugsteun was."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Enkripsie is onderbreek en kan nie voltooi word nie. Gevolglik is die data op jou selfoon nie langer toeganklik nie. \n\nOm gebruik van jou selfoon te hervat, moet jy \'n fabriekterugstelling doen. As jy jou foon na die terugstelling weer opstel, sal jy \'n geleentheid kry om enige inligting te herstel wat na jou Google-rekening gerugsteun was."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Enkripsie is onderbreek en kan nie voltooi word nie. Gevolglik is die data op jou tablet nie langer toeganklik nie. \n\n Om gebruik van jou tablet te hervat, moet jy \'n fabriekterugstelling doen. As jy jou tablet opstel na die terugstelling, sal jy \'n geleentheid kry om enige inligting te herstel wat na jou /e/-rekening gerugsteun was."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Enkripsie is onderbreek en kan nie voltooi word nie. Gevolglik is die data op jou selfoon nie langer toeganklik nie. \n\nOm gebruik van jou selfoon te hervat, moet jy \'n fabriekterugstelling doen. As jy jou foon na die terugstelling weer opstel, sal jy \'n geleentheid kry om enige inligting te herstel wat na jou /e/-rekening gerugsteun was."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Dekripsie onsuksesvol"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Die wagwoord wat jy ingevoer het, is korrek, maar ongelukkig is jou data korrup. \n\nJy moet \'n fabriekterugstelling doen om die tablet weer te kan gebruik. Wanneer jy jou tablet na die terugstelling opstel, sal jy die geleentheid hê om enige data te herwin wat in jou Google-rekening gerugsteun is."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Die wagwoord wat jy ingevoer het, is korrek, maar ongelukkig is jou data korrup. \n\nJy moet \'n fabriekterugstelling doen om die foon weer te kan gebruik. Wanneer jy jou foon na die terugstelling opstel, sal jy die geleentheid hê om enige data te herwin wat in jou Google-rekening gerugsteun is."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Die wagwoord wat jy ingevoer het, is korrek, maar ongelukkig is jou data korrup. \n\nJy moet \'n fabriekterugstelling doen om die tablet weer te kan gebruik. Wanneer jy jou tablet na die terugstelling opstel, sal jy die geleentheid hê om enige data te herwin wat in jou /e/-rekening gerugsteun is."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Die wagwoord wat jy ingevoer het, is korrek, maar ongelukkig is jou data korrup. \n\nJy moet \'n fabriekterugstelling doen om die foon weer te kan gebruik. Wanneer jy jou foon na die terugstelling opstel, sal jy die geleentheid hê om enige data te herwin wat in jou /e/-rekening gerugsteun is."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Wissel invoermetode"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Stel skermslot"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Beskerm jou toestel"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Netwerkinstellings is teruggestel"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Stel toestel terug"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Fabrieksterugstelling"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dit sal al die data uit jou tablet se "<b>"interne geheue"</b>" uitvee, insluitend: \n\n"<li>"jou Google-rekening"</li>\n" "<li>"stelsel- en programdata-instellings"</li>\n<li>"afgelaaide programme"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dit sal al die data uit jou tablet se "<b>"interne geheue"</b>" uitvee, insluitend: \n\n"<li>"jou Google-rekening"</li>\n" "<li>"stelsel- en programdata-instellings"</li>\n<li>"afgelaaide programme"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dit sal al die data uit jou tablet se "<b>"interne geheue"</b>" uitvee, insluitend: \n\n"<li>"jou /e/-rekening"</li>\n" "<li>"stelsel- en programdata-instellings"</li>\n<li>"afgelaaide programme"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dit sal al die data uit jou tablet se "<b>"interne geheue"</b>" uitvee, insluitend: \n\n"<li>"jou /e/-rekening"</li>\n" "<li>"stelsel- en programdata-instellings"</li>\n<li>"afgelaaide programme"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Jy is tans aangemeld by die volgende rekeninge:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Daar is ander gebruikers op hierdie toestel teenwoordig.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musiek"</li>\n<li>"Foto\'s"</li>\n<li>"Ander gebruikerdata"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth soek tans"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Verbeter ligging deur stelselprogramme en -dienste toe te laat om Bluetooth-toestelle enige tyd te bespeur."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi- en selnetwerkligging"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Laat programme Google se liggingsdiens gebruik om jou ligging vinniger te beraam. Anonieme liggingsdata sal ingesamel word en aan Google gestuur word."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Laat programme /e/ se liggingsdiens gebruik om jou ligging vinniger te beraam. Anonieme liggingsdata sal ingesamel word en aan /e/ gestuur word."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Ligging deur Wi-Fi vasgestel"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS-satelliete"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Laat programme toe om GPS op jou tablet te gebruik om jou ligging presies vas te stel"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Gebruik bygestane GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Gebruik bediener om GPS by te staan (ontmerk om netwerkgebruik te verminder)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Gebruik bediener om GPS by te staan (ontmerk om GPS-werkverrigting te verbeter)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Ligging &amp; Google-soektog"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Laat Google jou ligging gebruik om soekresultate en ander dienste te verbeter"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Ligging &amp; /e/-soektog"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Laat /e/ jou ligging gebruik om soekresultate en ander dienste te verbeter"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Toegang tot my ligging"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Gee aan programme wat om jou toestemming gevra het toegang tot jou liggingsinligting"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Liggingsbronne"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Program-instellings"</string>
     <string name="install_applications" msgid="4872012136210802181">"Onbekende bronne"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Laat alle programbronne toe"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Laat jou programme van ander bronne as Google Play installeer"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Laat jou programme van ander bronne as /e/ Play installeer"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Laat die installering van programme van onbekende bronne toe"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Jou tablet en persoonlike inligting is meer blootgestel aan aanvalle van programme uit onbekende bronne. Jy stem in dat slegs jy verantwoordelik is vir enige skade aan jou tablet of verlies van data weens die gebruik van hierdie programme."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Jou selfoon en persoonlike inligting is meer kwesbaar vir aanvalle deur programme van onbekende bronne. Jy stem in dat slegs jy verantwoordelik is vir enige skade aan jou foon of verlies van data weens die gebruik van hierdie programme."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Rugsteun en laai terug"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Persoonlike data"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Rugsteun my data"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Rugsteun programdata, Wi-Fi-wagwoorde en ander instellings na Google-bedieners"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Rugsteun programdata, Wi-Fi-wagwoorde en ander instellings na /e/-bedieners"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Rugsteunrekening"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Sluit programdata in"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Outomatiese teruglaai"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Rugsteundiens in onaktief."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Geen rekening stoor tans gerugsteunde data nie"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Hou op om jou Wi-Fi-wagwoorde, boekmerke, ander instellings en programdata te rugsteun en vee al die kopieë op Google-bedieners uit?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Hou op om jou Wi-Fi-wagwoorde, boekmerke, ander instellings en programdata te rugsteun en vee al die kopieë op /e/-bedieners uit?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Staak die rugsteun van toesteldata (soos Wi-Fi-wagwoorde en oproepgeskiedenis) en programdata (soos instellings en lêers wat deur programme geberg is), en vee ook alle kopieë op afgeleë bedieners uit?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Rugsteun toesteldata (soos Wi-Fi-wagwoorde en oproepgeskiedenis) en programdata (soos instellings en lêers wat deur programme geberg is) outomaties oor \'n afstand.\n\nWanneer jy outomatiese rugsteun aanskakel, word toestel- en programdata van tyd tot tyd oor \'n afstand gestoor. Programdata kan enige data wees wat \'n program gestoor het (op grond van ontwikkelaarinstellings), insluitend potensieel sensitiewe data, soos kontakte, boodskappe en foto\'s."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Toesteladministrasie-instellings"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalender"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontakte"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welkom by Google Sync!"</font>" \n\'n Google-benadering om data te sinchroniseer vir toegang tot al jou kontakte, afsprake en meer, ongeag waar jy is."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welkom by /e/ Sync!"</font>" \n\'n /e/-benadering om data te sinchroniseer vir toegang tot al jou kontakte, afsprake en meer, ongeag waar jy is."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Programsinkronisering-instellings"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Data en sinkronisering"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Verander wagwoord"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Hierdie kenmerk kan veroorsaak dat \'n program wat afhanklik is van agtergronddata, ophou werk as net sellulêre netwerke beskikbaar is.\n\nJy kan meer geskikte datagebruikkontroles vind in die instellings wat in die program self beskikbaar is."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Dit is net moontlik om agtergronddata te beperk as jy \'n limiet vir sellulêre data gestel het."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Moet die outomatiese sinkronisering van data aangeskakel word?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Enige veranderings wat jy aan jou rekeninge op die web aanbring, sal outomaties na jou tablet gekopieer word.\n\nSommige rekeninge kan ook outomaties enige veranderings wat jy op die tablet maak, na die web kopieer. \'n Google-rekening werk so."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Enige veranderings wat jy aan jou rekeninge aanbring, sal outomaties na jou foon gekopieer word.\n\nSommige rekeninge kan ook outomaties enige veranderings wat jy op die tablet maak, na die web kopieer. \'n Google-rekening werk so."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Enige veranderings wat jy aan jou rekeninge op die web aanbring, sal outomaties na jou tablet gekopieer word.\n\nSommige rekeninge kan ook outomaties enige veranderings wat jy op die tablet maak, na die web kopieer. \'n /e/-rekening werk so."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Enige veranderings wat jy aan jou rekeninge aanbring, sal outomaties na jou foon gekopieer word.\n\nSommige rekeninge kan ook outomaties enige veranderings wat jy op die tablet maak, na die web kopieer. \'n /e/-rekening werk so."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Moet die outomatiese sinkronisering van data afgeskakel word?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Dit sal data- en batteryverbruik bespaar, maar jy sal elke rekening self moet sinkroniseer om onlangse inligting in te samel.  En jy sal geen kennisgewings ontvang wanneer opdaterings plaasvind nie."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Gebruiksiklus-terugsteldatum"</string>
