--- a/res/values-ast-rES/strings.xml
+++ b/res/values-ast-rES/strings.xml
@@ -467,24 +467,24 @@ Teníemos un Palaciu…\n
       \n\n
       Pa siguir usando la tableta, precises reafitala.
       Cuando la configures tres reafitala, vas tener la oportunidá de restaurar
-      cualesquier datu que se ficiere copia de seguranza na to cuenta de Google.
+      cualesquier datu que se ficiere copia de seguranza na to cuenta de /e/.
     </string>
     <string name="crypt_keeper_failed_summary" product="default">      Interrupióse\u2019l cifráu y nun pue completase. De resultes, los datos del
       teléfonu yá nun van ser accesibles.
       \n\nPa siguir usando\u2019l teléfonu, precises reafitalu.
       Cuando lu configures tres reafitalu, vas tener la oportunidá de restaurar
-      cualesquier datu que se ficiere copia de seguranza na to cuenta de Google.
+      cualesquier datu que se ficiere copia de seguranza na to cuenta de /e/.
     </string>
     <string name="crypt_keeper_data_corrupt_title">Fallu nel cifráu</string>
     <string name="crypt_keeper_data_corrupt_summary" product="tablet">      La contraseña qu\u2019introduxesti ye correuta, pero los datos tán toyíos.
       \n\nPa siguir usando la tableta, precises reafitala.
       Cuando la configures tres reafitala, vas tener la oportunidá de restaurar
-      cualesquier datu que se ficiere copia de seguranza na to cuenta de Google.
+      cualesquier datu que se ficiere copia de seguranza na to cuenta de /e/.
     </string>
     <string name="crypt_keeper_data_corrupt_summary" product="default">      La contraseña qu\u2019introduxesti ye correuta, pero los datos tán toyíos.
       \n\nPa siguir usando\u2019l teléfonu, precises reafitalu.
       Cuando lu configures tres reafitalu, vas tener la oportunidá de restaurar
-      cualesquier datu que se ficiere copia de seguranza na to cuenta de Google.
+      cualesquier datu que se ficiere copia de seguranza na to cuenta de /e/.
     </string>
     <string name="crypt_keeper_switch_input_method">Camudar métodu d\'entrada</string>
     <string name="suggested_lock_settings_title">Afitar bloquéu de pantalla</string>
@@ -1325,8 +1325,8 @@ Teníemos un Palaciu…\n
     <string name="reset_network_complete_toast">Reafitáronse los axustes de rede</string>
     <string name="device_reset_title">Reafitar preséu</string>
     <string name="master_clear_title">Reafitar datos de fábrica</string>
-    <string name="master_clear_desc" product="tablet">Van desaniciase tolos datos del <b>almacenamientu internu</b> de la table\u2019t, como:\n\n<li>La to cuenta de Google</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
-    <string name="master_clear_desc" product="default">Van desaniciase tolos datos del <b>almacenamientu internu</b> del teléfon\u2019u, como:\n\n<li>La to cuenta de Google</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
+    <string name="master_clear_desc" product="tablet">Van desaniciase tolos datos del <b>almacenamientu internu</b> de la table\u2019t, como:\n\n<li>La to cuenta de /e/</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
+    <string name="master_clear_desc" product="default">Van desaniciase tolos datos del <b>almacenamientu internu</b> del teléfon\u2019u, como:\n\n<li>La to cuenta de /e/</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
     <string name="master_clear_accounts" product="default">\n\nAnguaño aniciesti sesión nes cuentes de darréu:\n</string>
     <string name="master_clear_other_users_present" product="default">\n\nHai otros usuarios presentes nesti preséu.\n</string>
     <string name="master_clear_desc_also_erases_external"><li>Música</li>\n<li>Semeyes</li>\n<li>Otros datos d\'usuariu</li></string>
@@ -1411,7 +1411,7 @@ Teníemos un Palaciu…\n
     <string name="location_scanning_bluetooth_always_scanning_description">        Ameyora l\'allugamientu permitiendo que les aplicaciones y servicios del sistema deteuten
         preseos Bluetooth en cualesquier momentu.</string>
     <string name="location_network_based">Allugamientu de Wi\u2011Fi y rede móvil</string>
-    <string name="location_neighborhood_level">Dexa que\u2019l serviciu d\u2019allugamientu de Google calcule aína\u2019l to allugamientu. Recoyeránse y unviaránse datos anónimos a Google.</string>
+    <string name="location_neighborhood_level">Dexa que\u2019l serviciu d\u2019allugamientu de /e/ calcule aína\u2019l to allugamientu. Recoyeránse y unviaránse datos anónimos a /e/.</string>
     <string name="location_neighborhood_level_wifi">Llocalización determinada por Wi-Fi</string>
     <string name="location_gps">Satélites GPS</string>
     <string name="location_street_level" product="tablet">Permitir que les aplicaciones usen el GPS de la tablet pa determinar la to llocalización</string>
@@ -1419,8 +1419,8 @@ Teníemos un Palaciu…\n
     <string name="assisted_gps">Utilizar GPS asistíu</string>
     <string name="assisted_gps_enabled">Usar el sirvidor p\'asistir al GPS (desactivar p\'amenorgar l\'usu de la rede)</string>
     <string name="assisted_gps_disabled">Usar el sirvidor p\'asistir al GPS (desactivar p\'ameyorar el rindimientu del GPS)</string>
-    <string name="use_location_title">Allugamientu y gueta de Google</string>
-    <string name="use_location_summary">Dexa que Google use\'l to allugamientu p\'ameyorar los resultaos de gueta y otros servicios</string>
+    <string name="use_location_title">Allugamientu y gueta de /e/</string>
+    <string name="use_location_summary">Dexa que /e/ use\'l to allugamientu p\'ameyorar los resultaos de gueta y otros servicios</string>
     <string name="location_access_title">Acceder al mio allugmientu</string>
     <string name="location_access_summary">Dexa que les aplicaciones que pidieren el permisu usen la to información d\'allugamientu</string>
     <string name="location_sources_heading">Fontes d\'allugamientu</string>
@@ -1517,7 +1517,7 @@ Teníemos un Palaciu…\n
     <string name="applications_settings_header">Axustes d\'aplicación</string>
     <string name="install_applications">Fontes desconocíes</string>
     <string name="install_applications_title">Permitir toles fontes d\'apps</string>
-    <string name="install_unknown_applications_title">Permítete instalar aplicaciones que nun sían de Google Play</string>
+    <string name="install_unknown_applications_title">Permítete instalar aplicaciones que nun sían de /e/ Play</string>
     <string name="install_unknown_applications">Permite la instalación d\'aplicaciones de fontes desonocíes</string>
     <string name="install_all_warning" product="tablet">La tablet y los datos personales son más vulnerables a los ataques d\'aplicaciones d\'orixe desconocíu. L\'usuariu aceuta ser l\'únicu responsable de cualquier dañu na tablet o perda de datos que pueda derivase del usu d\'estes aplicaciones.</string>
     <string name="install_all_warning" product="default">El teléfonu y los datos personales son más vulnerables a los ataques d\'aplicaciones d\'orixe desconocíu. L\'usuariu aceuta ser l\'únicu responsable de cualquier dañu nel teléfonu o perda de datos que pueda derivase del usu d\'estes aplicaciones.</string>
@@ -2126,14 +2126,14 @@ Teníemos un Palaciu…\n
     <string name="backup_section_title">Respaldu y restauración</string>
     <string name="personal_data_section_title">Datos personales</string>
     <string name="backup_data_title">Respaldar los mios datos</string>
-    <string name="backup_data_summary">Crear copia de seguranza de datos d\'aplicaciones, contraseñes Wi-Fi y otros axustes nos sirvidores de Google</string>
+    <string name="backup_data_summary">Crear copia de seguranza de datos d\'aplicaciones, contraseñes Wi-Fi y otros axustes nos sirvidores de /e/</string>
     <string name="backup_configure_account_title">Cuenta de copia de seguranza</string>
     <string name="include_app_data_title">Incluyir datos d\'aplicación</string>
     <string name="auto_restore_title">Restauración automática</string>
     <string name="auto_restore_summary">Al reinstalar una aplicación, restaurar los axustes y datos respaldaos</string>
     <string name="backup_inactive_title">El serviciu de copia de seguridá ta inactivu.</string>
     <string name="backup_configure_account_default_summary">Nestos momentos, nun hai denguna cuenta almacenando datos con copia de seguranza</string>
-    <string name="backup_erase_dialog_message">¿Quies dexar de facer copies de seguranza de les contraseñes Wi-Fi, de los marcadores y d\'otros axustes y datos d\'aplicaciones, arriendes de desaniciar toles copies de los sirvidores de Google?</string>
+    <string name="backup_erase_dialog_message">¿Quies dexar de facer copies de seguranza de les contraseñes Wi-Fi, de los marcadores y d\'otros axustes y datos d\'aplicaciones, arriendes de desaniciar toles copies de los sirvidores de /e/?</string>
     <string name="fullbackup_data_summary">Copia de seguranza automática de los datos del preséu (como les contraseñes de Wi-Fi y l\'historial de llamaes) y los datos de l\'aplicación (como la configuración y los ficheros almacenaos nes aplicaciones) de manera remota. \n\nAl activar la copia de seguranza automática, los datos de l\'aplicación y del preséu guárdense periódicamente de manera remota. Los datos de l\'aplicación pueden ser cualesquier información que guardara una aplicación (según la configuración del desendolcador), incluyíos datos potencialmente confidenciales como contautos, mensaxes y semeyes.</string>
     <string name="device_admin_settings_title">Axustes d\'alministración de preseos</string>
     <string name="active_device_admin_msg">Alministrador de preseos</string>
@@ -2219,8 +2219,8 @@ Teníemos un Palaciu…\n
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">Calendariu</string>
     <string name="sync_contacts">Contautos</string>
-    <string name="sync_plug"><font fgcolor="#ffffffff">¡Afáyate en Google Sync!</font>
-    \nEl mou de Google pa sincronizar datos y permitir l\'accesu a los tos contautos, cites y muncho más dende cualesquier llugar.
+    <string name="sync_plug"><font fgcolor="#ffffffff">¡Afáyate en /e/ Sync!</font>
+    \nEl mou de /e/ pa sincronizar datos y permitir l\'accesu a los tos contautos, cites y muncho más dende cualesquier llugar.
     </string>
     <string name="header_application_sync_settings">Axustes de sincronización de l\'aplicación</string>
     <string name="header_data_and_synchronization">Datos y sincronización</string>
@@ -2308,8 +2308,8 @@ Teníemos un Palaciu…\n
     <string name="data_usage_app_restrict_dialog">Esta función pue facer que dexe de funcionar una aplicación que tenga que usar conexones automátiques cuando namái esistan redes móviles disponibles.\n\nPues alcontrar controles d\'usu de datos más afayadizos nes opciones de configuración disponibles na aplicación.</string>
     <string name="data_usage_restrict_denied_dialog">Namái pues restrinxir les conexones automátiques si afite\u2019s una llende de datos móviles.</string>
     <string name="data_usage_auto_sync_on_dialog_title">¿Activar sincronización automática?</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet">Cualesquier cambéu que faigas a les tos cuentes na web van copiase automáticamente a la to tableta. .\n\nDalgunes cuentes podríen tamién copiar cualesquier cambéu que faigas automáticamente dende la tableta a la web. Una cuenta de Google funciona d\'esti mou.</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default">Cualesquier cambéu que faigas a les tos cuentes na web van copiase automáticamente al to teléfonu. .\n\nDalgunes cuentes podríen tamién copiar cualesquier cambéu que faigas automáticamente dende\'l teléfonu a la web. Una cuenta de Google funciona d\'esti mou.</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet">Cualesquier cambéu que faigas a les tos cuentes na web van copiase automáticamente a la to tableta. .\n\nDalgunes cuentes podríen tamién copiar cualesquier cambéu que faigas automáticamente dende la tableta a la web. Una cuenta de /e/ funciona d\'esti mou.</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default">Cualesquier cambéu que faigas a les tos cuentes na web van copiase automáticamente al to teléfonu. .\n\nDalgunes cuentes podríen tamién copiar cualesquier cambéu que faigas automáticamente dende\'l teléfonu a la web. Una cuenta de /e/ funciona d\'esti mou.</string>
     <string name="data_usage_auto_sync_off_dialog_title">¿Desactivar sincronización automática?</string>
     <string name="data_usage_auto_sync_off_dialog">Esto permite aforrar datos y batería, pero vas ten\u2019r de sincronizar cada cuenta de mou manual pa recopilar información recién y nu\u2019n vas recibir notificaciones cuando esistan anovamientos.</string>
     <string name="data_usage_cycle_editor_title">Esbilla\'l día nel que va entamar cada ciclu</string>
