--- a/res/values-be-rBY/strings.xml
+++ b/res/values-be-rBY/strings.xml
@@ -423,11 +423,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Папярэджанне: Усе налады вашай прылады будуць скінутыя пасля яшчэ <xliff:g id="COUNT">^1</xliff:g> няўдалых спроб разблакіроўкі!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Увядзіце пароль"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шыфраванне няўдалае"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шыфраванне было перапынена і не можа быць завершана. У выніку гэтага даныя на вашым планшэце больш не даступныя.\n\nКаб працягваць выкарыстоўваць планшэт, неабходна скінуць налады. Падчас наладкі планшэта пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковым запісе Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шыфраванне было перапынена і не можа быць завершана. У выніку гэтага даныя на вашым тэлефоне больш не даступныя.\n\nКаб працягваць выкарыстоўваць тэлефон, неабходна скінуць налады. Падчас наладкі тэлефона пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковы запісе Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шыфраванне было перапынена і не можа быць завершана. У выніку гэтага даныя на вашым планшэце больш не даступныя.\n\nКаб працягваць выкарыстоўваць планшэт, неабходна скінуць налады. Падчас наладкі планшэта пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковым запісе /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шыфраванне было перапынена і не можа быць завершана. У выніку гэтага даныя на вашым тэлефоне больш не даступныя.\n\nКаб працягваць выкарыстоўваць тэлефон, неабходна скінуць налады. Падчас наладкі тэлефона пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковы запісе /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Расшыфроўка не атрымалася"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Уведзены вамі пароль правільны, але, на жаль, вашы даныя пашкоджаныя. \n\nКаб працягваць выкарыстоўваць планшэт, неабходна скінуць налады. Падчас наладкі планшэта пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковым запісе Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Уведзены вамі пароль правільны, але, на жаль, вашы даныя пашкоджаныя. \n\nКаб працягваць выкарыстоўваць тэлефон, неабходна скінуць налады. Падчас наладкі тэлефона пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковы запісе Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Уведзены вамі пароль правільны, але, на жаль, вашы даныя пашкоджаныя. \n\nКаб працягваць выкарыстоўваць планшэт, неабходна скінуць налады. Падчас наладкі планшэта пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковым запісе /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Уведзены вамі пароль правільны, але, на жаль, вашы даныя пашкоджаныя. \n\nКаб працягваць выкарыстоўваць тэлефон, неабходна скінуць налады. Падчас наладкі тэлефона пасля скіду налад у вас з\'явіцца магчымасць аднавіць даныя, рэзервовыя копіі якіх захоўваліся ў вашым уліковы запісе /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Пераключэнне рэжыму ўводу"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Задайце блакіроўку экрана"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Абараніце сваю прыладу"</string>
@@ -1259,8 +1259,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Налады сеткі былі скінутыя"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Скід налад прылады"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Скід да завадскіх налад"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага планшэта, у тым ліку:\n\n"<li>"Ваш улiковы запiс Google"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага тэлефона, у тым ліку:\n\n"<li>"Ваш улiковы запiс Google"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага планшэта, у тым ліку:\n\n"<li>"Ваш улiковы запiс /e/"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага тэлефона, у тым ліку:\n\n"<li>"Ваш улiковы запiс /e/"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"У дадзены момант вы зайшлі ў наступныя ўліковыя запісы:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"На гэтай прыладзе ёсць іншыя карыстальнікі.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музыка"</li>\n<li>"Фатаграфіі"</li>\n<li>"Іншыя дадзеныя карыстальніка"</li></string>
@@ -1345,7 +1345,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Сканіраванне Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Палепшыце функцыю вызначэння месцазнаходжання, дазволіўшы сістэмным дадаткам і службам знаходзіць прылады Bluetooth у любы час."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi-Fi і мабільная сетка"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Дазв. дадаткам выкар. службу вызнач. месцазн., каб знах. вас хутчэй. Ананiмныя даныя пра месцазн. будуць збiр. i адпр. у Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Дазв. дадаткам выкар. службу вызнач. месцазн., каб знах. вас хутчэй. Ананiмныя даныя пра месцазн. будуць збiр. i адпр. у /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Месцазнаходжанне вызначаецца праз Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS спадарожнікі"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Дазволіць прыкладанням выкарыстоўваць GPS, каб дакладна вызначаць ваша месцазнаходжанне"</string>
@@ -1353,8 +1353,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Выкарыстоўваць AGPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Выкарыстоўваць сервер, как падтрымліваць GPS (адключыце, каб скараціць выкарыстанне сеткі)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Выкарыстоўваць сервер, как падтрымліваць GPS (адключыце, каб палепшыць работу GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Месцазнаходжання і  пошук Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Дазволіць Google выкарыстоўваць месцазнаходжання для паляпшэння вынікаў пошуку і іншых паслуг."</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Месцазнаходжання і  пошук /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Дазволіць /e/ выкарыстоўваць месцазнаходжання для паляпшэння вынікаў пошуку і іншых паслуг."</string>
     <string name="location_access_title" msgid="7064108942964081243">"Доступ да майго месцазнаходжання"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Дазвольце прыкладанням, якiя запыталi ў вас дазвол, выкарыстоваць звесткi пра ваша месцазнаходжанне"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Крыніцы месцазнаходжання"</string>
@@ -1453,7 +1453,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Налады прыкладання"</string>
     <string name="install_applications" msgid="4872012136210802181">"Невядомыя крыніцы"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Дазволіць усе крыніцы дадаткаў"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Дазваляе вам усталёўваць дадаткі з крыніц, іншых чым Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Дазваляе вам усталёўваць дадаткі з крыніц, іншых чым /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Дазволіць усталёўку прыкладанняў з невядомых крыніц"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Планшэт і асабістыя дадзеныя больш уразлівыя да нападаў прыкладанняў з невядомых крыніц. Вы згаджаецеся, што нясеце поўную адказнасць за любыя пашкоджанні планшэта ці страту дадзеных, якія могуць паўстаць у працэсе выкарыстання гэтых прыкладанняў."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Тэлефон і асабістыя даныя больш прыступныя перад атакамі праграм з невядомых крыніц. Вы згаджаецеся, што несяце выключную адказнасць за любыя пашкоджанні тэлефона ці страту даных, якія могуць здарыцца у працэсе выкарыстання гэтых праграм."</string>
@@ -2069,7 +2069,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Рэзервовае капіяванне і аднаўленне"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Асабістыя дадзеныя"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Рэзервовае капіяванне дадзеных"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Рэзервовае капіраванне дадзеных прыкладанняў, пароляў Wi-Fi і іншых параметраў на серверы Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Рэзервовае капіраванне дадзеных прыкладанняў, пароляў Wi-Fi і іншых параметраў на серверы /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Рэз. кап. уліковага запісу"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"У тым ліку даныя дадаткаў"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Аўтаматычнае аднаўленне"</string>
@@ -2077,7 +2077,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Служба рэзервовага капіравання неактыўна."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Зараз ніякі ўліковы запіс не змяшчае дадзеных, якія былі рэзервова скапіяваны"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Спыніць рэзервовае капіраванне пароляў ад Wi-Fi, закладак, іншых налад і дадзеных, а таксама выдаліць усе копіі на серверах Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Спыніць рэзервовае капіраванне пароляў ад Wi-Fi, закладак, іншых налад і дадзеных, а таксама выдаліць усе копіі на серверах /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Спыніць рэзервовае капіраванне даных прылады (напрыклад, пароляў Wi-Fi і гісторыі выклікаў) і даных праграм (напрыклад, налад і файлаў, якія захоўваюцца праграмамі), а таксама выдаліць усе копіі на аддаленых серверах?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Аўтаматычна ствараць рэзервовыя копіі даных прылады (такіх як паролі Wi-Fi і гісторыя выклікаў) і дадаткаў (такіх як налады і файлы, якія захоўваюцца ў дадатках) аддалена.\n\nКалі аўтаматычнае рэзеравовае капіраванне даных уключана, даныя прылады і дадаткаў перыядычна аддалена захоўваюцца. Даныя дадаткаў – гэта любыя даныя, якія захоўваюцца дадаткам (у залежнасці ад налад распрацоўшчыка), у тым ліку патэнцыяльна ўразлівыя даныя, такія як кантакты, паведамленні і фатаграфіі."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Налады адміністравання прылады"</string>
@@ -2164,7 +2164,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Каляндар"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Кантакты"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Вітаем у службе сінхранізацыі Google!"</font>" \nПадчас сінхранізацыі дадзеных Google дазваляе атрымліваць у любым месцы доступ да кантактаў, сустрэч і многага іншага."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Вітаем у службе сінхранізацыі /e/!"</font>" \nПадчас сінхранізацыі дадзеных /e/ дазваляе атрымліваць у любым месцы доступ да кантактаў, сустрэч і многага іншага."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Параметры сiнхранiзацыi прыкладання"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Сынхранізацыя дадзеных"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Змяніць пароль"</string>
@@ -2252,8 +2252,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Гэта функцыя можа выклікаць спыненне працы дадатку, якi залежыць ад фонавых даных, калі даступны толькі мабільныя сеткі.\n\nВы можаце знайсці больш адпаведныя налады выкарыстання даных у наладах гэтага дадатку."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Абмежаваць выкарыстанне фонавых даных можна толькі тады, калі вы ўсталявалі ліміт мабільных даных."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Уключыць аўтасінхр. даных?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Любыя змены, унесеныя ва ўліковы запіс на вэб-сайце, будуць аўтаматычна скапіраваны ў памяць планшэта.\n\nНекаторыя ўліковыя запісы таксама могуць аўтаматычна капіраваць любыя змены, якія вы робіце ў планшэце, на вэб-сайт. Уліковы запіс Google працуе такім чынам."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Любыя змены, унесеныя ва ўліковы запіс на вэб-сайце, будуць аўтаматычна скапіраваныя ў памяць тэлефона.\n\nНекаторыя ўліковыя запісы таксама могуць аўтаматычна капіраваць любыя змены, якія вы робіце ў тэлефоне, на вэб-сайт. Уліковы запіс Google працуе такім чынам."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Любыя змены, унесеныя ва ўліковы запіс на вэб-сайце, будуць аўтаматычна скапіраваны ў памяць планшэта.\n\nНекаторыя ўліковыя запісы таксама могуць аўтаматычна капіраваць любыя змены, якія вы робіце ў планшэце, на вэб-сайт. Уліковы запіс /e/ працуе такім чынам."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Любыя змены, унесеныя ва ўліковы запіс на вэб-сайце, будуць аўтаматычна скапіраваныя ў памяць тэлефона.\n\nНекаторыя ўліковыя запісы таксама могуць аўтаматычна капіраваць любыя змены, якія вы робіце ў тэлефоне, на вэб-сайт. Уліковы запіс /e/ працуе такім чынам."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Адключыць аўтасінхр. даных?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Гэта дасць магчымасць захаваць трафік і зарад акумулятара, але вам трэба будзе сінхранiзаваць кожны ўліковы запіс уручную, каб збіраць свежую інфармацыю. І вы не будзеце атрымліваць апавяшчэнні, калі з\'явяцца абнаўленні."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Дата скіду цыкла выкарыстання"</string>
