--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"اخطار: دستگاهتان پس از <xliff:g id="COUNT">^1</xliff:g> تلاش ناموفق دیگر برای باز کردن قفل آن، پاک می‌شود."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"گذرواژه‌تان را تایپ کنید"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"رمزگذاری ناموفق"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏رمزگذاری متوقف شد و امکان تکمیل کردن آن وجود ندارد. در نتیجه، داده‌های موجود در رایانهٔ لوحی شما دیگر قابل دسترسی نیستند. \n\nبرای ادامه استفاده از رایانهٔ لوحی خود، باید تنظیمات کارخانه را بازنشانی کنید. با تنظیم کردن رایانهٔ لوحی پس از بازنشانی، این فرصت را خواهید داشت تا هرگونه داده‌ای را که از آن در حساب Google نسخهٔ پشتیبان تهیه شده بازیابی کنید."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏رمزگذاری متوقف شد و امکان تکمیل آن وجود ندارد. در نتیجه، داده‌های موجود در تلفن شما دیگر قابل دسترسی نیستند. \n\nبرای ادامه استفاده از تلفن خود، باید تنظیمات کارخانه را بازنشانی کنید. با راه‌اندازی تلفن پس از بازنشانی، این فرصت را خواهید داشت تا هرگونه داده‌ای را که از آن در حساب Google نسخهٔ پشتیبان تهیه شده بازیابی کنید."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏رمزگذاری متوقف شد و امکان تکمیل کردن آن وجود ندارد. در نتیجه، داده‌های موجود در رایانهٔ لوحی شما دیگر قابل دسترسی نیستند. \n\nبرای ادامه استفاده از رایانهٔ لوحی خود، باید تنظیمات کارخانه را بازنشانی کنید. با تنظیم کردن رایانهٔ لوحی پس از بازنشانی، این فرصت را خواهید داشت تا هرگونه داده‌ای را که از آن در حساب /e/ نسخهٔ پشتیبان تهیه شده بازیابی کنید."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏رمزگذاری متوقف شد و امکان تکمیل آن وجود ندارد. در نتیجه، داده‌های موجود در تلفن شما دیگر قابل دسترسی نیستند. \n\nبرای ادامه استفاده از تلفن خود، باید تنظیمات کارخانه را بازنشانی کنید. با راه‌اندازی تلفن پس از بازنشانی، این فرصت را خواهید داشت تا هرگونه داده‌ای را که از آن در حساب /e/ نسخهٔ پشتیبان تهیه شده بازیابی کنید."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"رمزگشایی انجام نشد"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏گذروا‌ژه‌ای که وارد کردید درست است، اما متأسفانه داده‌ها مخدوش است. \n\nبرای ازسرگیری استفاده از تلفنتان، باید بازنشانی به تنظیمات کارخانه را انجام دهید. وقتی پس از بازنشانی، رایانه لوحی‌تان را راه‌اندازی می‌کنید، فرصت دارید تا هر داده‌ای را که در حساب Google شما پشتیبان گرفته شده بود، بازیابی کنید."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏گذروا‌ژه‌ای که وارد کردید درست است، اما متأسفانه داده‌ها مخدوش است. \n\nبرای ازسرگیری استفاده از تلفنتان، باید بازنشانی به تنظیمات کارخانه را انجام دهید. وقتی پس از بازنشانی، تلفنتان را راه‌اندازی می‌کنید، فرصت دارید تا هر داده‌ای را که در حساب Google شما پشتیبان گرفته شده بود، بازیابی کنید."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏گذروا‌ژه‌ای که وارد کردید درست است، اما متأسفانه داده‌ها مخدوش است. \n\nبرای ازسرگیری استفاده از تلفنتان، باید بازنشانی به تنظیمات کارخانه را انجام دهید. وقتی پس از بازنشانی، رایانه لوحی‌تان را راه‌اندازی می‌کنید، فرصت دارید تا هر داده‌ای را که در حساب /e/ شما پشتیبان گرفته شده بود، بازیابی کنید."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏گذروا‌ژه‌ای که وارد کردید درست است، اما متأسفانه داده‌ها مخدوش است. \n\nبرای ازسرگیری استفاده از تلفنتان، باید بازنشانی به تنظیمات کارخانه را انجام دهید. وقتی پس از بازنشانی، تلفنتان را راه‌اندازی می‌کنید، فرصت دارید تا هر داده‌ای را که در حساب /e/ شما پشتیبان گرفته شده بود، بازیابی کنید."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"تغییر روش ورودی"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"تنظیم قفل صفحه"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"از دستگاهتان محافظت کنید"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"تنظیمات شبکه بازنشانی شد"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"بازنشانی دستگاه"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"بازنشانی داده‌های کارخانه"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏با این کار همه داده‌های "<b>"حافظهٔ داخلی"</b>" رایانهٔ لوحی شما پاک می‌شود، از جمله:\n\n"<li>"حساب Google شما"<li>\n</li>"داده‌ها و تنظیمات برنامه و سیستم"<li>\n</li>"برنامه‌های بارگیری شده"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏با این کار همه داده‌های "<b>"حافظه داخلی"</b>" گوشی شما پاک می‌شود، از جمله:\n\n"<li>"حساب Google شما"</li>\n<li>"تنیمات و داده‌های برنامه و سیستم"</li>\n<li>"برنامه‌های بارگیری شده"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏با این کار همه داده‌های "<b>"حافظهٔ داخلی"</b>" رایانهٔ لوحی شما پاک می‌شود، از جمله:\n\n"<li>"حساب /e/ شما"<li>\n</li>"داده‌ها و تنظیمات برنامه و سیستم"<li>\n</li>"برنامه‌های بارگیری شده"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏با این کار همه داده‌های "<b>"حافظه داخلی"</b>" گوشی شما پاک می‌شود، از جمله:\n\n"<li>"حساب /e/ شما"</li>\n<li>"تنیمات و داده‌های برنامه و سیستم"</li>\n<li>"برنامه‌های بارگیری شده"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"شما در حال حاضر به حساب‌های زیر وارد شده‌اید:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"کاربران دیگری در این دستگاه وجود دارند.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"موسیقی"</li>\n<li>"عکس ها"</li>\n<li>"سایر اطلاعات کاربر"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"اسکن کردن بلوتوث"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"بهبود موقعیت مکانی با اجازه دادن به برنامه‌ها و سرویس‌های سیستم برای شناسایی دستگاه‌های بلوتوث در هرزمانی."</string>
     <string name="location_network_based" msgid="6010456018401296590">"‏مکان شبکه تلفن همراه و Wi-Fi"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏به برنامه‌ها اجازه داده شود با استفاده از خدمات مکانی Google مکان شما را سریع‌تر تخمین بزنند. داده‌های مکان به‌طور ناشناس جمع‌آوری شده و به Google ارسال خواهد شد."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏به برنامه‌ها اجازه داده شود با استفاده از خدمات مکانی /e/ مکان شما را سریع‌تر تخمین بزنند. داده‌های مکان به‌طور ناشناس جمع‌آوری شده و به /e/ ارسال خواهد شد."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"‏موقعیت مکانی تعیین شده توسط Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"‏ماهواره‌های GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"‏به برنامه‌های کاربردی اجازه داده شود برای مشخص کردن دقیق مکان شما از GPS رایانه لوحیتان استفاده کنند"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"‏استفاده از GPS کمکی"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"‏استفاده از سرور برای کمک به GPS (برای کاهش میزان استفاده از شبکه، علامت آن را حذف کنید)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"‏استفاده از سرور برای کمک به GPS (برای ارتقای عملکرد GPS، علامت آن را حذف کنید)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"‏مکان و جستجوی Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"‏به Google اجازه داده شود از مکان شما برای بهبود نتایج جستجو و سایر سرویس‌ها استفاده کند"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"‏مکان و جستجوی /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"‏به /e/ اجازه داده شود از مکان شما برای بهبود نتایج جستجو و سایر سرویس‌ها استفاده کند"</string>
     <string name="location_access_title" msgid="7064108942964081243">"دسترسی به موقعیت مکانی شما"</string>
     <string name="location_access_summary" msgid="69031404093194341">"به برنامه‌هایی که از شما اجازه گرفته‌اند اجازه داده شود از اطلاعات مکانی شما استفاده کنند"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"منابع موقعیت مکانی"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"تنظیمات برنامه"</string>
     <string name="install_applications" msgid="4872012136210802181">"منابع ناشناس"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"همه منابع برنامه مجاز است"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"‏نصب برنامه‌ها از منابعی جز Google Play را برایتان امکان‌پذیر می‌کند"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"‏نصب برنامه‌ها از منابعی جز /e/ Play را برایتان امکان‌پذیر می‌کند"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"اجازه نصب برنامه‌ها از منابع ناشناس"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"رایانهٔ لوحی و داده‌های شخصی شما بیشتر در معرض خطر حمله برنامه‌های منابع ناشناس هستند. شما موافقت می‌کنید که در قبال هر گونه آسیب وارده به رایانهٔ لوحی خود یا از دست دادن داده که در نتیجه استفاده از این برنامه‌ها روی دهد تنها خودتان مسئول هستید."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"گوشی و داده‌های شخصی شما بیشتر در معرض خطر حمله برنامه‌هایی با منابع ناشناس است. شما موافقت می‌کنید که درقبال هرگونه آسیبی که در نتیجه استفاده از این برنامه‌ها به گوشی شما وارد شود فقط خودتان مسئول هستید."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"تهیهٔ نسخهٔ پشتیبان و بازیابی"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"اطلاعات شخصی"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"پشتیبان‌گیری از داده‌های من"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"‏داده‌های نسخه پشتیبان برنامه، گذرواژه‌های Wi-Fi، و سایر تنظیمات در سرورهای Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"‏داده‌های نسخه پشتیبان برنامه، گذرواژه‌های Wi-Fi، و سایر تنظیمات در سرورهای /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"حساب پشتیبان"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"داده‌های برنامه شامل شود"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"بازیابی خودکار"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"سرویس پشتیبان‌گیری غیرفعال است."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"هیچ حسابی در حال حاضر داده‌های پشتیبانی نشده را ذخیره نمی‌کند"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏تهیهٔ نسخهٔ پشتیبان از گذرواژه‌های Wi-Fi، نشانک‌ها، سایر تنظیمات و همچنین داده‌های برنامه را متوقف می‌کنید، به علاوه تمام نسخه‌های موجود در سرورهای Google را نیز پاک می‌نمایید؟"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏تهیهٔ نسخهٔ پشتیبان از گذرواژه‌های Wi-Fi، نشانک‌ها، سایر تنظیمات و همچنین داده‌های برنامه را متوقف می‌کنید، به علاوه تمام نسخه‌های موجود در سرورهای /e/ را نیز پاک می‌نمایید؟"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"‏پشتیبان گرفتن از داده‌های دستگاه (مانند گذرواژه‌های Wi-Fi و سابقه تماس) و اطلاعات برنامه (مثل تنظیمات و فایل‌های ذخیره شده توسط برنامه‌ها) متوقف شود و همچنین همه رونوشت‌ها در سرورهای راه‌دور پاک شوند؟"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"‏انجام پشتیبان‌گیری خودکار از داده‌های دستگاه (مانند گذرواژه‌های Wi-Fi و سابقه تماس) و داده‌های برنامه (مثل تنظیمات و فایل‌های ذخیره شده توسط برنامه‌ها) از راه دور.\n\nوقتی پشتیبان‌گیری خودکار را روشن می‌کنید، داده‌های دستگاه و برنامه به‌صورت دوره‌ای از راه دور ذخیره می‌شوند. داده‌های برنامه می‌تواند هر داده‌ای باشد که برنامه (براساس تنظیمات برنامه‌نویس) ذخیره کرده است، از جمله داده‌های بالقوه حساس مانند مخاطبین، پیام‌ها و عکس‌ها."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"تنظیمات سرپرستی دستگاه"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"تقویم"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"مخاطبین"</string>
-    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"به Google Sync خوش آمدید!"</font>\n"این راهکاری از Google است برای همگام‌سازی داده‌ها و ایجاد امکان دسترسی به مخاطبین، قرارها و موارد بیشتر از هر کجا که هستید."</string>
+    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"به /e/ Sync خوش آمدید!"</font>\n"این راهکاری از /e/ است برای همگام‌سازی داده‌ها و ایجاد امکان دسترسی به مخاطبین، قرارها و موارد بیشتر از هر کجا که هستید."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"تنظیمات همگام‌سازی برنامه"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"داده و همگام‌سازی"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"تغییر گذرواژه"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"ممکن است این ویژگی باعث شود زمانی که فقط شبکه‌های تلفن همراه در دسترس هستند، برنامه‌ای که به داده‌های پس‌زمینه وابسته است کار نکند.\n\nمی‌توانید در تنظیمات موجود در برنامه، کنترل‌های مناسب‌تری برای مصرف داده پیدا کنید."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"محدود کردن مصرف داده در پس‌زمینه تنها زمانی امکان‌پذیر است که محدودیتی برای داده‌های شبکه تلفن همراه تنظیم کنید."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"همگام‌سازی خودکار داده فعال شود؟"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏هر تغییری که در حساب‌هایتان در وب انجام بدهید به‌صورت خودکار در رایانه لوحی‌تان کپی می‌شود.\n\nبعضی از حساب‌ها هم ممکن است به‌صورت خودکار هر تغییری را که در رایانه لوحی‌تان می‌دهید در وب کپی کنند. حساب Google به‌این صورت کار می‌کند."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏هر تغییری که در حساب‌هایتان در وب بدهید به‌صورت خودکار در تلفنتان کپی می‌شود.\n\nبعضی از حساب‌ها هم ممکن است به‌صورت خودکار هر تغییری را که در تلفنتان می‌دهید در وب کپی کنند. حساب Google به‌این‌صورت کار می‌کند."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏هر تغییری که در حساب‌هایتان در وب انجام بدهید به‌صورت خودکار در رایانه لوحی‌تان کپی می‌شود.\n\nبعضی از حساب‌ها هم ممکن است به‌صورت خودکار هر تغییری را که در رایانه لوحی‌تان می‌دهید در وب کپی کنند. حساب /e/ به‌این صورت کار می‌کند."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏هر تغییری که در حساب‌هایتان در وب بدهید به‌صورت خودکار در تلفنتان کپی می‌شود.\n\nبعضی از حساب‌ها هم ممکن است به‌صورت خودکار هر تغییری را که در تلفنتان می‌دهید در وب کپی کنند. حساب /e/ به‌این‌صورت کار می‌کند."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"همگام‌سازی خودکار داده غیرفعال شود؟"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"با این کار، در مصرف باتری و استفاده از داده‌ها صرفه‌جویی می‌شود؛ اما برای جمع‌آوری اطلاعات اخیر باید هر حساب را به صورت دستی همگام‌سازی کنید. به‌علاوه در حین به‌روزرسانی‌ها هم اعلان دریافت نمی‌کنید."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"تاریخ تنظیم مجدد چرخهٔ استفاده"</string>
