--- a/res/values-ky-rKG/strings.xml
+++ b/res/values-ky-rKG/strings.xml
@@ -416,11 +416,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Эскертүү: Кулпуну дагы <xliff:g id="COUNT">^1</xliff:g> жолу ача албай койсоңуз, түзмөгүңүз тазаланат!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Сырсөзүңүздү териңиз"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шифрлөө ийгиликсиз аяктады"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрлөө үзгүлтүккө учурады жана аягына чыкпайт. Мунун натыйжасында сиздин планшетиңиздеги берилиштерге жетүү мүмкүн эмес болуп калды.\n\nПланшетиңизди кайрадан колдонуп башташ үчүн, аны баштапкы абалына кайтарыш керек. Сиз планшетиңизди кайра орноткондон кийин, Google эсебиңизде сакталган бардык берилиштерди калыбына келтирүү мүмкүнчүлүгү бар."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрлөө үзгүлтүккө учурады жана аягына чыкпайт. Мунун натыйжасында телефонуңуздагы берилиштерге жетүү мүмкүн эмес болуп калды. \n\nТелефонуңузду кайрадан колдонуп башташ үчүн, аны баштапкы абалына кайтарыш керек. Сиз телефонуңузду баштапкы абалына кайтарып, кайра орноткондон кийин, Google эсебиңизде сакталган бардык берилиштерди калыбына келтирүү мүмкүнчүлүгү бар."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрлөө үзгүлтүккө учурады жана аягына чыкпайт. Мунун натыйжасында сиздин планшетиңиздеги берилиштерге жетүү мүмкүн эмес болуп калды.\n\nПланшетиңизди кайрадан колдонуп башташ үчүн, аны баштапкы абалына кайтарыш керек. Сиз планшетиңизди кайра орноткондон кийин, /e/ эсебиңизде сакталган бардык берилиштерди калыбына келтирүү мүмкүнчүлүгү бар."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрлөө үзгүлтүккө учурады жана аягына чыкпайт. Мунун натыйжасында телефонуңуздагы берилиштерге жетүү мүмкүн эмес болуп калды. \n\nТелефонуңузду кайрадан колдонуп башташ үчүн, аны баштапкы абалына кайтарыш керек. Сиз телефонуңузду баштапкы абалына кайтарып, кайра орноткондон кийин, /e/ эсебиңизде сакталган бардык берилиштерди калыбына келтирүү мүмкүнчүлүгү бар."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Дешифрлөө ийгиликсиз аяктады"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Сырсөздү туура киргиздиңиз, бирок тилекке каршы планшетиңиздеги дайындар бузулуп калган. \n\nПланшетиңизди пайдаланууну улантуу үчүн, аны баштапкы абалга кайтарышыңыз керек. Планшетиңиз баштапкы абалга кайтарылгандан кийин, дайындарды калыбына келтире аласыз жана алардын камдык көчүрмөсү Google каттоо эсебиңизде сакталат."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Сырсөздү туура киргиздиңиз, бирок тилекке каршы телефонуңуздагы дайындар бузулуп калган. \n\nТелефонуңузду пайдаланууну улантуу үчүн, аны баштапкы абалга кайтарышыңыз керек. Телефонуңуз баштапкы абалга кайтарылгандан кийин, дайындарды калыбына келтире аласыз жана алардын камдык көчүрмөсү Google каттоо эсебиңизде сакталат."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Сырсөздү туура киргиздиңиз, бирок тилекке каршы планшетиңиздеги дайындар бузулуп калган. \n\nПланшетиңизди пайдаланууну улантуу үчүн, аны баштапкы абалга кайтарышыңыз керек. Планшетиңиз баштапкы абалга кайтарылгандан кийин, дайындарды калыбына келтире аласыз жана алардын камдык көчүрмөсү /e/ каттоо эсебиңизде сакталат."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Сырсөздү туура киргиздиңиз, бирок тилекке каршы телефонуңуздагы дайындар бузулуп калган. \n\nТелефонуңузду пайдаланууну улантуу үчүн, аны баштапкы абалга кайтарышыңыз керек. Телефонуңуз баштапкы абалга кайтарылгандан кийин, дайындарды калыбына келтире аласыз жана алардын камдык көчүрмөсү /e/ каттоо эсебиңизде сакталат."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Киргизүү ыкмасын которуу"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Экран кулпусун коюу"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Түзмөгүңүздү коргоңуз"</string>
@@ -1238,8 +1238,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Тармак жөндөөлөрү баштапкы абалга келтирилди"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Түзмктү баштпкы абалга келтрүү"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Баштапкы абалга кайтаруу"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бул, планшетиңиздин "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин Google эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бул, телефонуңуздун "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин Google эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бул, планшетиңиздин "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин /e/ эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бул, телефонуңуздун "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин /e/ эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Учурда төмөнкү каттоо эсептерине кирип турасыз:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Бул түзмөктө башка колдонуучулар бар.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музыка"</li>\n<li>"Сүрөттөр"</li>\n<li>"Башка колдонуучу дайындары"</li></string>
@@ -1324,7 +1324,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth изделүүдө"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Тутум колдонмолору жана кызматтарына Bluetooth түзмөктөрүн ар дайым издеп турганга уруксат берүү менен кандайдыр бир жерди тагыраак аныктай аласыз."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi &amp; уюкт тарм жайг жер"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Колдонмолорго Google жайгаштыруу м-н ордуңузду тактоого жол берүү. Жайгашуу берилиштери аноним. чогултулат ж-а Google\'га берилет."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Колдонмолорго /e/ жайгаштыруу м-н ордуңузду тактоого жол берүү. Жайгашуу берилиштери аноним. чогултулат ж-а /e/\'га берилет."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Жайгашуу Wi‑Fi аркылуу аныкталды"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS жандоочтору"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Сиздин жайгашууңузду аныктоо үчүн планшетиңиздин GPS\'ин колдонууга уруксат берилсин"</string>
@@ -1332,8 +1332,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Колдоого алынган GPS пайдаланылсын"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS\'ке жардам берүү үчүн сервер колдонулсун (Интернет трафигин азайтуу үчүн белгини алып салыңыз)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS\'ке жардам берүү үчүн сервер колдонулсун (GPS майнаптуулугун арттыруу үчүн белгини алып салыңыз)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Жайгашуу жана Google издөөсү"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Издөө натыйжаларын жана башка кызматтарды жакшыртуу үчүн, Google\'га жайгашууңузду билгенге жол берүү"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Жайгашуу жана /e/ издөөсү"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Издөө натыйжаларын жана башка кызматтарды жакшыртуу үчүн, /e/\'га жайгашууңузду билгенге жол берүү"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Менин жайгашуума жетки"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Жергиликтү маалыматтарды колдонууну суранган колдонмолорго уруксат берүү"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Жайгаштыруу булактары"</string>
@@ -1432,7 +1432,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Колдонмонун тууралоолору"</string>
     <string name="install_applications" msgid="4872012136210802181">"Белгисиз булактар"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Бардк колднмо булактрна урукст"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play\'ден башк булактрдн колдонмлрду орнтууга мүмкнчлк берт"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play\'ден башк булактрдн колдонмлрду орнтууга мүмкнчлк берт"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Белгисиз булактардан алынган колдонмолорду орнотууга уруксат берүү"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Жеке дайындарыңыз жана телефондогу дайындар белгисиз булактардан келген колдонмолордон зыян тартып калышы мүмкүн. Андыктан ушул колдонмолдорду пайдалануудан улам телефонуңузга кандайдыр бир зыян келтирилсе же дайындарыңызды жоготуп алсаңыз өзүңүз жооптуу болосуз."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Жеке дайындарыңыз жана телефондогу дайындар белгисиз булактардан келген колдонмолордон зыян тартып калышы мүмкүн. Андыктан ушул колдонмолдорду пайдалануудан улам телефонуңузга кандайдыр бир зыян келтирилсе же дайындарыңызды жоготуп алсаңыз өзүңүз жооптуу болосуз."</string>
@@ -2034,7 +2034,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Бэкаптоо жана калыбына келтирүү"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Жеке дайындар"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Дайындарымдын камдык көчүрмөсү сакталсын"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Колдонмолордун берилиштерин, Wi-Fi сырсөздөрүн жана башка тууралоолорду Google\'дун серверине сактап коюу."</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Колдонмолордун берилиштерин, Wi-Fi сырсөздөрүн жана башка тууралоолорду /e/\'дун серверине сактап коюу."</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Көмөкчү каттоо эсеби"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Колдонмо дайындарын кошуу"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Автоматтык түрдө калыбына келтирүү"</string>
@@ -2042,7 +2042,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Камдык көчүрмөнү сактоо кызматы жандырылган эмес."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Учурда эч бир каттоо эсебинде камдык көчүрмө дайындары сакталбай эле"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Колдонмолордун берилиштерин, Wi-Fi сырсөздөрүн, бүктөмөлөрдү, жана башка тууралоолорду, колдономолордун берилиштерин Google\'дун серверине сактоо токтотулуп, бардык көчүрмөлөр жок кылынсынбы?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Колдонмолордун берилиштерин, Wi-Fi сырсөздөрүн, бүктөмөлөрдү, жана башка тууралоолорду, колдономолордун берилиштерин /e/\'дун серверине сактоо токтотулуп, бардык көчүрмөлөр жок кылынсынбы?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Түзмөктөгү дайындардын (мисалы, Wi-Fi тармагынын сырсөздөрү жана чалуулар таржымалы) жана колдонмонун дайындарынын (мисалы жөндөөлөр жана файлдар) камдык көчүрмөсүн сактоону токтотуп, аралыктагы серверлердеги бардык көчүрмөлөр жок кылынсынбы?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Түзмөктөгү дайындардын (мисалы, Wi-Fi тармагынын сырсөздөрү жана чалуулар таржымалы) жана колдонмонун дайындарынын (мисалы жөндөөлөр жана файлдар) камдык көчүрмөсүн алыстан автоматтык түрдө сактоо.\n\nКамдык көчүрмөнү автоматтык түрдө сактоо мүмкүнчүлүгү иштетилгенде, түзмөктүн жана колдонмонун дайындары маалы менен автоматтык түрдө сакталып турат. Иштеп чыгуучунун жөндөөлөрүнө ылайык колдонмодо сакталган дайындарда байланыштар, билдирүүлөр, сүрөттөр сыяктуу купуя маалыматтар камтылышы мүмкүн."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Түзмөктү администрациялоонун жөндөөлөрү"</string>
@@ -2129,7 +2129,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Жылнаама"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Байланыштар"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google sync\'ке кош келиңиз!"</font>" \nБайланыштарды, жолугушууларды жана башкаларды, сиз кайдан болбосун жеткидей кылуунун Google сунуштаган жолу."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ sync\'ке кош келиңиз!"</font>" \nБайланыштарды, жолугушууларды жана башкаларды, сиз кайдан болбосун жеткидей кылуунун /e/ сунуштаган жолу."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Колдонмонун синхрондошуу тууралоолору"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Дайындар жана шайкештирүү"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Сызсөздү өзгөртүү"</string>
@@ -2217,8 +2217,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Ушул мүмкүнчүлүктөн улам, фондук дайындарга көз каранды болгон колдонмо уюктук тармактар жеткиликтүү болгон учурда иштебей калышы мүмкүн.\n\nКолдонмонун ичиндеги жөндөөлөрдөн дайындардын колдонулушун башкарган тийиштүү каражаттарды таба аласыз."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Фондук дайындарды уюктук дайындарга чек коюлгандан кийин гана чектөөгө болот."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Автошайкештирүү жандырылсынбы?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Желеден каттоо эсептериңизге кандайдыр бир өзгөртүүлөр киргизилгенде, алардын баары планшетиңизге автоматтык түрдө көчүрүлөт.\n\nАйрым каттоо эсептеринин планшетиңиздеги өзгөртүүлөрү автоматтык түрдө желеге көчүрүлөт. Кыскасы, Google Каттоо эсеби ушундай жол менен иштейт."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Желеден каттоо эсептериңизге кандайдыр бир өзгөртүүлөр киргизилгенде, алардын баары телефонуңузга автоматтык түрдө көчүрүлөт.\n\nАйрым учурларда телефонуңуздагы өзгөртүүлөр автоматтык түрдө желеге көчүрүлүшү мүмкүн. Кыскасы, Google Каттоо эсеби ушундай жол менен иштейт."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Желеден каттоо эсептериңизге кандайдыр бир өзгөртүүлөр киргизилгенде, алардын баары планшетиңизге автоматтык түрдө көчүрүлөт.\n\nАйрым каттоо эсептеринин планшетиңиздеги өзгөртүүлөрү автоматтык түрдө желеге көчүрүлөт. Кыскасы, /e/ Каттоо эсеби ушундай жол менен иштейт."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Желеден каттоо эсептериңизге кандайдыр бир өзгөртүүлөр киргизилгенде, алардын баары телефонуңузга автоматтык түрдө көчүрүлөт.\n\nАйрым учурларда телефонуңуздагы өзгөртүүлөр автоматтык түрдө желеге көчүрүлүшү мүмкүн. Кыскасы, /e/ Каттоо эсеби ушундай жол менен иштейт."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Автошайкештирүү токтотулсунбу?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Ушуну менен трафик жана батареянын кубатын үнөмдөөгө болот. Бирок жаңы дайындарды алып туруу үчүн ар бир каттоо эсебин кол менен шайкештирип чыгуу керек. Бул учурда жаңыртуулар тууралуу эскертмелер алынбайт."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Колдонуу циклин баштапкы абалга келтирүү күнү"</string>
