--- a/res/values-lb/strings.xml
+++ b/res/values-lb/strings.xml
@@ -829,8 +829,8 @@
     <string name="assisted_gps">Assistéierte GPS benotzen</string>
     <string name="assisted_gps_enabled">GPS duerch de Server ënnerstëtzen (net auswiele fir d\'Netzwierkbenotzung ze reduzéieren)</string>
     <string name="assisted_gps_disabled">GPS duerch de Server ënnerstëtzen (net auswiele fir d\'GPS-Leeschtung ze verbesseren)</string>
-    <string name="use_location_title">Standuert a Google-Sich</string>
-    <string name="use_location_summary">Mäi Standuert u Google schécke fir d\'Sichresultater an aner Servicer ze verbesseren</string>
+    <string name="use_location_title">Standuert a /e/-Sich</string>
+    <string name="use_location_summary">Mäi Standuert u /e/ schécke fir d\'Sichresultater an aner Servicer ze verbesseren</string>
     <string name="location_access_title">Zougrëff op mäi Standuert</string>
     <string name="location_access_summary">Appen déi eng Berechtegung gefrot hu kënnen d\'Standuertinformatioune benotzen</string>
     <string name="location_sources_heading">Standuertquellen</string>
@@ -1388,14 +1388,14 @@ Fir d\'Performance ze verbesseren an de Späicherverbrauch ze reduzéiere stinn 
     <string name="backup_section_title">Sécheren an erëmhierstellen</string>
     <string name="personal_data_section_title">Perséinlech Daten</string>
     <string name="backup_data_title">Meng Date sécheren</string>
-    <string name="backup_data_summary">App-Daten, WLAN-Passwierder an aner Astellungen op de Google-Servere sécheren</string>
+    <string name="backup_data_summary">App-Daten, WLAN-Passwierder an aner Astellungen op de /e/-Servere sécheren</string>
     <string name="backup_configure_account_title">Backup-Kont</string>
     <string name="include_app_data_title">App-Daten aschléissen</string>
     <string name="auto_restore_title">Automatesch Erëmhierstellung</string>
     <string name="auto_restore_summary">Wann eng App nei installéiert gëtt, déi geséchert Daten an Astellunge recuperéieren</string>
     <string name="backup_inactive_title">De Sécherungsservice ass net aktiv.</string>
     <string name="backup_configure_account_default_summary">Kee Kont späichert momentan geséchert Daten</string>
-    <string name="backup_erase_dialog_message">D\'Sécherung vun App-Daten, WLAN-Passwierder an aner Astellunge stoppen an all d\'Kopien op de Google-Servere läschen?</string>
+    <string name="backup_erase_dialog_message">D\'Sécherung vun App-Daten, WLAN-Passwierder an aner Astellunge stoppen an all d\'Kopien op de /e/-Servere läschen?</string>
     <string name="device_admin_settings_title">Apparatverwaltungsastellungen</string>
     <string name="active_device_admin_msg">Administrateur vum Apparat</string>
     <string name="select_device_admin_msg">Administrateure vum Apparat</string>
@@ -1464,8 +1464,8 @@ Fir d\'Performance ze verbesseren an de Späicherverbrauch ze reduzéiere stinn 
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">Kalenner</string>
     <string name="sync_contacts">Kontakter</string>
-    <string name="sync_plug"><font fgcolor="#ffffffff">Wëllkomm bei Google Sync!</font>
-    \nEng Google-Approche fir Daten ze synchroniséieren an Zougrëff op Kontakter, Terminer a méi z\'erlabe vun egal wou s de bass.</string>
+    <string name="sync_plug"><font fgcolor="#ffffffff">Wëllkomm bei /e/ Sync!</font>
+    \nEng /e/-Approche fir Daten ze synchroniséieren an Zougrëff op Kontakter, Terminer a méi z\'erlabe vun egal wou s de bass.</string>
     <string name="header_application_sync_settings">App-Sync-Astellungen</string>
     <string name="header_data_and_synchronization">Daten a Synchroniséierung</string>
     <string name="preference_change_password_title">Passwuert änneren</string>
@@ -1537,8 +1537,8 @@ Fir d\'Performance ze verbesseren an de Späicherverbrauch ze reduzéiere stinn 
     <string name="data_usage_app_restrict_background">Hannergronddaten</string>
     <string name="data_usage_app_restrict_dialog_title">Hannergronddaten aschränken?</string>
     <string name="data_usage_auto_sync_on_dialog_title">Automatesch Datesynchroniséierung uschalten?</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet">All d\'Ännerungen déi s du iwwer Internet un dengem Kont virhëls, ginn automatesch op den Tablet kopéiert.\n\nVerschidde Konte kéinten och automatesch all d\'Ännerunge vum Tablet op den Internet kopéieren. E Google-Kont funktionéiert op dës Manéier.</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default">All d\'Ännerungen déi s du iwwer Internet un dengem Kont virhëls, ginn automatesch op den Telefon kopéiert.\n\nVerschidde Konte kéinten och automatesch all d\'Ännerunge vum Telefon op den Internet kopéieren. E Google-Kont funktionéiert op dës Manéier.</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet">All d\'Ännerungen déi s du iwwer Internet un dengem Kont virhëls, ginn automatesch op den Tablet kopéiert.\n\nVerschidde Konte kéinten och automatesch all d\'Ännerunge vum Tablet op den Internet kopéieren. E /e/-Kont funktionéiert op dës Manéier.</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default">All d\'Ännerungen déi s du iwwer Internet un dengem Kont virhëls, ginn automatesch op den Telefon kopéiert.\n\nVerschidde Konte kéinten och automatesch all d\'Ännerunge vum Telefon op den Internet kopéieren. E /e/-Kont funktionéiert op dës Manéier.</string>
     <string name="data_usage_auto_sync_off_dialog_title">Automatesch Datesynchroniséierung ausschalten?</string>
     <string name="data_usage_cycle_editor_title">Zrécksetzungsdatum fir de Benotzungszyklus</string>
     <string name="data_usage_cycle_editor_subtitle">Dag vun all Mount:</string>
