--- a/res/values-mn-rMN/strings.xml
+++ b/res/values-mn-rMN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Анхааруулга: Түгжээ тайлах <xliff:g id="COUNT">^1</xliff:g> удаагийн оролдлого амжилтгүй болбол таны төхөөрөмжийн мэдээллийг арчих болно!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Өөрийн нууц үгийг оруулна уу"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шифрлэлт амжилтгүй"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрлэлт таслагдсан бөгөөд дуусгах боломжгүй. Үр дүнд нь таны таблетын өгөгдөлд хандалт хийх боломжгүй болсон. \n\n Таблетаа ашиглаж эхлэхийн тулд үйлдвэрээс гарсан төлөв рүү шинэчлэх шаардлагатай. Шинэчилж дууссаны дараа өөрийн Google бүртгэлд нөөшлөгдсөн өгөгдлүүдийг сэргээх боломжтой болно."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрлэлт тасалдсан бөгөөд дуусгах боломжгүй. Үүний үр дүнд таны утсан дээр өгөгдөлд хандалт хийх боломжгүй болсон. \n\nУтсаа ашиглаж эхлэхийн тулд та үйлдвэрээс гарсан байдал руу буцаан шинэчлэх шаардлагатай. Утсаа шинэчилсний дараа тохируулахдаа өөрийн Google бүртгэлд нөөцлөгдсөн дурын өгөгдлийг сэргээж болно."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрлэлт таслагдсан бөгөөд дуусгах боломжгүй. Үр дүнд нь таны таблетын өгөгдөлд хандалт хийх боломжгүй болсон. \n\n Таблетаа ашиглаж эхлэхийн тулд үйлдвэрээс гарсан төлөв рүү шинэчлэх шаардлагатай. Шинэчилж дууссаны дараа өөрийн /e/ бүртгэлд нөөшлөгдсөн өгөгдлүүдийг сэргээх боломжтой болно."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрлэлт тасалдсан бөгөөд дуусгах боломжгүй. Үүний үр дүнд таны утсан дээр өгөгдөлд хандалт хийх боломжгүй болсон. \n\nУтсаа ашиглаж эхлэхийн тулд та үйлдвэрээс гарсан байдал руу буцаан шинэчлэх шаардлагатай. Утсаа шинэчилсний дараа тохируулахдаа өөрийн /e/ бүртгэлд нөөцлөгдсөн дурын өгөгдлийг сэргээж болно."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Шифр тайлах амжилтгүй"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Таны оруулсан нууц үг зөв боловч таны өгөгдөл гэмтсэн байна. \n\nТаблетаа үргэлжлүүлэн ашиглахын тулд үйлдвэрээс гарсан анхны төлөв рүү сэргээх хэрэгтэй. Сэргээсний дараа таблетаа тохируулахдаа өөрийн Google бүртгэл дээр нөөцөлсөн аливаа өгөгдлийг эргүүлэн сэргээх боломжтой."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Таны оруулсан нууц үг зөв боловч таны өгөгдөл гэмтсэн байна. \n\nУтсаа үргэлжлүүлэн ашиглахын тулд үйлдвэрээс гарсан анхны төлөв рүү сэргээх хэрэгтэй. Сэргээсний дараа утсаа тохируулахдаа өөрийн Google бүртгэл дээр нөөцөлсөн аливаа өгөгдлийг эргүүлэн сэргээх боломжтой."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Таны оруулсан нууц үг зөв боловч таны өгөгдөл гэмтсэн байна. \n\nТаблетаа үргэлжлүүлэн ашиглахын тулд үйлдвэрээс гарсан анхны төлөв рүү сэргээх хэрэгтэй. Сэргээсний дараа таблетаа тохируулахдаа өөрийн /e/ бүртгэл дээр нөөцөлсөн аливаа өгөгдлийг эргүүлэн сэргээх боломжтой."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Таны оруулсан нууц үг зөв боловч таны өгөгдөл гэмтсэн байна. \n\nУтсаа үргэлжлүүлэн ашиглахын тулд үйлдвэрээс гарсан анхны төлөв рүү сэргээх хэрэгтэй. Сэргээсний дараа утсаа тохируулахдаа өөрийн /e/ бүртгэл дээр нөөцөлсөн аливаа өгөгдлийг эргүүлэн сэргээх боломжтой."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Оруулах аргыг солих"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Дэлгэцийн түгжээ тохируулах"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Төхөөрөмжөө хамгаалаарай"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Сүлжээний тохиргоог дахин тохируулсан байна"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Төхөөрөмжийг дахин тохируулах"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Үйлдвэрээс гарсан төлөвт"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Энэ таны таблетын "<b>"дотоод сангаас"</b>"таны \n\n"<li>"Google акаунт"</li>\n<li>"Системийн болон апп өгөгдөл болон тохиргоо"</li>\n<li>"Татаж авсан апп-уудыг"</li>" оруулан бүх өгөгдлийг устгах болно"</string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Энэ таны утасны "<b>"дотоод сангаас"</b>"таны \n\n"<li>"Google акаунт"</li>\n<li>"Системийн болон апп өгөгдөл болон тохиргоо"</li>\n<li>"Татаж авсан апп-уудыг"</li>" оруулан бүх өгөгдлийг устгах болно"</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Энэ таны таблетын "<b>"дотоод сангаас"</b>"таны \n\n"<li>"/e/ акаунт"</li>\n<li>"Системийн болон апп өгөгдөл болон тохиргоо"</li>\n<li>"Татаж авсан апп-уудыг"</li>" оруулан бүх өгөгдлийг устгах болно"</string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Энэ таны утасны "<b>"дотоод сангаас"</b>"таны \n\n"<li>"/e/ акаунт"</li>\n<li>"Системийн болон апп өгөгдөл болон тохиргоо"</li>\n<li>"Татаж авсан апп-уудыг"</li>" оруулан бүх өгөгдлийг устгах болно"</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Та одоогоор дараах акаунтуудаар нэвтэрсэн байна:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Энэ төхөөрөмж дээр өөр хэрэглэгчид байна.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Хөгжим"</li>\n<li>"Зураг"</li>\n<li>"Бусад хэрэглэгчийн өгөгдөл"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth скан"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Системийн апп болон үйлчилгээнд Bluetooth-г ямар ч үед хайх боломжийг олгох замаар байршлыг сайжруулах"</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi &amp; үүрэн сүлжээний байршил"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Апп-уудад Google-н байршлын үйлчилгээ ашиглан таны байршлыг хурдан олохыг зөвшөөрөх. Нэргүй байршлын мэдээлэл цуглуулагдаж Google рүү илгээгдэх болно."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Апп-уудад /e/-н байршлын үйлчилгээ ашиглан таны байршлыг хурдан олохыг зөвшөөрөх. Нэргүй байршлын мэдээлэл цуглуулагдаж /e/ рүү илгээгдэх болно."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi-Fi-р тодорхойлогдсон байршил"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS хиймэл дагуул"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Апп-д таны байршлыг заахын тулд таны таблетын GPS-г ашиглахыг зөвшөөрнө үү"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Дэмжигдсэн GPS ашиглах"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Сервер ашиглан GPS дэмжих (сүлжээний ашиглалтыг бууруулахыг хүсвэл сонголтыг болиулах)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Сервер ашиглан GPS дэмжих (GPS ажиллагааг сайжруулахыг хүсвэл сонголтыг болиулах)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Байршил &amp; Google хайлт"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Хайлтын илэрцийг сайжруулах болон бусад үйлчилгээнд зориулж өөрийн байршлыг Google-д ашиглуулна уу."</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Байршил &amp; /e/ хайлт"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Хайлтын илэрцийг сайжруулах болон бусад үйлчилгээнд зориулж өөрийн байршлыг /e/-д ашиглуулна уу."</string>
     <string name="location_access_title" msgid="7064108942964081243">"Миний байршилд хандалт хийх"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Таны байршлын мэдээллийг ашиглах зөвшөөрөл хүссэн апп-уудад ашиглуулна уу"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Байршлын эх үүсвэрүүд"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Апп тохиргоо"</string>
     <string name="install_applications" msgid="4872012136210802181">"Тодорхойгүй эх үүсвэр"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Бүх апп эх үүсвэрийг зөвшөөрөх"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play-с бусад эх үүсвэрээс апп суулгах боломж олгоно"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play-с бусад эх үүсвэрээс апп суулгах боломж олгоно"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Тодорхойгүй эх үүсвэртэй апп-уудыг суулгахын зөвшөөрөх"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Таны таблет болон хувийн мэдэээлэл тодорхойгүй эх үүсвэртэй апп-уудын халдлагад эмзэг байна. Та эдгээр апп-уудыг ашигласнаас үүдэн таны таблетад гарч болох гэмтэл, өгөгдлийг алдахад өөрөө дангаараа хариуцлага хүлээн гэдгийг зөвшөөрч байна."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Таны утас болон хувийн мэдээлэл тодорхойгүй эх үүсвэртэй апп-уудын халдлагад эмзэг байна. Та эдгээр апп-уудыг ашигласнаас үүдэн таны утсанд учирч болох гэмтэл буюу өгөгдлийн алдагдалд өөрөө дангаараа хариуцлага хүлээн гэдгийг зөвшөөрч байна."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Нөөцлөх &amp; сэргээх"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Хувийн өгөгдөл"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Миний өгөгдлийг нөөшлөх"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Апп өгөгдөл, Wi-Fi нууц үгс болон бусад тохиргоонуудыг Google серверүүдэд нөөшлөөрэй"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Апп өгөгдөл, Wi-Fi нууц үгс болон бусад тохиргоонуудыг /e/ серверүүдэд нөөшлөөрэй"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Нөөцлөх бүртгэл"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Апп датаг оруулах"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Автоматаар сэргээх"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Нөөцлөлт үйлчилгээ идэвхгүй байна."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Нөөцлөгдсөн өгөгдлийг хадгалж байгаа бүртгэл байхгүй байна"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Өөрийн Wi‑Fi нууц үгс, тэмдэглэгээ, бусад тохиргоонууд болон апп өгөгдлийг Google серверт нөөцлөхийг зогсоож бүх хуулбарыг нь устгах уу?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Өөрийн Wi‑Fi нууц үгс, тэмдэглэгээ, бусад тохиргоонууд болон апп өгөгдлийг /e/ серверт нөөцлөхийг зогсоож бүх хуулбарыг нь устгах уу?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Төхөөрөмжийн өгөгдөл (Wi-Fi-ийн нууц үг, дуудлагын түүх гэх мэт) болон апп-ийн өгөгдлийг (тохиргоо болон апп-ийн хадгалсан файл гэх мэт) нөөцлөхөө зогсоож, алсын сервер дэх хуулбарыг устгах уу?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Алсаас автоматаар төхөөрөмжийн өгөгдөл (Wi-Fi нууц үг, дуудлагын түүх гэх мэт) ба апп-ын өгөгдөл (апп-ын тохиргоо, хадгалсан файл гэх мэт)-ийг нөөцлөх.\n\nАвтомат нөөцлөлт нээсэн тохиолдолд төхөөрөмж, апп-ын өгөгдлийг тогтмол хугацаанд алсаас хадгална. Тус өгөгдөлд апп-ын хадгалсан бүх өгөгдөл орно (хөгжүүлэгчийн тохиргоонд үндэслэн). Үүнд: харилцагчийн хаяг, зурвас, зураг гэх мэт хувийн мэдээлэл."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Төхөөрөмжийн администрацын тохиргоо"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Хуанли"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Харилцагчид"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google синк-д тавтай морилно уу!"</font>" \nТанд өөрийн харилцагчид, товлосон уулзалтууд болон бусад олон мэдээллүүддээ хаанаас ч хандалт хийх боломж олгохын тулд өгөгдлийг синк хийх Google-н аргачлал юм."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ синк-д тавтай морилно уу!"</font>" \nТанд өөрийн харилцагчид, товлосон уулзалтууд болон бусад олон мэдээллүүддээ хаанаас ч хандалт хийх боломж олгохын тулд өгөгдлийг синк хийх /e/-н аргачлал юм."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Апп синк тохиргоо"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Өгөгдөл &amp; синк хийх"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Нууц үг солих"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Энэ функц нь зөвхөн үүрэн сүлжээтэй үед далд датанд суурилсан апп-г зогсоход хүргэж болно. \n\nТа апп доторх тохиргооноос дата ашиглалтын хяналтын илүү тохиромжтой тохируулгыг ашиглаж болно."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Далд датаг хязгаарлах нь зөвхөн үүрэн датаны хязгаарыг тохируулсны дараа боломжтой болно."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Өгөгдлийг автоматаар синк хийхийг асаах уу?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Таны веб дээр өөрийн бүртгэлд оруулсан бүх өөрчлөлт таны таблет руу автоматаар хуулагдах болно.\n\nЗарим бүртгэл нь таны таблет дээр оруулсан аливаа өөрчлөлтийг мөн автоматаар веб рүү хуулж болно. Google бүртгэл ийм маягаар ажилладаг."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Таны веб дээрээс бүртгэлдаа оруулсан бүх өөрчлөлт автоматаар таны утсанд хуулагдах болно.\n\nЗарим бүртгэл нь таны утсан дээрээс оруулсан өөрчлөлтийг веб рүү автоматаар хуулж болно. Google бүртгэл ингэж ажилладаг."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Таны веб дээр өөрийн бүртгэлд оруулсан бүх өөрчлөлт таны таблет руу автоматаар хуулагдах болно.\n\nЗарим бүртгэл нь таны таблет дээр оруулсан аливаа өөрчлөлтийг мөн автоматаар веб рүү хуулж болно. /e/ бүртгэл ийм маягаар ажилладаг."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Таны веб дээрээс бүртгэлдаа оруулсан бүх өөрчлөлт автоматаар таны утсанд хуулагдах болно.\n\nЗарим бүртгэл нь таны утсан дээрээс оруулсан өөрчлөлтийг веб рүү автоматаар хуулж болно. /e/ бүртгэл ингэж ажилладаг."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Автоматаар синк хийх өгөгдлийг унтраах уу?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Энэ нь дата болон зайны цэнэг ашиглалтыг хэмнэх боловч та сүүлийн үеийн мэдээллийг цуглуулахын тулд бүртгэл бүрийг гарааг синк хийх шаардлагатай болно. Мөн шинэчлэлт хийгдсэн үед танд мэдэгдэл ирэхгүй."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Ашиглалтын циклийг шинэчлэх огноо"</string>
