--- a/res/values-mr-rIN/strings.xml
+++ b/res/values-mr-rIN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"चेतावणी: अनलॉक करण्‍याच्या आणखी <xliff:g id="COUNT">^1</xliff:g> अयशस्‍वी प्रयत्नांनंतर आपले डिव्‍हाइस पुसले जाईल."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"आपला संकेतशब्द टाइप करा"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"कूटबद्धीकरण अयशस्वी"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"कूटबद्धीकरणात व्यत्यय आला आणि हे पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या टॅबलेटवरील डेटा यापुढे प्रवेशयोग्य राहणार नाही. \n\n आपला टॅबलेट वापरून पुन्हा सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर आपण आपला टॅबलेट सेट करता, तेव्हा आपल्याकडे आपल्या Google खात्यावर बॅकअप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"कूटबद्धीकरणात व्यत्यय आला आणि पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या फोनवरील डेटा यापुढे प्रवेशयोग्य नाही.\n\nआपला फोन वापरणे पुन्हा सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर जेव्हा आपण आपला फोन सेट करता, तेव्हा आपल्याकडे आपल्या Google खात्यावर बॅकअप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"कूटबद्धीकरणात व्यत्यय आला आणि हे पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या टॅबलेटवरील डेटा यापुढे प्रवेशयोग्य राहणार नाही. \n\n आपला टॅबलेट वापरून पुन्हा सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर आपण आपला टॅबलेट सेट करता, तेव्हा आपल्याकडे आपल्या /e/ खात्यावर बॅकअप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"कूटबद्धीकरणात व्यत्यय आला आणि पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या फोनवरील डेटा यापुढे प्रवेशयोग्य नाही.\n\nआपला फोन वापरणे पुन्हा सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर जेव्हा आपण आपला फोन सेट करता, तेव्हा आपल्याकडे आपल्या /e/ खात्यावर बॅकअप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"विकूटन अयशस्वी"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपण प्रविष्ट केलेला संकेतशब्द चुकीचा आहे, परंतु दुर्दैवाने आपला डेटा दूषित आहे. \n\nआपला टॅबलेट वापरणे पुनः सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर आपण आपला टॅबलेट सेट करता, तेव्हा आपल्याला आपल्या Google खात्यावर बॅक अप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपण प्रविष्ट केलेला संकेतशब्द बरोबर आहे, परंतु दुर्दैवाने आपला डेटा दूषित आहे. \n\nआपला फोन वापरणे पुनः सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर आपण आपला फोन सेट करता, तेव्हा आपल्याला आपल्या Google खात्यावर बॅक अप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपण प्रविष्ट केलेला संकेतशब्द चुकीचा आहे, परंतु दुर्दैवाने आपला डेटा दूषित आहे. \n\nआपला टॅबलेट वापरणे पुनः सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर आपण आपला टॅबलेट सेट करता, तेव्हा आपल्याला आपल्या /e/ खात्यावर बॅक अप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपण प्रविष्ट केलेला संकेतशब्द बरोबर आहे, परंतु दुर्दैवाने आपला डेटा दूषित आहे. \n\nआपला फोन वापरणे पुनः सुरु करण्यासाठी, आपल्याला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर आपण आपला फोन सेट करता, तेव्हा आपल्याला आपल्या /e/ खात्यावर बॅक अप घेतलेला कोणताही डेटा पुनर्संचयित करण्याची संधी असेल."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"इनपुट पद्धत स्विच करा"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"स्क्रीन लॉक सेट करा"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"आपले डिव्हाइस संरक्षित करा"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"नेटवर्क सेटिंग्ज रीसेट केल्या गेल्या आहेत"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"डिव्हाइस रीसेट करा"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"फॅक्‍टरी डेटा रीसेट"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"आपले Google खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे आपल्या फोनच्या "<b>"अंतर्गत संचयन"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"आपले Google खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"आपले /e/ खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे आपल्या फोनच्या "<b>"अंतर्गत संचयन"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"आपले /e/ खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आपण खालील खात्यांवर सध्या साइन इन केले आहे:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"या डिव्‍हाइसवर इतर वापरकर्ते उपस्‍थित आहेत.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फोटो"</li>\n<li>"अन्य वापरकर्ता डेटा"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ब्लूटुथ स्कॅन करणे"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"सिस्टीम अ‍ॅप्‍स आणि सेवांना कधीही ब्लूटुथ डिव्‍हाइसेस शोधण्‍याची अनुमती देउन स्थान सुधारित करा."</string>
     <string name="location_network_based" msgid="6010456018401296590">"वाय-फाय आणि सेल्युलर नेटवर्क स्थान"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपल्या स्थानाचा अधिक जलद अंदाज घेण्यासाठी अॅप्सना Google ची स्थान सेवा वापरू द्या. अनामित स्थान डेटा संकलित केला जाईल आणि Google कडे पाठविला जाईल."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपल्या स्थानाचा अधिक जलद अंदाज घेण्यासाठी अॅप्सना /e/ ची स्थान सेवा वापरू द्या. अनामित स्थान डेटा संकलित केला जाईल आणि /e/ कडे पाठविला जाईल."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"वाय-फाय द्वारे निर्धारित केलेले स्थान"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS उपग्रह"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"आपले स्थान सूचित करण्यासाठी आपल्या टॅब्लेटवर अॅप्सना GPS वापरु द्या"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"सहाय्यक GPS वापरा"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ला सहाय्य करण्यासाठी सर्व्हर वापरा (नेटवर्क वापर कमी करण्यासाठी अनचेक करा)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ला सहाय्य करण्यासाठी सर्व्हर वापरा (GPS कार्यप्रदर्शन सुधारण्यासाठी अनचेक करा)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"स्थान आणि Google शोध"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google ला शोध परिणाम आणि अन्य सेवा सुधारण्यासाठी आपले स्थान वापरू द्या"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"स्थान आणि /e/ शोध"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ ला शोध परिणाम आणि अन्य सेवा सुधारण्यासाठी आपले स्थान वापरू द्या"</string>
     <string name="location_access_title" msgid="7064108942964081243">"माझ्या स्थानामध्ये प्रवेश करा"</string>
     <string name="location_access_summary" msgid="69031404093194341">"आपली परवानगी विचारणार्‍या अॅप्सना आपली स्थान माहिती वापरु द्या"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"स्थान स्रोत"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"अ‍ॅप सेटिंग्ज"</string>
     <string name="install_applications" msgid="4872012136210802181">"अज्ञात स्त्रोत"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"सर्व अॅप स्त्रोतांना अनुमती द्या"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"आपल्याला Google Play ऐवजी स्त्रोतांवरून अॅप्स स्थापन करू देतो"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"आपल्याला /e/ Play ऐवजी स्त्रोतांवरून अॅप्स स्थापन करू देतो"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"अज्ञात स्रोतांकडील अॅप्सच्या स्थापनेस अनुमती द्या"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"अज्ञात स्त्रोतांवरून अॅप्सद्वारे आक्रमण करण्यासाठी आपला टॅबलेट आणि वैयक्तिक डेटा अधिक असुरक्षित आहेत. आपण सहमती देता की हे अॅप्स वापरल्यामुळे होणारे आपल्या टॅबलेटचे कोणतेही नुकसान किंवा डेटाच्या हानीकरिता आपण पूर्णपणे जबाबदार आहात."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"आपला फोन आणि वैयक्तिक डेटा अज्ञात स्त्रोतांकडील अॅप्सद्वारे आक्रमण करण्यासाठी अधिक असुरक्षित आहे. आपण सहमती देता की हे अॅप्स वापरल्यामुळे होणारे आपल्या फोनचे कोणतेही नुकसान किंवा डेटाच्या हानीकरिता पूर्णपणे आपण जबाबदार आहात."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"बॅकअप घ्या आणि पुनर्संचयित करा"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"वैयक्तिक डेटा"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"माझ्या डेटाचा बॅकअप घ्या"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google सर्व्हरमध्ये अॅप डेटा, वाय-फाय संकेतशब्द आणि इतर सेटिंग्जचा बॅक अप घ्या"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ सर्व्हरमध्ये अॅप डेटा, वाय-फाय संकेतशब्द आणि इतर सेटिंग्जचा बॅक अप घ्या"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"बॅकअप खाते"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"अॅप डेटा समाविष्ट करा"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"स्वयंचलित पुनर्संचयन"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"बॅकअप सेवा निष्क्रिय आहे."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"कोणतेही खाते सध्या बॅक अप घेतलेला डेटा संचयित करत नाहीये"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Google सर्व्हरवरील आपल्या वाय-फाय संकेतशब्द, बुकमार्क, इतर सेटिंग्ज आणि अॅप डेटाचा बॅक अप घेणे थांबवायचे तसेच सर्व प्रतिलिपी मिटवायच्या?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"/e/ सर्व्हरवरील आपल्या वाय-फाय संकेतशब्द, बुकमार्क, इतर सेटिंग्ज आणि अॅप डेटाचा बॅक अप घेणे थांबवायचे तसेच सर्व प्रतिलिपी मिटवायच्या?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"डिव्हाइस डेटाचा (जसे की वाय-फाय संकेतशब्द आणि कॉल इतिहास) आणि (अॅप्सद्वारे संचयित केलेल्या सेटिंग्ज आणि फायली यासारख्या) अॅप डेटाचा बॅकअप घेणे थांबवा, तसेच दूरस्थ सर्व्हर वरील सर्व प्रती मिटवायच्या?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"स्वयंचलितपणे डिव्‍हाइस डेटाचा (जसे की वाय-फाय संकेतशब्द आणि कॉल इतिहास) आणि अ‍ॅप डेटाचा (जसे की अ‍ॅप्‍स द्वारे संचयित केलेल्या सेटिंग्ज आणि फायली) दूरस्‍थपणे बॅकअप घ्‍या.\n\nआपण स्वयंचलित बॅकअप चालू करता तेव्‍हा, डिव्‍हाइस आणि अ‍ॅप डेटा मधूनमधून दूरस्‍थपणे जतन केला जातो. अ‍ॅप डेटा हा संपर्क, संदेश आणि फोटो यासारख्‍या संभाव्य संवेदनशील डेटासह अ‍ॅपने जतन केलेला कोणताही डेटा असू शकतो (विकासकाच्या सेटिंग्जवर आधारित)."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"डिव्हाइस प्रशासन सेटिंग्ज"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"कॅलेंडर"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"संपर्क"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google संकालनामध्ये स्वागत आहे!"</font>" \nआपण जेथे आहात तेथून आपल्या संपर्क, भेटी आणि अधिक मध्ये प्रवेश करण्याची अनुमती देण्यासाठी डेटा संकालन करण्याकरिता एक Google दृष्टिकोन."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ संकालनामध्ये स्वागत आहे!"</font>" \nआपण जेथे आहात तेथून आपल्या संपर्क, भेटी आणि अधिक मध्ये प्रवेश करण्याची अनुमती देण्यासाठी डेटा संकालन करण्याकरिता एक /e/ दृष्टिकोन."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"अॅप संकालन सेटिंग्ज"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"डेटा आणि संकालन"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"संकेतशब्द बदला"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"है वैशिष्‍ट्य या अ‍ॅप साठी कारणीभूत असते जो केवळ सेल्युलर नेटवर्क उपलब्ध असताना कार्य करणे थांबविण्यासाठी पार्श्वभूमी डेटावर अवलंबून असतो.\n\nआपण अॅप मध्ये उपलब्ध असलेल्या सेटिंग्जमध्ये अधिक योग्य डेटा वापर नियंत्रणे शोधू शकता."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"जेव्हा आपण सेल्युलर डेटा सीमा सेट करता तेव्हाच फक्त पार्श्वभूमी डेटा प्रतिबंधित करणे शक्य आहे."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"डेटाचे स्वयं-संकालन चालू करायचे?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपण वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या टॅब्लेटवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती आपण टॅब्लेटवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. Google खाते याप्रकारे कार्य करते."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपण वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या फोनवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती आपण फोनवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. Google खाते याप्रकारे कार्य करते."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपण वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या टॅब्लेटवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती आपण टॅब्लेटवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. /e/ खाते याप्रकारे कार्य करते."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपण वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या फोनवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती आपण फोनवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. /e/ खाते याप्रकारे कार्य करते."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"डेटाचे स्वयं-संकालन बंद करायचे?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"हे डेटा आणि बॅटरी वापर वाचवेल, परंतु आपल्याला अलीकडील माहिती संकलित करण्यासाठी प्रत्येक खाते व्यक्तिचलितपणे संकालित करण्याची आवश्यकता असेल. आणि अद्यतने आल्यावर आपल्याला सूचना प्राप्त होणार नाही."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"वापर चक्र रीसेट तारीख"</string>
