--- a/res/values-ms-rMY/strings.xml
+++ b/res/values-ms-rMY/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Amaran: Peranti anda akan disilih selepas <xliff:g id="COUNT">^1</xliff:g> lagi percubaan yang gagal untuk membuka kunci!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Taipkan kata laluan anda"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Penyulitan tidak berjaya"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Penyulitan telah diganggu dan tidak dapat dilengkapkan. Akibatnya, data pada tablet anda tidak lagi boleh diakses. \n\n Untuk menyambung semula menggunakan tablet anda, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan tablet anda selepas menetap semula, anda akan berpeluang untuk memulihkan apa-apa data yang dibuat sandaran ke Akaun Google anda."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Penyulitan telah diganggu dan tidak dapat dilengkapkan. Akibatnya, data pada telefon anda tidak lagi boleh diakses. \n\nUntuk menyambung semula menggunakan telefon anda, anda perlu melakukan tetapan semula kilang. Apabila anda menetapkan telefon anda selepas menetap semula, anda akan mempunyai peluang untuk memulihkan apa-apa data yang dibuat sandaran ke Akaun Google anda."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Penyulitan telah diganggu dan tidak dapat dilengkapkan. Akibatnya, data pada tablet anda tidak lagi boleh diakses. \n\n Untuk menyambung semula menggunakan tablet anda, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan tablet anda selepas menetap semula, anda akan berpeluang untuk memulihkan apa-apa data yang dibuat sandaran ke Akaun /e/ anda."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Penyulitan telah diganggu dan tidak dapat dilengkapkan. Akibatnya, data pada telefon anda tidak lagi boleh diakses. \n\nUntuk menyambung semula menggunakan telefon anda, anda perlu melakukan tetapan semula kilang. Apabila anda menetapkan telefon anda selepas menetap semula, anda akan mempunyai peluang untuk memulihkan apa-apa data yang dibuat sandaran ke Akaun /e/ anda."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Penyahsulitan tidak berjaya"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Kata laluan yang anda masukkan betul, malangnya data anda rosak. \n\nUntuk menyambung semula penggunaan tablet, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan tablet selepas membuat penetapan semula, anda berpeluang memulihkan sebarang data yang telah disandarkan ke Akaun Google anda."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Kata laluan yang anda masukkan betul, malangnya data anda rosak. \n\nUntuk menyambung semula penggunaan telefon, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan telefon selepas membuat penetapan semula, anda berpeluang memulihkan sebarang data yang telah disandarkan ke Akaun Google anda."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Kata laluan yang anda masukkan betul, malangnya data anda rosak. \n\nUntuk menyambung semula penggunaan tablet, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan tablet selepas membuat penetapan semula, anda berpeluang memulihkan sebarang data yang telah disandarkan ke Akaun /e/ anda."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Kata laluan yang anda masukkan betul, malangnya data anda rosak. \n\nUntuk menyambung semula penggunaan telefon, anda perlu melakukan tetapan semula kilang. Apabila anda menyediakan telefon selepas membuat penetapan semula, anda berpeluang memulihkan sebarang data yang telah disandarkan ke Akaun /e/ anda."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Tukar kaedah input"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Tetapkan kunci skrin"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Lindungi peranti anda"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Tetapan rangkaian telah ditetapkan semula"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Tetapkan semula peranti"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Tetapan semula data kilang"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ini akan memadamkan semua data dari "<b>"storan dalaman"</b>" tablet anda, termasuk:\n\n"<li>"Akaun Google anda"</li>\n<li>"Data dan tetapan sistem dan aplikasi"</li>\n<li>"Aplikasi yang dimuat turun"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ini akan memadamkan semua data daripada "<b>"storan dalaman"</b>" telefon anda, termasuk:\n\n"<li>"Akaun Google anda"</li>\n<li>"Data dan tetapan sistem dan aplikasi"</li>\n<li>"Aplikasi yang dimuat turun"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ini akan memadamkan semua data dari "<b>"storan dalaman"</b>" tablet anda, termasuk:\n\n"<li>"Akaun /e/ anda"</li>\n<li>"Data dan tetapan sistem dan aplikasi"</li>\n<li>"Aplikasi yang dimuat turun"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ini akan memadamkan semua data daripada "<b>"storan dalaman"</b>" telefon anda, termasuk:\n\n"<li>"Akaun /e/ anda"</li>\n<li>"Data dan tetapan sistem dan aplikasi"</li>\n<li>"Aplikasi yang dimuat turun"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Anda melog masuk ke dalam akaun berikut buat masa ini:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Terdapat pengguna lain pada peranti ini.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muzik"</li>\n<li>"Foto"</li>\n<li>"Data pengguna yang lain"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Pengimbasan Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Tingkatkan lokasi dengan membenarkan apl sistem dan perkhidmatan mengesan peranti Bluetooth pada bila-bila masa."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Lokasi Wi-Fi &amp; selular"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Biar apl guna perkhidmatan lokasi Google utk anggar lokasi lebih cepat. Data lokasi tanpa nama dikumpul dan dihantar kpd Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Biar apl guna perkhidmatan lokasi /e/ utk anggar lokasi lebih cepat. Data lokasi tanpa nama dikumpul dan dihantar kpd /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Lokasi ditentukan oleh Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Satelit GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Biarkan apl menggunakan GPS pada tablet anda untuk menentukan lokasi anda"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Gunakan GPS berbantu"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Gunakan pelayan untuk membantu GPS (nyahtanda untuk mengurangkan penggunaan rangkaian)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Gunakan pelayan untuk membantu GPS (nyahtanda untuk memperbaik prestasi GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Lokasi &amp; carian Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Benarkan Google menggunakan lokasi anda untuk memperbaik hasil carian dan perkhidmatan lain"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Lokasi &amp; carian /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Benarkan /e/ menggunakan lokasi anda untuk memperbaik hasil carian dan perkhidmatan lain"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Akses kepada lokasi saya"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Biarkan apl yang telah meminta kebenaran anda menggunakan maklumat lokasi anda"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Sumber lokasi"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Tetapan aplikasi"</string>
     <string name="install_applications" msgid="4872012136210802181">"Sumber tidak diketahui"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Benarkan semua sumber apl"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Membenarkan anda memasang apl dari sumber selain Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Membenarkan anda memasang apl dari sumber selain /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Benarkan pemasangan apl dari sumber tidak diketahui"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Tablet dan data peribadi anda lebih terdedah kepada serangan oleh aplikasi dari sumber yang tidak diketahui. Anda bersetuju bahawa anda bertanggungjawab sepenuhnya bagi apa-apa kerosakan kepada tablet atau kehilangan data yang mungkin berlaku akibat penggunaan aplikasi ini."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Telefon dan data peribadi anda lebih terdedah kepada serangan oleh aplikasi daripada sumber yang tidak diketahui. Anda bersetuju untuk bertanggungjawab sepenuhnya atas sebarang kerosakan kepada telefon anda atau kehilangan data yang mungkin berlaku akibat menggunakan aplikasi ini."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Sandarkan &amp; pulihkan"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Data peribadi"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Sandarkan data saya"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Sandarkan data apl, kata laluan Wi-Fi dan tetapan lain ke pelayan Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Sandarkan data apl, kata laluan Wi-Fi dan tetapan lain ke pelayan /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Akaun sandaran"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Masukkan data apl"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Pemulihan automatik"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Perkhidmatan sandaran tidak aktif."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Tiada akaun yang sedang menyimpan data sandaran buat masa ini"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Berhenti membuat sandaran kata laluan Wi-Fi anda, penanda halaman, tetapan lain dan data apl serta padamkan semua salinan pada pelayan Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Berhenti membuat sandaran kata laluan Wi-Fi anda, penanda halaman, tetapan lain dan data apl serta padamkan semua salinan pada pelayan /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Berhenti menyandarkan data peranti (seperti kata laluan Wi-Fi dan sejarah panggilan) dan data apl (seperti tetapan dan fail yang disimpan oleh apl), serta padamkan semua salinan pada pelayan jauh?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Sandarkan data peranti (seperti kata laluan Wi-Fi dan sejarah panggilan) dan data apl (seperti tetapan dan fail yang disimpan mengikut apl) dari jauh secara automatik.\n\nApabila anda menghidupkan sandaran automatik, data peranti dan apl disimpan secara berkala dari jauh. Data apl boleh terdiri daripada sebarang data yang telah disimpan oleh apl (berdasarkan tetapan pembangun), termasuk data yang berkemungkinan sensitif, seperti kenalan, mesej dan foto."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Tetapan pentadbir peranti"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalendar"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kenalan"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Selamat datang ke Google segerak!"</font>\n"Satu pendekatan Google kepada penyegerakan data untuk membenarkan akses kepada kenalan anda, janji temu dan banyak lagi dari mana-mana sahaja anda berada."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Selamat datang ke /e/ segerak!"</font>\n"Satu pendekatan /e/ kepada penyegerakan data untuk membenarkan akses kepada kenalan anda, janji temu dan banyak lagi dari mana-mana sahaja anda berada."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Tetapan penyegerakan aplikasi"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Data &amp; penyegerakan"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Tukar kata laluan"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Ciri ini boleh menyebabkan apl yang bergantung pada data latar belakang berhenti berfungsi apabila hanya rangkaian selular yang tersedia.\n\nAnda boleh menemui lebih banyak kawalan penggunaan data dalam tetapan yang tersedia dalam apl."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Mengehadkan data latar belakang hanya boleh dilakukan apabila anda telah menetapkan had data selular."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Hidupkan auto segerak data?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Sebarang perubahan yang anda buat kepada akaun anda di web akan disalin secara automatik ke tablet anda.\n\nSesetengah akaun juga boleh secara automatik menyalin sebarang perubahan yang anda buat di tablet ke web. Akaun Google juga berfungsi begini."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Sebarang perubahan yang anda buat kepada akaun anda di web akan disalin secara automatik ke telefon anda.\n\nSesetengah akaun juga boleh secara automatik menyalin sebarang perubahan yang anda buat di telefon ke web. Akaun Google juga berfungsi begini."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Sebarang perubahan yang anda buat kepada akaun anda di web akan disalin secara automatik ke tablet anda.\n\nSesetengah akaun juga boleh secara automatik menyalin sebarang perubahan yang anda buat di tablet ke web. Akaun /e/ juga berfungsi begini."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Sebarang perubahan yang anda buat kepada akaun anda di web akan disalin secara automatik ke telefon anda.\n\nSesetengah akaun juga boleh secara automatik menyalin sebarang perubahan yang anda buat di telefon ke web. Akaun /e/ juga berfungsi begini."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Matikan auto segerak data?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Ini akan menjimatkan penggunaan data dan bateri, tetapi anda perlu menyegerakkan setiap akaun secara manual untuk mengumpul maklumat terkini. Anda turut tidak akan menerima pemberitahuan apabila ada kemas kini."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Tarikh tetapan semula kitaran penggunaan"</string>
