--- a/res/values-pa-rIN/strings.xml
+++ b/res/values-pa-rIN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ਚਿਤਾਵਨੀ: ਅਨਲੌਕ ਕੀਤੇ ਜਾਣ ਲਈ <xliff:g id="COUNT">^1</xliff:g> ਤੋਂ ਵੱਧ ਅਸਫਲ ਕੋਸ਼ਿਸ਼ਾਂ ਤੋਂ ਬਾਅਦ ਤੁਹਾਡੀ ਡੀਵਾਈਸ ਮਿਟਾ ਦਿੱਤੀ ਜਾਏਗੀ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ਆਪਣਾ ਪਾਸਵਰਡ ਟਾਈਪ ਕਰੋ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਅਸਫਲ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਤੇ ਡੈਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\n ਆਪਣੀ ਟੈਬਲੇਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਫੋਨ ਤੇ ਡੈਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\nਆਪਣਾ ਫੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਫੋਨ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਤੇ ਡੈਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\n ਆਪਣੀ ਟੈਬਲੇਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਫੋਨ ਤੇ ਡੈਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\nਆਪਣਾ ਫੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਫੋਨ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ਡੀਕ੍ਰਿਪਸ਼ਨ ਅਸਫਲ"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡੈਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣੀ ਟੈਬਲੈਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡੈਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣਾ ਫੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡੈਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣੀ ਟੈਬਲੈਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡੈਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣਾ ਫੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੇਟ ਸੈਟ ਅਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡੈਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ਇਨਪੁਟ ਵਿਧੀ ਸਵਿਚ ਕਰੋ"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"ਸਕ੍ਰੀਨ ਲੌਕ ਸੈੱਟ ਕਰੋ"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"ਆਪਣੀ ਡੀਵਾਈਸ ਦੀ ਰੱਖਿਆ ਕਰੋ"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ਨੈੱਟਵਰਕ ਸੈਟਿੰਗਾਂ ਰੀਸੈੱਟ ਕੀਤੀਆਂ ਗਈਆਂ ਹਨ"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ਡੀਵਾਈਸ ਰੀਸੈੱਟ ਕਰੋ"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ਫੈਕਟਰੀ ਡੈਟਾ ਰੀਸੈੱਟ"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ਇਹ ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>"ਦਾ ਸਾਰਾ ਡੈਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ Google ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡੈਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੇ ਐਪਸ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ਇਹ ਤੁਹਾਡੇ ਫੋਨ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡੈਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ Google ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡੈਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੇ ਐਪਸ"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ਇਹ ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>"ਦਾ ਸਾਰਾ ਡੈਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ /e/ ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡੈਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੇ ਐਪਸ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ਇਹ ਤੁਹਾਡੇ ਫੋਨ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡੈਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ /e/ ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡੈਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੇ ਐਪਸ"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ਤੁਸੀਂ ਇਸ ਵੇਲੇ ਇਹਨਾਂ ਖਾਤਿਆਂ ਤੇ ਸਾਈਨ ਇਨ ਕਰ ਰਹੇ ਹੋ:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ਇਸ ਡੀਵਾਈਸ ਤੇ ਹੋਰ ਉਪਭੋਗਤਾ ਮੌਜੂਦ ਨਹੀਂ ਹਨ।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ਸੰਗੀਤ"</li>\n<li>"ਫੋਟੋਆਂ"</li>\n<li>"ਹੋਰ ਉਪਭੋਗਤਾ ਡੈਟਾ"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth ਸਕੈਨਿੰਗ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"ਸਿਸਟਮ ਐਪਾਂ ਅਤੇ ਸੇਵਾਵਾਂ ਨੂੰ ਕਿਸੇ ਵੀ ਸਮੇਂ Bluetooth ਡੀਵਾਈਸਾਂ ਦਾ ਪਤਾ ਲਾਉਣ ਦੀ ਆਗਿਆ ਦੇ ਕੇ ਟਿਕਾਣਾ ਸੇਵਾ ਬਿਹਤਰ ਬਣਾਓ।"</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi &amp; ਸੈਲਿਊਲਰ ਨੈੱਟਵਰਕ ਨਿਰਧਾਰਿਤ ਸਥਾਨ"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ਐਪਸ ਨੂੰ ਤੁਹਾਡੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਦਾ ਤੇਜ਼ ਅਨੁਮਾਨ ਲਗਾਉਣ ਲਈ Google ਦੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਸੇਵਾ ਵਰਤਣ ਦਿਓ। ਅਨਾਮ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਡੈਟਾ ਇਕੱਤਰ ਕੀਤਾ ਜਾਏਗਾ ਅਤੇ Google ਨੂੰ ਭੇਜਿਆ ਜਾਏਗਾ।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ਐਪਸ ਨੂੰ ਤੁਹਾਡੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਦਾ ਤੇਜ਼ ਅਨੁਮਾਨ ਲਗਾਉਣ ਲਈ /e/ ਦੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਸੇਵਾ ਵਰਤਣ ਦਿਓ। ਅਨਾਮ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਡੈਟਾ ਇਕੱਤਰ ਕੀਤਾ ਜਾਏਗਾ ਅਤੇ /e/ ਨੂੰ ਭੇਜਿਆ ਜਾਏਗਾ।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi‑Fi ਵੱਲੋਂ ਨਿਸ਼ਚਿਤ ਨਿਰਧਾਰਿਤ ਸਥਾਨ"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ਸੈਟੇਲਾਈਟਸ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ਆਪਣੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਨੂੰ ਸੁਨਿਸ਼ਚਿਤ ਕਰਨ ਲਈ ਐਪਸ ਨੂੰ ਆਪਣੀ ਟੈਬਲੇਟ ਤੇ GPS ਵਰਤਣ ਦਿਓ"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ਸਹਾਇਤ ਪ੍ਰਾਪਤ GPS ਵਰਤੋ"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ਦੀ ਸਹਾਇਤਾ ਲਈ ਸਰਵਰ ਵਰਤੋ (ਨੈੱਟਵਰਕ ਵਰਤੋਂ ਘੱਟ ਕਰਨ ਲਈ ਅਨਚੈਕ ਕਰੋ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ਦੀ ਸਹਾਇਤਾ ਲਈ ਸਰਵਰ ਵਰਤੋ (GPS ਪ੍ਰਦਰਸ਼ਨ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਅਨਚੈਕ ਕਰੋ)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ਟਿਕਾਣਾ &amp; Google ਖੋਜ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google ਨੂੰ ਖੋਜ ਨਤੀਜਿਆਂ ਅਤੇ ਹੋਰ ਸੇਵਾਵਾਂ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਤੁਹਾਡਾ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਵਰਤਣ ਦਿਓ"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ਟਿਕਾਣਾ &amp; /e/ ਖੋਜ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ ਨੂੰ ਖੋਜ ਨਤੀਜਿਆਂ ਅਤੇ ਹੋਰ ਸੇਵਾਵਾਂ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਤੁਹਾਡਾ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਵਰਤਣ ਦਿਓ"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ਮੇਰੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਤੱਕ ਪਹੁੰਚ ਪ੍ਰਾਪਤ ਕਰੋ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ਜਿਹਨਾਂ ਐਪਸ ਨੇ ਤੁਹਾਡੀ ਅਨੁਮਤੀ ਮੰਗੀ ਹੈ, ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਜਾਣਕਾਰੀ ਵਰਤਣ ਦਿਓ"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ਨਿਰਧਾਰਿਤ ਸਰੋਤ"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"ਐਪ ਸੈਟਿੰਗਾਂ"</string>
     <string name="install_applications" msgid="4872012136210802181">"ਅਗਿਆਤ ਸਰੋਤ"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"ਸਾਰੇ ਐਪ ਸਰੋਤਾਂ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"ਤੁਹਾਨੂੰ Google Play ਤੋਂ ਇਲਾਵਾ ਹੋਰਾਂ ਸਰੋਤਾਂ ਤੋਂ ਐਪਸ ਇੰਸਟੌਲ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿੰਦਾ ਹੈ"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"ਤੁਹਾਨੂੰ /e/ Play ਤੋਂ ਇਲਾਵਾ ਹੋਰਾਂ ਸਰੋਤਾਂ ਤੋਂ ਐਪਸ ਇੰਸਟੌਲ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿੰਦਾ ਹੈ"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"ਅਗਿਆਤ ਸਰੋਤਾਂ ਤੋਂ ਐਪਾਂ ਦੀ ਸਥਾਪਨਾ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"ਤੁਹਾਡਾ ਟੈਬਲੈੱਟ ਅਤੇ ਨਿੱਜੀ ਡੈਟਾ ਅਗਿਆਤ ਸਰੋਤਾਂ ਤੋਂ ਲਈਆਂ ਐਪਾਂ ਵੱਲੋਂ ਹਮਲੇ ਪ੍ਰਤੀ ਵਧੇਰੇ ਕਮਜ਼ੋਰ ਹੈ। ਤੁਸੀਂ ਸਹਿਮਤੀ ਦਿੰਦੇ ਹੋ ਕਿ ਤੁਸੀਂ ਆਪਣੇ ਟੈਬਲੈੱਟ ਨੂੰ ਹੋਣ ਵਾਲੇ ਕਿਸੇ ਵੀ ਨੁਕਸਾਨ ਅਤੇ ਡੈਟੇ ਦੇ ਨਸ਼ਟ ਹੋਣ ਲਈ ਕੇਵਲ ਖੁਦ ਜ਼ਿੰਮੇਵਾਰ ਹੋ, ਜੋ ਇਹਨਾਂ ਐਪਾਂ ਨੂੰ ਵਰਤਣ ਦੇ ਸਿੱਟੇ ਵਜੋਂ ਹੋ ਸਕਦਾ ਹੈ।"</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"ਤੁਹਾਡਾ ਫੋਨ ਅਤੇ ਨਿੱਜੀ ਡੈਟਾ ਅਗਿਆਤ ਸਰੋਤਾਂ ਤੋਂ ਲਈਆਂ ਐਪਾਂ ਵੱਲੋਂ ਹਮਲੇ ਪ੍ਰਤੀ ਵਧੇਰੇ ਕਮਜ਼ੋਰ ਹੈ। ਤੁਸੀਂ ਸਹਿਮਤੀ ਦਿੰਦੇ ਹੋ ਕਿ ਤੁਸੀਂ ਆਪਣੇ ਫੋਨ ਨੂੰ ਹੋਣ ਵਾਲੇ ਕਿਸੇ ਵੀ ਨੁਕਸਾਨ ਅਤੇ ਡੈਟੇ ਦੇ ਨਸ਼ਟ ਹੋਣ ਲਈ ਕੇਵਲ ਖੁਦ ਜ਼ਿੰਮੇਵਾਰ ਹੋ, ਜੋ ਇਹਨਾਂ ਐਪਾਂ ਨੂੰ ਵਰਤਣ ਦੇ ਸਿੱਟੇ ਵਜੋਂ ਹੋ ਸਕਦਾ ਹੈ।"</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ਬੈਕਅਪ &amp; ਰੀਸਟੋਰ ਕਰੋ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ਨਿੱਜੀ ਡੈਟਾ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ਮੇਰਾ ਡੈਟਾ ਬੈਕ ਅਪ ਕਰੋ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google ਸਰਵਰਾਂ ਤੇ ਐਪ ਡੈਟਾ, Wi‑Fi ਪਾਸਵਰਡਾਂ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਬੈਕ ਅਪ ਕਰੋ"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ ਸਰਵਰਾਂ ਤੇ ਐਪ ਡੈਟਾ, Wi‑Fi ਪਾਸਵਰਡਾਂ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਬੈਕ ਅਪ ਕਰੋ"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ਬੈਕਅਪ ਖਾਤਾ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ਐਪ ਡੈਟਾ ਸ਼ਾਮਲ ਕਰੋ"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ਆਟੋਮੈਟਿਕ ਰੀਸਟੋਰ ਕਰੋ"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"ਬੈਕਅਪ ਸੇਵਾ ਨਿਸ਼ਕਿਰਿਆ ਹੈ।"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ਕੋਈ ਖਾਤਾ ਇਸ ਵੇਲੇ ਬੈਕ ਅਪ ਕੀਤਾ ਡੈਟਾ ਸਟੋਰ ਨਹੀਂ ਕਰ ਰਿਹਾ ਹੈ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ਆਪਣੇ Wi‑Fi ਪਾਸਵਰਡਾਂ, ਬੁੱਕਮਾਰਕਾਂ, ਹੋਰ ਸੈਟਿੰਗਾਂ ਅਤੇ ਐਪ ਡੈਟਾ ਨੂੰ ਬੈਕ ਅਪ ਕਰਨਾ ਬੰਦ ਕਰਨਾ ਹੈ ਅਤੇ Google ਸਰਵਰਾਂ ਦੀਆਂ ਸਾਰੀਆਂ ਕਾਪੀਆਂ ਮਿਟਾਉਣੀਆਂ ਹਨ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ਆਪਣੇ Wi‑Fi ਪਾਸਵਰਡਾਂ, ਬੁੱਕਮਾਰਕਾਂ, ਹੋਰ ਸੈਟਿੰਗਾਂ ਅਤੇ ਐਪ ਡੈਟਾ ਨੂੰ ਬੈਕ ਅਪ ਕਰਨਾ ਬੰਦ ਕਰਨਾ ਹੈ ਅਤੇ /e/ ਸਰਵਰਾਂ ਦੀਆਂ ਸਾਰੀਆਂ ਕਾਪੀਆਂ ਮਿਟਾਉਣੀਆਂ ਹਨ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ਕੀ ਡੀਵਾਈਸ ਡੇਟਾ (ਜਿਵੇਂ ਕਿ Wi-Fi ਪਾਸਵਰਡ ਅਤੇ ਕਲ ਇਤਿਹਾਸ) ਅਤੇ ਐਪ ਡੇਟਾ (ਜਿਵੇਂ ਕਿ ਐਪਸ ਦਾ ਸਟੋਰ ਕੀਤੀ ਸੈੱਟਿੰਗਜ਼ ਅਤੇ ਫ਼ਾਈਲਾਂ) ਦਾ ਬੈੱਕ ਅੱਪ ਤੋਂ ਰੋਕਣਾ ਹੈ, ਅਤੇ ਇਸਦੇ ਨਾਲ-ਨਾਲ ਰਿਮੋਟ ਸਰਵਰ \'ਤੇ ਸਾਰੀਆਂ ਪ੍ਰਤੀਲਿਪੀਆਂ ਨੂੰ ਮਿਟਾਉਣਾ ਹੈ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ਡੀਵਾਈਸ ਡੇਟਾ ਰਿਮੋਟ ਦੇ ਰੂਪ ਵਿੱਚ (ਜਿਵੇਂ ਕਿ Wi-Fi ਪਾਸਵਰਡ ਅਤੇ ਕਲ ਇਤਿਹਾਸ) ਅਤੇ ਐਪ ਡੇਟਾ (ਜਿਵੇਂ ਕਿ ਐਪਸ ਦਾ ਸਟੋਰ ਕੀਤੀ ਸੈੱਟਿੰਗਜ਼ ਅਤੇ ਫ਼ਾਈਲਾਂ) ਦਾ ਸਵੈਚਲ ਬੈੱਕ ਅੱਪ ਲਿਓ।\n\nਜਦੋਂ ਤੁਸੀਂ ਸਵੈਚਲ ਬੈੱਕ ਅੱਪ ਨੂੰ ਚਾਲੂ ਕਰਦੇ ਹੋ, ਤਾਂ ਡੀਵਾਈਸ ਅਤੇ ਐਪ ਡੇਟਾ ਨੂੰ ਰਿਮੋਟ ਦੇ ਰੂਪ ਵਿੱਚ ਅਵਧੀ ਅਨੁਸਾਰ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਜਾਂਦਾ ਹੈ। ਐਪ ਡੇਟਾ ਕੋਈ ਵੀ ਡੇਟਾ ਹੋ ਸਕਦਾ ਹੈ ਜੋ ਸੰਪਰਕ, ਸੁਨੇਹੇ, ਅਤੇ ਫ਼ੋਟੋਆਂ ਵਰਗੇ ਸੰਭਾਵੀ ਸੰਵੇਦਨਸ਼ੀਲ ਡੇਟਾ ਸਮੇਤ, ਕਿਸੇ ਐਪ ਨੇ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਹੁੰਦਾ ਹੈ (ਨਿਰਮਾਤਾ ਸੈੱਟਿੰਗਜ਼ ਦੇ ਅਧਾਰ \'ਤੇ)।"</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"ਡੀਵਾਈਸ ਪ੍ਰਬੰਧ ਸੈਟਿੰਗਾਂ"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ਕੈਲੰਡਰ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ਸੰਪਰਕ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ਸਿੰਕ ਤੇ ਤੁਹਾਡਾ ਸੁਆਗਤ ਹੈ!"</font>" \nਤੁਸੀਂ ਜਿੱਥੇ ਵੀ ਹੋਵੋ, ਉੱਥੋਂ ਤੁਹਾਡੇ ਸੰਪਰਕਾਂ, ਮੁਲਾਕਾਤਾਂ ਆਦਿ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦੇਣ ਲਈ ਡੈਟਾ ਸਿੰਕ ਕਰਨ ਲਈ ਇੱਕ Google ਪਹੁੰਚ।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ਸਿੰਕ ਤੇ ਤੁਹਾਡਾ ਸੁਆਗਤ ਹੈ!"</font>" \nਤੁਸੀਂ ਜਿੱਥੇ ਵੀ ਹੋਵੋ, ਉੱਥੋਂ ਤੁਹਾਡੇ ਸੰਪਰਕਾਂ, ਮੁਲਾਕਾਤਾਂ ਆਦਿ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦੇਣ ਲਈ ਡੈਟਾ ਸਿੰਕ ਕਰਨ ਲਈ ਇੱਕ /e/ ਪਹੁੰਚ।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ਐਪ ਸਿੰਕ ਸੈਟਿੰਗਾਂ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ਡੈਟਾ &amp; ਸਿੰਕ੍ਰੋਨਾਈਜ਼ੇਸ਼ਨ"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ਪਾਸਵਰਡ ਬਦਲੋ"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"ਇਹ ਵਿਸ਼ੇਸ਼ਤਾ ਇੱਕ ਅਜਿਹੇ ਐਪ ਦਾ ਕਾਰਨ ਬਣ ਸਕਦੀ ਹੈ ਜੋ ਕੰਮ ਕਰਨਾ ਬੰਦ ਕਰਨ ਲਈ ਪਿਛੋਕੜ ਡੈਟਾ ਤੇ ਨਿਰਭਰ ਹੈ, ਕੇਵਲ ਉਦੋਂ ਜਦੋਂ ਸੈਲਿਊਲਰ ਨੈੱਟਵਰਕ ਉਪਲਬਧ ਹੋਣ।\n\nਤੁਸੀਂ ਐਪ ਵਿੱਚ ਉਪਲਬਧ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਹੋਰ ਉਚਿਤ ਡੈਟਾ ਉਪਯੋਗ ਨਿਯੰਤਰਣ ਲੱਭ ਸਕਦੇ ਹੋ।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"ਪਿਛੋਕੜ ਡੈਟਾ ਤੇ ਪ੍ਰਤਿਬੰਧ ਲਾਉਣਾ ਕੇਵਲ ਉਦੋਂ ਸੰਭਵ ਹੁੰਦਾ ਹੈ ਜਦੋਂ ਤੁਸੀਂ ਇੱਕ ਸੈਲਿਊਲਰ ਡੈਟਾ ਸੀਮਾ ਸੈਟ ਕੀਤੀ ਹੋਵੇ।"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ਕੀ ਆਟੋ-ਸਿੰਕ ਡੈਟਾ ਚਾਲੂ ਕਰਨਾ ਹੈ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਆਟੋਮੈਟਿਕਲੀ ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਆਟੋਮੈਟਿਕਲੀ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੀ ਟੈਬਲੇਟ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ Google ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਆਟੋਮੈਟਿਕਲੀ ਤੁਹਾਡੇ ਫੋਨ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਆਟੋਮੈਟਿਕਲੀ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਫੋਨ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ Google ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਆਟੋਮੈਟਿਕਲੀ ਤੁਹਾਡੀ ਟੈਬਲੇਟ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਆਟੋਮੈਟਿਕਲੀ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੀ ਟੈਬਲੇਟ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ /e/ ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਆਟੋਮੈਟਿਕਲੀ ਤੁਹਾਡੇ ਫੋਨ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਆਟੋਮੈਟਿਕਲੀ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈਬ ਤੇ ਆਪਣੇ ਫੋਨ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ /e/ ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ਕੀ ਆਟੋ-ਸਿੰਕ ਡੈਟਾ ਬੰਦ ਕਰਨਾ ਹੈ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ਇਹ ਡੈਟਾ ਅਤੇ ਬੈਟਰੀ ਵਰਤੋਂ ਤੇ ਨਿਗਰਾਨੀ ਰੱਖਦਾ ਹੈ, ਪਰੰਤੂ ਤੁਹਾਨੂੰ ਹਾਲੀਆ ਜਾਣਕਾਰੀ ਇਕੱਤਰ ਕਰਨ ਲਈ ਹਰੇਕ ਖਾਤੇ ਨੂੰ ਮੈਨੂਅਲੀ ਸਿੰਕ ਕਰਨ ਦੀ ਲੋੜ ਹੋਵੇਗੀ। ਇਸਤੋਂ ਇਲਾਵਾ ਜਦੋਂ ਅਪਡੇਟ ਹੁੰਦੀ ਹੈ ਤਾਂ ਤੁਸੀਂ ਸੂਚਨਾਵਾਂ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕਰੋਂਗੇ।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ਵਰਤੋਂ ਸਾਈਕਲ ਰੀਸੈੱਟ ਤਾਰੀਖ"</string>
