--- a/res/values-si-rLK/strings.xml
+++ b/res/values-si-rLK/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"අවවාදය: ඔබගේ උපාංගය අඟුල ඇරීමට අවස්ථා <xliff:g id="COUNT">^1</xliff:g> වඩා අසාර්ථක වූ හොත් එය පිසදමන්න!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ඔබගේ මුරපදය ටයිප් කරන්න"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"සංකේතනය අසාර්ථකයි"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"සංකේතනයට බාධා වී ඇති අතර සම්පූර්ණ කළ නොහැකි විය. ප්‍රතිඑලයක් ලෙස, ඔබගේ ටැබ්ලටයේ තිබූ දත්ත තවත් ප්‍රවේශ කළ නොහැක. \n\n ටැබ්ලටය නැවත භාවිතා කිරීම ඇරඹීමට, ඔබ කර්මාන්තශාලා යළි පිහිටුමක් කළ යුතුය. යළි සැකසීමට පසු ඔබගේ ටැබ්ලටය සකසන විට, ඔබගේ Google ගිණුම වෙත උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට අවස්ථාව ඔබට ඇත."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"සංකේතනයට බාධා වූ අතර අවසන් කළ නොහැක. ප්‍රතිඵලයක් ලෙස, ඔබගේ දුරකථනයේ දත්ත තවදුරටත් ප්‍රවේශනය කළ නොහැක. \n\nඔබගේ දුරකථන භාවිතා කර යළි ආරම්භ කිරීමට, ඔබ නිෂ්පාදන දත්ත යළි පිහිටීමක් කළ යුතුය. ඔබ යළි පිහිටුමෙන් පසු දුරකථනය සකසන විට, ඔබ විසින් Google ගිණුම වෙත උපස්ථ කළ ඕනෑම දත්තයක් යළි ස්ථාපනය කිරීමට ඔබට අවස්තාවක් ලැබෙනු ඇත."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"සංකේතනයට බාධා වී ඇති අතර සම්පූර්ණ කළ නොහැකි විය. ප්‍රතිඑලයක් ලෙස, ඔබගේ ටැබ්ලටයේ තිබූ දත්ත තවත් ප්‍රවේශ කළ නොහැක. \n\n ටැබ්ලටය නැවත භාවිතා කිරීම ඇරඹීමට, ඔබ කර්මාන්තශාලා යළි පිහිටුමක් කළ යුතුය. යළි සැකසීමට පසු ඔබගේ ටැබ්ලටය සකසන විට, ඔබගේ /e/ ගිණුම වෙත උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට අවස්ථාව ඔබට ඇත."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"සංකේතනයට බාධා වූ අතර අවසන් කළ නොහැක. ප්‍රතිඵලයක් ලෙස, ඔබගේ දුරකථනයේ දත්ත තවදුරටත් ප්‍රවේශනය කළ නොහැක. \n\nඔබගේ දුරකථන භාවිතා කර යළි ආරම්භ කිරීමට, ඔබ නිෂ්පාදන දත්ත යළි පිහිටීමක් කළ යුතුය. ඔබ යළි පිහිටුමෙන් පසු දුරකථනය සකසන විට, ඔබ විසින් /e/ ගිණුම වෙත උපස්ථ කළ ඕනෑම දත්තයක් යළි ස්ථාපනය කිරීමට ඔබට අවස්තාවක් ලැබෙනු ඇත."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"විසංකේතනය අසාර්ථකයි"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ඔබ ඇතුළු කළ මුරපදය නිවැරදිය, නමුත් ඔබගේ දත්ත අවලංගු වී තිබේ. \n\nඔබගේ ටැබ්ලටය නැවත ආරම්භ කිරීමට, කර්මාන්ත ශාලා යළි පිහිටු වීමක් කිරීමට ඔබට සිදුවේ, යළි පිහිටු වීමෙන් පසු ඔබගේ ටැබ්ලටය ඔබ නැවත සකස් කරන විට, ඔබගේ Google ගිණුමට උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට ඔබට අවස්ථාවක් තිබේ."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ඔබ ඇතුළු කළ මුරපදය නිවැරදිය, නමුත් ඔබගේ දත්ත අවලංගු වී තිබේ. \n\nඔබගේ දුරකථනය නැවත ආරම්භ කිරීමට, කර්මාන්ත ශාලා යළි පිහිටු වීමක් කිරීමට ඔබට සිදුවේ, යළි පිහිටු වීමෙන් පසු ඔබගේ දුරකථනය ඔබ නැවත සකස් කරන විට, ඔබගේ Google ගිණුමට උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට ඔබට අවස්ථාවක් තිබේ."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ඔබ ඇතුළු කළ මුරපදය නිවැරදිය, නමුත් ඔබගේ දත්ත අවලංගු වී තිබේ. \n\nඔබගේ ටැබ්ලටය නැවත ආරම්භ කිරීමට, කර්මාන්ත ශාලා යළි පිහිටු වීමක් කිරීමට ඔබට සිදුවේ, යළි පිහිටු වීමෙන් පසු ඔබගේ ටැබ්ලටය ඔබ නැවත සකස් කරන විට, ඔබගේ /e/ ගිණුමට උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට ඔබට අවස්ථාවක් තිබේ."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ඔබ ඇතුළු කළ මුරපදය නිවැරදිය, නමුත් ඔබගේ දත්ත අවලංගු වී තිබේ. \n\nඔබගේ දුරකථනය නැවත ආරම්භ කිරීමට, කර්මාන්ත ශාලා යළි පිහිටු වීමක් කිරීමට ඔබට සිදුවේ, යළි පිහිටු වීමෙන් පසු ඔබගේ දුරකථනය ඔබ නැවත සකස් කරන විට, ඔබගේ /e/ ගිණුමට උපස්ථ කළ ඕනෑම දත්තයක් ප්‍රතිස්ථාපනය කිරීමට ඔබට අවස්ථාවක් තිබේ."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ආදාන ක්‍රමය මාරු කරන්න"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"තිර අගුල සැකසීම"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"ඔබගේ උපාංගය ආරක්ෂා කර ගන්න"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ජාල සැකසීම් යළි පිහිටුවන ලදි"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"උපාංගය යළි පිහිටුවන්න"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"කර්මාන්තශාලා දත්ත යළි පිහිටුම"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ඔබගේ ටැබ්ලටයේ "<b>"අභ්‍යන්තර ආචනය"</b>", සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ Google ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"මෙය ඔබගේ දුරකථනයේ "<b>"අභ්‍යන්තර ගබඩාවේ"</b>" සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ Google ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ඔබගේ ටැබ්ලටයේ "<b>"අභ්‍යන්තර ආචනය"</b>", සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ /e/ ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"මෙය ඔබගේ දුරකථනයේ "<b>"අභ්‍යන්තර ගබඩාවේ"</b>" සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ /e/ ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ඔබ දැනට පහත ගිණුම් වෙත පුරනය වී සිටියි:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"මෙම උපාංගයේ වෙනත් පරිශීලකයින් සිටි.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"සංගීතය"</li>\n<li>"ඡායාරූප"</li>\n<li>"වෙනත් පරිශීලක දත්ත"</li></string>
@@ -1327,7 +1327,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"බ්ලූටූත් පරිලෝකනය"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"ඕනෑම අවස්ථාවකදී පද්ධති යෙදුම් සහ සේවා වෙත බ්ලූටූත් උපාංග නිර්ණය කිරීමට ඉඩ දීමෙන්, ස්ථානය වැඩි දියුණු කරන්න."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi-Fi සහ සෙලියුලර් ජාල ස්ථාන"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ඔබගේ ස්ථානය ඉක්මනින් තීරණය කිරීමට යෙදුම් හට Google හි ස්ථාන සේවා භාවිතා කිරීමට ඉඩ දෙන්න. නිර්නාමික ස්ථාන දත්ත එකතු කර Google වෙත යැවෙනු ඇත."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ඔබගේ ස්ථානය ඉක්මනින් තීරණය කිරීමට යෙදුම් හට /e/ හි ස්ථාන සේවා භාවිතා කිරීමට ඉඩ දෙන්න. නිර්නාමික ස්ථාන දත්ත එකතු කර /e/ වෙත යැවෙනු ඇත."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi‑Fi මඟින් ස්ථානය හඳුනාගන්නා ලදි"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS චන්ද්‍රිකා"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ඔබගේ ස්ථානය සොයා ගැනීමට ඔබගේ යෙදුම් වලට ටැබ්ලටයේ GPS භාවිතා කිරීමට අවස්තාව දෙන්න"</string>
@@ -1335,8 +1335,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"සහායික GPS භාවිතා කරන්න"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS වෙත සහය වීමට සේවාදායකය භාවිතා කරන්න (ජාල භාවිතය අඩු කිරීමට සළකුණ ඉවත් කරන්න)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS වෙත සහය වීමට සේවාදායකය භාවිතා කරන්න (GPS කාර්ය සාධනය වැඩි කිරීමට සළකුණ ඉවත් කරන්න)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ස්ථානය සහ Google සෙවුම"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"සෙවීම් ප්‍රතිඵල සහ වෙනත් සේවා සඳහා වැඩිදියුණු කිරීමට Google වෙත ඔබගේ පිහිටීම භාවිතා කිරීමට ඉඩ දෙන්න"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ස්ථානය සහ /e/ සෙවුම"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"සෙවීම් ප්‍රතිඵල සහ වෙනත් සේවා සඳහා වැඩිදියුණු කිරීමට /e/ වෙත ඔබගේ පිහිටීම භාවිතා කිරීමට ඉඩ දෙන්න"</string>
     <string name="location_access_title" msgid="7064108942964081243">"මගේ ස්ථානයට ප්‍රවේශය"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ඔබගෙන් අවසර ඉල්ලූ යෙදුම්වලට ඔබගේ ස්ථාන තොරතුරු භාවිතයට ඉඩ දෙන්න"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"පිහිටීම් මූලාශ්‍ර"</string>
@@ -1435,7 +1435,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"යෙදුම් සැකසීම්"</string>
     <string name="install_applications" msgid="4872012136210802181">"නොදන්නා මුලාශ්‍ර"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"සියලුම යෙදුම් මූලාශ්‍ර වලට ඉඩ දෙන්න"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play හැර වෙනත් ප්‍රභව වලින් යෙදුම් ස්ථාපනයට ඔබ ඉඩ දෙන්න"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play හැර වෙනත් ප්‍රභව වලින් යෙදුම් ස්ථාපනයට ඔබ ඉඩ දෙන්න"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"නොදන්නා මූලාශ්‍ර වෙතින් යෙදුම් ස්ථාපනයට අවසර දෙන්න"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"ඔබගේ ටැබ්ලටය සහ පෞද්ගලික දත්ත නොදන්නා මුලාශ්‍ර වල යෙදුම් වලින් පහර ඇතිවීමේ වැඩි බලපෑමක් ඇත. මෙම යෙදුම් භාවිතයේ ප්‍රතිඵලයක් ලෙස ඔබේ ටැබ්ලටයට හෝ දත්ත වලට සිදුවන හානියක් හෝ නැතිවීමක් සිදුවුවහොත් එයට සම්පුර්ණයෙන්ම ඔබ වගකිව යුතුය."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"ඔබගේ දුරකථනය සහ පෞද්ගලික දත්ත නොදන්නා මූලාශ්‍ර වලින් ලැබෙන යෙදුම් මඟින් තර්ජනය එල්ල කිරීමේ හැකියාව වැඩිය. මෙම යෙදුම් භාවිතයෙන් ඔබේ දුරකතනයට හෝ ඔබේ දත්ත වලට සිදුවන හානිය පිලිබඳ සම්පුර්ණ වගකීම ඔබ ලබා ගන්නා බවට එකඟ එකඟ වේ."</string>
@@ -2037,7 +2037,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"උපස්ථය සහ පිළිනැගුම"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"පුද්ගලික දත්ත"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"මගේ දත්ත උපස්ථ කරන්න"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"යෙදුම් දත්ත, Wi-Fi මුරපද, සහ වෙනත් සැකසුම් Google සේවාදායක වෙත උපස්ථ කරන්න"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"යෙදුම් දත්ත, Wi-Fi මුරපද, සහ වෙනත් සැකසුම් /e/ සේවාදායක වෙත උපස්ථ කරන්න"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"උපස්ථ ගිණුම"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"යෙදුම් දත්ත ඇතුළත් කරන්න"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ස්වයංක්‍රීය යළි පිහිටුවීම"</string>
@@ -2045,7 +2045,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"උපස්ථ සේවය අක්‍රිය වේ."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"දැනට කිසිම ගිණුමක් උපස්ථ දත්ත ගබඩා නොකරයි."</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ඔබගේ Wi-Fi මුරපද, පිටුසන්, වෙනත් සැකසීම්, සහ යෙදුම් දත්ත උපස්ථ කිරීම නවත්වා, තවත Google සේවාදායක මත ඇති සියලු පිටපත් මකා දමන්නද?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ඔබගේ Wi-Fi මුරපද, පිටුසන්, වෙනත් සැකසීම්, සහ යෙදුම් දත්ත උපස්ථ කිරීම නවත්වා, තවත /e/ සේවාදායක මත ඇති සියලු පිටපත් මකා දමන්නද?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"උපාංග දත්ත (Wi-Fi මුරපද සහ ඇමතුම් ඉතිහාසය යනාදී) සහ යෙදුම් දත්ත (යෙදුම් මගින් ගබඩා කළ සැකසීම් සහ ගොනු යනාදී) උපස්ථ කිරීම සහ දුරස්ථ සේවාදායකවල සියලු පිටපත් මැකීම නවත්වන්නද?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"දුරස්ථව උපාංග දත්ත (Wi-Fi මුරපද හා ඇමතුම් ඉතිහාසය වැනි) සහ යෙදුම් දත්ත (යෙදුම් මඟින් ගබඩා කරන සැකසීම් සහ ගොනු) ස්වයංක්‍රියව උපස්ථ කරයි.\n\nඔබ ස්වයංක්‍රියව උපස්ථ කිරීම ක්‍රියාත්මක කළ විට, උපාංග සහ යෙදුම් දත්ත කලින් කලට දුරස්ථව සුරකිනු ලැබේ. සම්බන්ධතා, පණිවුඩ, හා ඡායාරූප වැනි සංවේදී දත්ත ඇතුළුව යෙදුම් දත්ත ඕනෑම එකක් විය හැකි වේ (සංවර්ධක සැකසුම් මත පදනම්ව)."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"උපාංග පරිපාලන සැකසුම්"</string>
@@ -2132,7 +2132,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"දින දර්ශනය"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"සම්බන්ධතා"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google සමමුහුර්තකරණය ට පිළිගනිමු!"</font>" \nඔබ කොහේ සිටියත් ඔබගේ සම්බන්ධතා, හමුවීම්, සහ තවත් දේ වෙත ප්‍රවේශය දීමට දත්ත සමමුහුර්ත කිරීමට Google හි එළැඹුම."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ සමමුහුර්තකරණය ට පිළිගනිමු!"</font>" \nඔබ කොහේ සිටියත් ඔබගේ සම්බන්ධතා, හමුවීම්, සහ තවත් දේ වෙත ප්‍රවේශය දීමට දත්ත සමමුහුර්ත කිරීමට /e/ හි එළැඹුම."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"යෙදුම් සමමුහුර්ත සැකසීම්"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"දත්ත සහ සමමුහුර්තකරණය"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"මුරපදය වෙනස් කරන්න"</string>
@@ -2220,8 +2220,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"මෙම අංගය මඟින් පසුබිම් දත්ත මත යැපෙන යෙදුමක් සෙලියුලර් ජාල තිබෙන විට පමණක් ක්‍රියා නොකිරීමට හේතු විය හැක.\n\nයෙදුම තුළ ඇති සැකසීම් වලින් ඔබට වඩාත් සුදුසු දත්ත භාවිතා පාලන සොයාගත හැක."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"ඔබ සෙලියුලර් දත්ත සීමාවක් සකසා ඇත්නම් පමණක් පසුබිම් දත්ත සීමා කළ හැකි වේ."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"දත්ත ස්වයංක්‍රිය-සමමුහුර්ත වීම සක්‍රිය කරන්නද?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ඔබගේ ගිණුමට ඔබ වෙබයෙන් සිදුකරන ඕනෑම වෙනස් කිරීමක් ස්වයංක්‍රීයව ඔබගේ ටැබ්ලටයට පිටපත් වනු ඇත.\n\nසමහර ගිණුම් ස්වයංක්‍රීයව ටැබ්ලටයේ වෙබයට පිටපත් වනු ඇත. Google ගිණුමක් මේ ආකාරයට ක්‍රියා කරනු ඇත."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"වෙබයෙහි ඔබගේ ගිණුම් වලට ඔබ කරන ඕනෑම වෙනස්කමක් ස්වයංක්‍රියව දුරකතනයට පිටපත් වේ.\n\nසමහර ගිණුම් මඟින් ඔබ දුරකතනයේ සිදු කරන ඕනෑම වෙනස්කමක් ස්වයංක්‍රියව වෙබයට පිටපත් කිරීමද කර හැක. Google ගිණුමක් මෙවැනි ආකාරයකට ක්‍රියා කරයි."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ඔබගේ ගිණුමට ඔබ වෙබයෙන් සිදුකරන ඕනෑම වෙනස් කිරීමක් ස්වයංක්‍රීයව ඔබගේ ටැබ්ලටයට පිටපත් වනු ඇත.\n\nසමහර ගිණුම් ස්වයංක්‍රීයව ටැබ්ලටයේ වෙබයට පිටපත් වනු ඇත. /e/ ගිණුමක් මේ ආකාරයට ක්‍රියා කරනු ඇත."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"වෙබයෙහි ඔබගේ ගිණුම් වලට ඔබ කරන ඕනෑම වෙනස්කමක් ස්වයංක්‍රියව දුරකතනයට පිටපත් වේ.\n\nසමහර ගිණුම් මඟින් ඔබ දුරකතනයේ සිදු කරන ඕනෑම වෙනස්කමක් ස්වයංක්‍රියව වෙබයට පිටපත් කිරීමද කර හැක. /e/ ගිණුමක් මෙවැනි ආකාරයකට ක්‍රියා කරයි."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"දත්ත ස්වයංක්‍රිය-සමමුහුර්ත වීම අක්‍රිය කරන්නද?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"මෙමඟින් දත්ත සහ බැටරි භාවිතය ඉතිරි කරන අතර, නමුත් මෑත තොරතුරු එකතු කිරීමට සෑම ගිණුමක්ම ඔබ අයාන්ත්‍රිකව සමමුහුර්ත  කළ යුතු වේ. තවද යාවත්කාලීන සිදුවන විට ඔබට දැනුම්දීම් නොලැබෙනු ඇත."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"චක්‍ර භාවිතා නැවත සැකසීම් දවස"</string>
