--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"คำเตือน: ระบบจะล้างข้อมูลในอุปกรณ์หลังจากปลดล็อกไม่สำเร็จอีก <xliff:g id="COUNT">^1</xliff:g> ครั้ง!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"พิมพ์รหัสผ่านของคุณ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"การเข้ารหัสความปลอดภัยไม่สำเร็จ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"การเข้ารหัสความปลอดภัยถูกขัดจังหวะและไม่สามารถดำเนินการให้เสร็จสิ้น คุณจึงไม่สามารถเข้าถึงข้อมูลในแท็บเล็ตได้อีกต่อไป\n\nในการใช้งานแท็บเล็ตต่อ คุณต้องรีเซ็ตข้อมูลเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าแท็บเล็ตหลังจากรีเซ็ตแล้ว คุณจะสามารถกู้คืนข้อมูลทั้งหมดที่มีการสำรองไว้ในบัญชี Google ของคุณได้"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"การเข้ารหัสความปลอดภัยถูกขัดจังหวะและไม่สามารถดำเนินการให้เสร็จสิ้น คุณจึงไม่สามารถเข้าถึงข้อมูลในโทรศัพท์ได้อีกต่อไป\n\nในการใช้งานโทรศัพท์ต่อ คุณต้องรีเซ็ตข้อมูลเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าโทรศัพท์หลังจากรีเซ็ตแล้ว คุณจะสามารถกู้คืนข้อมูลทั้งหมดที่มีการสำรองไว้ในบัญชี Google ของคุณได้"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"การเข้ารหัสความปลอดภัยถูกขัดจังหวะและไม่สามารถดำเนินการให้เสร็จสิ้น คุณจึงไม่สามารถเข้าถึงข้อมูลในแท็บเล็ตได้อีกต่อไป\n\nในการใช้งานแท็บเล็ตต่อ คุณต้องรีเซ็ตข้อมูลเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าแท็บเล็ตหลังจากรีเซ็ตแล้ว คุณจะสามารถกู้คืนข้อมูลทั้งหมดที่มีการสำรองไว้ในบัญชี /e/ ของคุณได้"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"การเข้ารหัสความปลอดภัยถูกขัดจังหวะและไม่สามารถดำเนินการให้เสร็จสิ้น คุณจึงไม่สามารถเข้าถึงข้อมูลในโทรศัพท์ได้อีกต่อไป\n\nในการใช้งานโทรศัพท์ต่อ คุณต้องรีเซ็ตข้อมูลเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าโทรศัพท์หลังจากรีเซ็ตแล้ว คุณจะสามารถกู้คืนข้อมูลทั้งหมดที่มีการสำรองไว้ในบัญชี /e/ ของคุณได้"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"การถอดรหัสล้มเหลว"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"รหัสผ่านที่คุณป้อนถูกต้อง แต่ปรากฏว่ามีข้อมูลเสียหาย \n\nหากต้องการใช้แท็บเล็ตต่อ คุณต้องรีเซ็ตเครื่องเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าแท็บเล็ตหลังรีเซ็ตแล้ว คุณจะสามารถคืนค่าข้อมูลที่ได้สำรองไว้ในบัญชี Google ได้"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"รหัสผ่านที่คุณป้อนถูกต้อง แต่ปรากฏว่ามีข้อมูลเสียหาย \n\nหากต้องการใช้โทรศัพท์ต่อ คุณต้องรีเซ็ตเครื่องเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าโทรศัพท์หลังรีเซ็ตแล้ว คุณจะสามารถคืนค่าข้อมูลที่ได้สำรองไว้ในบัญชี Google ได้"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"รหัสผ่านที่คุณป้อนถูกต้อง แต่ปรากฏว่ามีข้อมูลเสียหาย \n\nหากต้องการใช้แท็บเล็ตต่อ คุณต้องรีเซ็ตเครื่องเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าแท็บเล็ตหลังรีเซ็ตแล้ว คุณจะสามารถคืนค่าข้อมูลที่ได้สำรองไว้ในบัญชี /e/ ได้"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"รหัสผ่านที่คุณป้อนถูกต้อง แต่ปรากฏว่ามีข้อมูลเสียหาย \n\nหากต้องการใช้โทรศัพท์ต่อ คุณต้องรีเซ็ตเครื่องเป็นค่าเริ่มต้น เมื่อคุณตั้งค่าโทรศัพท์หลังรีเซ็ตแล้ว คุณจะสามารถคืนค่าข้อมูลที่ได้สำรองไว้ในบัญชี /e/ ได้"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"สลับวิธีการป้อนข้อมูล"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"ตั้งค่าการล็อกหน้าจอ"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"ปกป้องอุปกรณ์ของคุณ"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"รีเซ็ตการตั้งค่าเครือข่ายแล้ว"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"รีเซ็ตอุปกรณ์"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"รีเซ็ตข้อมูลเป็นค่าเริ่มต้น"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของแท็บเล็ตของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี Google ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของโทรศัพท์ของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี Google ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของแท็บเล็ตของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี /e/ ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของโทรศัพท์ของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี /e/ ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ขณะนี้คุณได้ลงชื่อเข้าใช้บัญชีต่อไปนี้แล้ว:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"มีผู้ใช้รายอื่นอยู่บนอุปกรณ์เครื่องนี้\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"เพลง"</li>\n<li>"รูปภาพ"</li>\n<li>"ข้อมูลผู้ใช้อื่นๆ"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"การสแกนหาบลูทูธ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"ปรับปรุงตำแหน่งโดยให้แอปและบริการของระบบสามารถตรวจหาอุปกรณ์บลูทูธได้ทุกเมื่อ"</string>
     <string name="location_network_based" msgid="6010456018401296590">"ตำแหน่ง Wi-Fi และเครือข่าย"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ให้แอปต่างๆ ใช้บริการระบุตำแหน่งของ Google เพื่อระบุตำแหน่งโดยประมาณของคุณรวดเร็วยิ่งขึ้น โดยจะมีการรวบรวมและส่งข้อมูลตำแหน่งที่ไม่ระบุชื่อให้ Google"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ให้แอปต่างๆ ใช้บริการระบุตำแหน่งของ /e/ เพื่อระบุตำแหน่งโดยประมาณของคุณรวดเร็วยิ่งขึ้น โดยจะมีการรวบรวมและส่งข้อมูลตำแหน่งที่ไม่ระบุชื่อให้ /e/"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ตำแหน่งที่กำหนดโดย WiFi"</string>
     <string name="location_gps" msgid="8392461023569708478">"ดาวเทียม GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ให้แอปพลิเคชันใช้ GPS ของแท็บเล็ตเพื่อระบุตำแหน่งของคุณ"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ใช้ Assisted GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"ใช้เซิร์ฟเวอร์เพื่อช่วยเหลือ GPS (ทำเครื่องหมายเพื่อลดการใช้เครือข่าย)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"ใช้เซิร์ฟเวอร์เพื่อช่วย GPS (นำเครื่องหมายออกเพื่อให้ GPS ทำงานดีขึ้น)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ตำแหน่งและ Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"ให้ Google ใช้ตำแหน่งของคุณในการปรับปรุงผลการค้นหาและบริการอื่นๆ ให้ดียิ่งขึ้น"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ตำแหน่งและ /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"ให้ /e/ ใช้ตำแหน่งของคุณในการปรับปรุงผลการค้นหาและบริการอื่นๆ ให้ดียิ่งขึ้น"</string>
     <string name="location_access_title" msgid="7064108942964081243">"การเข้าถึงตำแหน่งของฉัน"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ให้แอปที่ขออนุญาตแล้วใช้ข้อมูลตำแหน่งของคุณได้"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ที่มาของตำแหน่ง"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"การตั้งค่าแอปพลิเคชัน"</string>
     <string name="install_applications" msgid="4872012136210802181">"ไม่รู้จักที่มา"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"อนุญาตให้ติดตั้งแอปจากทุกแห่ง"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"อนุญาตให้คุณติดตั้งแอปจากแหล่งต่างๆ นอกเหนือจาก Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"อนุญาตให้คุณติดตั้งแอปจากแหล่งต่างๆ นอกเหนือจาก /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"อนุญาตให้ติดตั้งแอปพลิเคชันจากแหล่งที่ไม่รู้จัก"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"แท็บเล็ตและข้อมูลส่วนบุคคลของคุณมีความเสี่ยงสูงยิ่งขึ้นที่จะถูกโจมตีโดยแอปพลิเคชันที่มาจากแหล่งที่ไม่รู้จัก คุณยอมรับว่าคุณเป็นผู้รับผิดชอบแต่เพียงผู้เดียวต่อความเสียหายของแท็บเล็ตหรือการสูญหายของข้อมูลที่อาจเป็นผลจากการใช้แอปพลิเคชันเหล่านี้"</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"โทรศัพท์และข้อมูลส่วนบุคคลของคุณมีความเสี่ยงยิ่งขึ้นที่จะถูกโจมตีจากแอปพลิเคชันที่ไม่รู้จักแหล่งที่มา คุณยอมรับว่าคุณจะเป็นผู้รับผิดชอบแต่เพียงผู้เดียวต่อความเสียหายใดๆ ที่เกิดกับโทรศัพท์หรือหรือการสูญเสียข้อมูลที่เป็นผลจากการใช้แอปพลิเคชันเหล่านี้"</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"การสำรองและคืนค่าข้อมูล"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ข้อมูลส่วนตัว"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"สำรองข้อมูลของฉัน"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"สำรองข้อมูลแอปพลิเคชัน รหัสผ่าน WiFi และการตั้งค่าอื่นๆ ลงในเซิร์ฟเวอร์ของ Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"สำรองข้อมูลแอปพลิเคชัน รหัสผ่าน WiFi และการตั้งค่าอื่นๆ ลงในเซิร์ฟเวอร์ของ /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"บัญชีข้อมูลสำรอง"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"รวมข้อมูลแอป"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"คืนค่าอัตโนมัติ"</string>
@@ -2043,9 +2043,9 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"บริการสำรองข้อมูลไม่มีการใช้งาน"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ไม่มีบัญชีใดในปัจจุบันที่จัดเก็บข้อมูลที่สำรองไว้"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"หยุดการสำรองข้อมูลรหัสผ่าน WiFi, บุ๊กมาร์ก, การตั้งค่าอื่นๆ และข้อมูลแอปพลิเคชัน รวมทั้งลบสำเนาทั้งหมดบนเซิร์ฟเวอร์ของ Google หรือไม่"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"หยุดการสำรองข้อมูลรหัสผ่าน WiFi, บุ๊กมาร์ก, การตั้งค่าอื่นๆ และข้อมูลแอปพลิเคชัน รวมทั้งลบสำเนาทั้งหมดบนเซิร์ฟเวอร์ของ /e/ หรือไม่"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"หยุดการสำรองข้อมูลอุปกรณ์ (เช่น รหัสผ่าน Wi-Fi และประวัติการโทร) และข้อมูลแอป (เช่น การตั้งค่าและไฟล์ที่แอปจัดเก็บไว้) พร้อมทั้งลบสำเนาทั้งหมดบนเซิร์ฟเวอร์ระยะไกลไหม"</string>
-    <string name="fullbackup_data_summary" msgid="960850365007767734">"สำรองข้อมูลในอุปกรณ์ (เช่น รหัสผ่าน Wi-Fi และประวัติการโทร) และข้อมูลแอป (เช่น การตั้งค่าและไฟล์ที่แอปจัดเก็บไว้) ลงใน Google ไดร์ฟจากระยะไกลโดยอัตโนมัติ\n\nเมื่อคุณเปิดเปิดการสำรองข้อมูลอัตโนมัติ ระบบจะบันทึกข้อมูลอุปกรณ์และข้อมูลแอปไปยังโฟลเดอร์ส่วนตัวใน Google ไดรฟ์เป็นระยะๆ ข้อมูลแอปอาจเป็นข้อมูลใดๆ ก็ตามที่แอปบันทึกไว้ (ตามการตั้งค่าของนักพัฒนาซอฟต์แวร์) ซึ่งรวมถึงข้อมูลที่อาจมีความละเอียดอ่อน เช่น รายชื่อติดต่อ ข้อความ และรูปภาพ"</string>
+    <string name="fullbackup_data_summary" msgid="960850365007767734">"สำรองข้อมูลในอุปกรณ์ (เช่น รหัสผ่าน Wi-Fi และประวัติการโทร) และข้อมูลแอป (เช่น การตั้งค่าและไฟล์ที่แอปจัดเก็บไว้) ลงใน /e/ ไดร์ฟจากระยะไกลโดยอัตโนมัติ\n\nเมื่อคุณเปิดเปิดการสำรองข้อมูลอัตโนมัติ ระบบจะบันทึกข้อมูลอุปกรณ์และข้อมูลแอปไปยังโฟลเดอร์ส่วนตัวใน /e/ ไดรฟ์เป็นระยะๆ ข้อมูลแอปอาจเป็นข้อมูลใดๆ ก็ตามที่แอปบันทึกไว้ (ตามการตั้งค่าของนักพัฒนาซอฟต์แวร์) ซึ่งรวมถึงข้อมูลที่อาจมีความละเอียดอ่อน เช่น รายชื่อติดต่อ ข้อความ และรูปภาพ"</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"การตั้งค่าการควบคุมอุปกรณ์"</string>
     <string name="active_device_admin_msg" msgid="6930903262612422111">"โปรแกรมควบคุมอุปกรณ์"</string>
     <string name="remove_device_admin" msgid="7736174723276745230">"ปิดใช้งานโปรแกรมควบคุมอุปกรณ์นี้"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ปฏิทิน"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"สมุดโทรศัพท์"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"ยินดีต้อนรับสู่ Google Sync!"</font>\n"วิธีการของ Google ในการซิงค์ข้อมูลเพื่อให้คุณเข้าถึงสมุดติดต่อ นัดหมาย และข้อมูลอื่นๆ ของคุณได้จากทุกที่"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"ยินดีต้อนรับสู่ /e/ Sync!"</font>\n"วิธีการของ /e/ ในการซิงค์ข้อมูลเพื่อให้คุณเข้าถึงสมุดติดต่อ นัดหมาย และข้อมูลอื่นๆ ของคุณได้จากทุกที่"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"การตั้งค่าการซิงค์แอปพลิเคชัน"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ข้อมูลและการซิงค์"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"เปลี่ยนรหัสผ่าน"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"คุณลักษณะนี้อาจทำให้แอปที่พึ่งข้อมูลแบ็กกราวด์หยุดการทำงานเมื่อมีเพียงเครือข่ายมือถือที่สามารถใช้ได้\n\nคุณสามารถดูการควบคุมการใช้ข้อมูลที่เหมาะสมเพิ่มเติมในการตั้งค่าที่มีอยู่ในแอป"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"การจำกัดข้อมูลแบ็กกราวด์ทำได้เมื่อคุณได้ตั้งค่าขีดจำกัดข้อมูลมือถือไว้เท่านั้น"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"เปิดซิงค์ข้อมูลอัตโนมัติหรือไม่"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"การเปลี่ยนแปลงใดๆ ที่คุณทำกับบัญชีของคุณบนเว็บจะมีการคัดลอกไปยังแท็บเล็ตโดยอัตโนมัติ\n\nบางบัญชีอาจคัดลอกการเปลี่ยนแปลงที่คุณทำบนแท็บเล็ตไปยังเว็บโดยอัตโนมัติ นี่คือการทำงานของบัญชี Google"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"การเปลี่ยนแปลงใดๆ ที่คุณทำกับบัญชีของคุณบนเว็บจะมีการคัดลอกไปยังโทรศัพท์โดยอัตโนมัติ\n\nบางบัญชีอาจคัดลอกการเปลี่ยนแปลงที่คุณทำบนโทรศัพท์ไปยังเว็บโดยอัตโนมัติ นี่คือการทำงานของบัญชี Google"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"การเปลี่ยนแปลงใดๆ ที่คุณทำกับบัญชีของคุณบนเว็บจะมีการคัดลอกไปยังแท็บเล็ตโดยอัตโนมัติ\n\nบางบัญชีอาจคัดลอกการเปลี่ยนแปลงที่คุณทำบนแท็บเล็ตไปยังเว็บโดยอัตโนมัติ นี่คือการทำงานของบัญชี /e/"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"การเปลี่ยนแปลงใดๆ ที่คุณทำกับบัญชีของคุณบนเว็บจะมีการคัดลอกไปยังโทรศัพท์โดยอัตโนมัติ\n\nบางบัญชีอาจคัดลอกการเปลี่ยนแปลงที่คุณทำบนโทรศัพท์ไปยังเว็บโดยอัตโนมัติ นี่คือการทำงานของบัญชี /e/"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ปิดซิงค์ข้อมูลอัตโนมัติหรือไม่"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"การกระทำดังกล่าวจะเป็นการประหยัดปริมาณการใช้อินเทอร์เน็ตและแบตเตอรี่ แต่คุณจะต้องซิงค์แต่ละบัญชีด้วยตนเองเพื่อรวบรวมข้อมูลล่าสุด และคุณจะไม่ได้รับการแจ้งเตือนเมื่อมีการอัปเดต"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"วันที่รีเซ็ตรอบการใช้"</string>
