--- a/res/values-bn-rBD/strings.xml
+++ b/res/values-bn-rBD/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"সতর্কতা: আনলক করার আরো <xliff:g id="COUNT">^1</xliff:g>টি ব্যর্থ প্রচেষ্টার পর আপনার ডিভাইস সাফ করে ফেলা হবে।"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"আপনার পাসওয়ার্ড টাইপ করুন"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"এনক্রিপশান অসফল"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ট্যাবলেটে আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ট্যাবলেট ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ট্যাবলেট সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ফোনে  আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ফোন ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ট্যাবলেটে আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ট্যাবলেট ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ট্যাবলেট সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ফোনে  আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ফোন ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ডিক্রিপশন সফল হয়নি"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ট্যাবলেট ব্যবহার করা পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ফোন ব্যবহার করা পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ট্যাবলেট ব্যবহার করা পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ফোন ব্যবহার করা পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। পুনরায় সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ইনপুট পদ্ধতি পরিবর্তন করুন"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"স্ক্রীন লক সেট করুন"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"আপনার ডিভাইস সুরক্ষিত করুন"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"নেটওয়ার্ক সেটিংস পুনরায় সেট করা হয়েছে"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ডিভাইসটি পুনরায় সেট করুন"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ফ্যাক্টরি ডেটা পুনরায় সেট করুন"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>" থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ: \n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>" থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ: \n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"আপনি বর্তমানে নিম্নলিখিত অ্যাকাউন্টে প্রবেশ করুন করে আছেন:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"এই ডিভাইসে অন্যান্য ব্যবহারকারীরাও রয়েছেন৷\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"সঙ্গীত"</li>\n<li>"ফটো"</li>\n<li>"অন্যান্য ব্যবহারকারী ডেটা"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ব্লুটুথ স্ক্যানিং"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"যে কোনো সময়ে ব্লুটুথ ডিভাইসগুলিকে সনাক্ত করার জন্য সিস্টেম অ্যাপ্লিকেশান এবং পরিষেবাগুলিকে অনুমতি দিয়ে অবস্থান উন্নত করুন।"</string>
     <string name="location_network_based" msgid="6010456018401296590">"ওয়াই-ফাই ও সেলুলার নেটওয়ার্ক অবস্থান"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"দ্রুত আপনার অবস্থান নির্ধারণ করতে অ্যাপ্লিকেশানগুলিকে Google অবস্থান পরিষেবা ব্যবহার করতে দিন। বেনামী অবস্থান ডেটা সংগ্রহ করা হবে এবং Google এ পাঠানো হবে।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"দ্রুত আপনার অবস্থান নির্ধারণ করতে অ্যাপ্লিকেশানগুলিকে /e/ অবস্থান পরিষেবা ব্যবহার করতে দিন। বেনামী অবস্থান ডেটা সংগ্রহ করা হবে এবং /e/ এ পাঠানো হবে।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ওয়াই-ফাই দ্বারা অবস্থান নির্ণয় করা হয়েছে"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS উপগ্রহ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"আপনার অবস্থান উৎস সন্ধান করতে আপনার ট্যাবলেটের অ্যাপ্লিকেশানগুলিকে GPS ব্যবহার করতে দিন"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"সহায়কযুক্ত GPS ব্যবহার করুন"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS সহায়তার জন্য সার্ভার ব্যবহার করুন (নেটওয়ার্ক ব্যবহার কমাতে টিক চিহ্নটি তুলে দিন)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS সহায়তার জন্য সার্ভার ব্যবহার করুন (GPS কর্মক্ষমতার উন্নতি করতে টিক চিহ্নটি তুলে দিন)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"অবস্থান ও Google অনুসন্ধান"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"অনুসন্ধান ফলাফল এবং অন্যান্য পরিষেবাগুলি উন্নত করার জন্য Google কে আপনার অবস্থান ব্যবহার করতে দিন"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"অবস্থান ও /e/ অনুসন্ধান"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"অনুসন্ধান ফলাফল এবং অন্যান্য পরিষেবাগুলি উন্নত করার জন্য /e/ কে আপনার অবস্থান ব্যবহার করতে দিন"</string>
     <string name="location_access_title" msgid="7064108942964081243">"আমার অবস্থানে অ্যাক্সেস"</string>
     <string name="location_access_summary" msgid="69031404093194341">"যে অ্যাপ্লিকেশানগুলি আপনার অবস্থান তথ্য ব্যবহার করার অনুমতি চেয়েছে তাদেরকে অনুমতি দিন"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"অবস্থান উৎসগুলি"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"অ্যাপ্লিকেশান সেটিংস"</string>
     <string name="install_applications" msgid="4872012136210802181">"অজানা উৎসগুলি"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"সব অ্যাপ্লিকেশান উৎসকে অনুমতি দিন"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"আপনাকে Google Play ছাড়া অন্যান্য উৎস থেকে অ্যাপ্লিকেশান ইনস্টল করতে দেয়"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"আপনাকে /e/ Play ছাড়া অন্যান্য উৎস থেকে অ্যাপ্লিকেশান ইনস্টল করতে দেয়"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"অজানা উত্স থেকে অ্যাপ্লিকেশান ইনস্টল করার অনুমতি দিন"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"আপনার ট্যাবলেট এবং ব্যক্তিগত তথ্য অজানা উৎস থেকে অ্যাপ্লিকেশানগুলির দ্বারা আক্রান্ত হওয়ার সম্ভাবনা বেশি থাকে। এই অ্যাপ্লিকেশানগুলির ব্যবহার থেকে আপনার ট্যাবলেট বা ডেটার হতে পারে এমন যে কোনো ক্ষতির জন্য একমাত্র আপনিই যে দায়ী থাকবেন তাতে আপনি সম্মতি জানাচ্ছেন।"</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"আপনার ফোন এবং ব্যক্তিগত তথ্য অজানা উৎসের অ্যাপ্লিকেশানগুলির দ্বারা আক্রান্ত হওয়ার সম্ভাবনা বেশি। এই অ্যাপ্লিকেশানগুলি ব্যবহার থেকে আপনার ফোনের বা ডেটার হতে পারে এমন যে কোনো ক্ষতির জন্য একমাত্র আপনিই যে দায়ী থাকবেন তাতে আপনি সম্মতি জানাচ্ছেন।"</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ব্যাকআপ ও পুনরুদ্ধার"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ব্যক্তিগত ডেটা"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"আমার তথ্য ব্যাকআপ করুন"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"অ্যাপ্লিকেশান ডেটা,  ওয়াই-ফাই পাসওয়ার্ড, এবং অন্যান্য সেটিংস Google সার্ভারে ব্যাকআপ নিন"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"অ্যাপ্লিকেশান ডেটা,  ওয়াই-ফাই পাসওয়ার্ড, এবং অন্যান্য সেটিংস /e/ সার্ভারে ব্যাকআপ নিন"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ব্যাকআপ অ্যাকাউন্ট"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"অ্যাপ্লিকেশান ডেটা অন্তর্ভুক্ত করুন"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"স্বয়ংক্রিয়ভাবে পুনঃস্থাপন করুন"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"ব্যাকআপ পরিষেবা নিষ্ক্রিয় রয়েছে৷"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"কোনো অ্যাকাউন্ট বর্তমানে ব্যাক আপ ডেটা সংরক্ষণ করছে না"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপনার ওয়াই-ফাই পাসওয়ার্ড, বুকমার্ক, অন্যান্য সেটিংস, এবং অ্যাপ্লিকেশান ডেটা ব্যাক আপ করা বন্ধ করুন, এছাড়াও Google সার্ভারগুলিতে সব অনুলিপি মুছে ফেলতে চান?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপনার ওয়াই-ফাই পাসওয়ার্ড, বুকমার্ক, অন্যান্য সেটিংস, এবং অ্যাপ্লিকেশান ডেটা ব্যাক আপ করা বন্ধ করুন, এছাড়াও /e/ সার্ভারগুলিতে সব অনুলিপি মুছে ফেলতে চান?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ডিভাইস ডেটা (যেমন ওয়াই-ফাই এর পাসওয়ার্ড এবং কলের ইতিহাস) এবং অ্যাপ্লিকেশান ডেটা (যেমন অ্যাপ্লিকেশানগুলির দ্বারা সংরক্ষিত সেটিংস এবং ফাইলগুলি) এর ব্যাক আপ নেওয়া বন্ধ করবেন, তার সাথে দূরবর্তী সার্ভারে সমস্ত প্রতিলিপি মুছবেন?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"দূরবর্তীভাবে ডিভাইস ডেটার (যেমন, ওয়াই-ফাই এর পাসওয়ার্ডগুলি এবং কলের ইতিহাস) এবং অ্যাপ্লিকেশান ডেটার (যেমন অ্যাপ্লিকেশানগুলির দ্বারা সঞ্চিত সেটিংস এবং ফাইলগুলি)স্বয়ংক্রিয়ভাবে ব্যাক আপ নেওয়া হয়৷\n\nআপনি যখন স্বয়ংক্রিয় ব্যাক আপ চালু করুন তখন দূরবর্তীভাবে ডিভাইস এবং অ্যাপ্লিকেশানের ডেটা পর্যায়ক্রমে সংরক্ষিত হয়৷ অ্যাপ্লিকেশান ডেটা যেকোনো ডেটা হতে পারে যা অ্যাপ্লিকেশান সংরক্ষণ করে (বিকাশকারীর সেটিংস-এর উপর ভিত্তি করে), পরিচিতি, বার্তা এবং ফটোগুলির মত সম্ভাব্য সংবেদনশীল ডেটা অন্তর্ভুক্ত করে৷"</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"ডিভাইস প্রশাসন সেটিংস"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ক্যালেন্ডার"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"পরিচিতিগুলি"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google সমন্বয়ে স্বাগতম!"</font>" \nআপনি যেখানেই থাকুন না কেন আপনার পরিচিতি, অ্যাপয়েন্টমেন্ট, এবং আরো অনেক কিছু অ্যাক্সেস করার জন্য ডেটা সিঙ্ক করতে একটি Google এর একটি পদক্ষেপ।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ সমন্বয়ে স্বাগতম!"</font>" \nআপনি যেখানেই থাকুন না কেন আপনার পরিচিতি, অ্যাপয়েন্টমেন্ট, এবং আরো অনেক কিছু অ্যাক্সেস করার জন্য ডেটা সিঙ্ক করতে একটি /e/ এর একটি পদক্ষেপ।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"অ্যাপ্লিকেশান সমন্বয় সেটিংস"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ডেটা ও সমন্বয়"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"পাসওয়ার্ড পরিবর্তন করুন"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"সেলুলার নেটওয়ার্ক উপলব্ধ থাকা অবস্থায় এই বৈশিষ্ট্যটি পটভূমি ডেটার উপর নির্ভরশীল কোনো অ্যাপ্লিকশানের কাজ করা বন্ধ করতে পারে।\n \nআপনি অ্যাপ্লিকেশনের ভেতরে উপলব্ধ সেটিংসে ডেটা ব্যবহার নিয়ন্ত্রণের আরো উপযুক্ত উপায় পেতে পারেন।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"আপনি কোনো সেলুলার ডেটা সীমা সেট করলেই কেবল পটভূমি ডেটা বিধিনিষেধযুক্ত করা সম্ভব।"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ডেটা স্বতঃ সিঙ্ক চালু করবেন?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি স্বয়ংক্রিয়ভাবে আপনার ট্যাবলেটে অনুলিপি করা হবে।\n\nকোনো কোনো অ্যাকাউন্ট আপনার ট্যাবলেটে করা পরিবর্তনগুলি স্বয়ংক্রিয়ভাবে ওয়েবে অনুলিপি করতে পারবে। Google অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি স্বয়ংক্রিয়ভাবে আপনার ফোনে অনুলিপি করা হবে।\n\nকোনো কোনো অ্যাকাউন্ট আপনার ফোনে করা পরিবর্তনগুলি স্বয়ংক্রিয়ভাবে ওয়েবে অনুলিপি করতে পারবে। Google অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি স্বয়ংক্রিয়ভাবে আপনার ট্যাবলেটে অনুলিপি করা হবে।\n\nকোনো কোনো অ্যাকাউন্ট আপনার ট্যাবলেটে করা পরিবর্তনগুলি স্বয়ংক্রিয়ভাবে ওয়েবে অনুলিপি করতে পারবে। /e/ অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি স্বয়ংক্রিয়ভাবে আপনার ফোনে অনুলিপি করা হবে।\n\nকোনো কোনো অ্যাকাউন্ট আপনার ফোনে করা পরিবর্তনগুলি স্বয়ংক্রিয়ভাবে ওয়েবে অনুলিপি করতে পারবে। /e/ অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ডেটা স্বতঃ সিঙ্ক বন্ধ করবেন?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"এটি ডেটা এবং ব্যাটারি ব্যবহার সংরক্ষণ করবে, কিন্তু আপনাকে সাম্প্রতিক তথ্য সংগ্রহ করতে ম্যানুয়ালি প্রতিটি অ্যাকাউন্ট সিঙ্ক করতে হবে। আপডেট হলে আপনি তখন বিজ্ঞপ্তি পাবেন না।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ব্যবহার চক্র পুনরায় সেট করার তারিখ"</string>
