--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Warning: Your device will be wiped after <xliff:g id="COUNT">^1</xliff:g> more failed attempts to be unlocked!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Type your password"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Encryption unsuccessful"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Encryption was interrupted and can\'t be completed. As a result, the data on your tablet is no longer accessible. \n\n To resume using your tablet, you need to perform a factory reset. When you set up your tablet after the reset, you\'ll have an opportunity to restore any data that was backed up to your Google Account."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Encryption was interrupted and can\'t be completed. As a result, the data on your phone is no longer accessible. \n\nTo resume using your phone, you need to perform a factory reset. When you set up your phone after the reset, you\'ll have an opportunity to restore any data that was backed up to your Google Account."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Encryption was interrupted and can\'t be completed. As a result, the data on your tablet is no longer accessible. \n\n To resume using your tablet, you need to perform a factory reset. When you set up your tablet after the reset, you\'ll have an opportunity to restore any data that was backed up to your /e/ Account."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Encryption was interrupted and can\'t be completed. As a result, the data on your phone is no longer accessible. \n\nTo resume using your phone, you need to perform a factory reset. When you set up your phone after the reset, you\'ll have an opportunity to restore any data that was backed up to your /e/ Account."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Decryption unsuccessful"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"The password that you entered is correct, but unfortunately your data is corrupt. \n\nTo resume using your tablet, you will need to perform a factory reset. When you set up your tablet after the reset, you\'ll have an opportunity to restore any data that was backed up to your Google Account."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"The password that you entered is correct, but unfortunately your data is corrupt. \n\nTo resume using your phone, you need to perform a factory reset. When you set up your phone after the reset, you’ll have an opportunity to restore any data that was backed up to your Google Account."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"The password that you entered is correct, but unfortunately your data is corrupt. \n\nTo resume using your tablet, you will need to perform a factory reset. When you set up your tablet after the reset, you\'ll have an opportunity to restore any data that was backed up to your /e/ Account."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"The password that you entered is correct, but unfortunately your data is corrupt. \n\nTo resume using your phone, you need to perform a factory reset. When you set up your phone after the reset, you’ll have an opportunity to restore any data that was backed up to your /e/ Account."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Switch input method"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Set screen lock"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Protect your device"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Network settings have been reset"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Reset device"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Factory data reset"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"This will erase all data from your tablet\'s "<b>"internal storage"</b>", including:\n\n"<li>"Your Google account"</li>\n<li>"System and app data and settings"</li>\n<li>"Downloaded apps"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"This will erase all data from your phone\'s "<b>"internal storage"</b>", including:\n\n"<li>"Your Google account"</li>\n<li>"System and app data and settings"</li>\n<li>"Downloaded apps"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"This will erase all data from your tablet\'s "<b>"internal storage"</b>", including:\n\n"<li>"Your /e/ account"</li>\n<li>"System and app data and settings"</li>\n<li>"Downloaded apps"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"This will erase all data from your phone\'s "<b>"internal storage"</b>", including:\n\n"<li>"Your /e/ account"</li>\n<li>"System and app data and settings"</li>\n<li>"Downloaded apps"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"You are currently signed in to the following accounts:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"There are other users present on this device.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Music"</li>\n<li>"Photos"</li>\n<li>"Other user data"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth scanning"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Improve location by allowing system apps and services to detect Bluetooth devices at any time."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi &amp; mobile network location"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Let apps use Google\'s location service to estimate your location faster. Anonymous location data will be collected and sent to Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Let apps use /e/\'s location service to estimate your location faster. Anonymous location data will be collected and sent to /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Location determined by Wi‑Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS satellites"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Let apps use GPS on your tablet to pinpoint your location"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Use assisted GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Use server to assist GPS (un-tick to reduce network usage)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Use server to assist GPS (un-tick to improve GPS performance)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Location &amp; Google search"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Let Google use your location to improve search results and other services"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Location &amp; /e/ search"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Let /e/ use your location to improve search results and other services"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Access to my location"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Let apps that have asked your permission use your location information"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Location sources"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"App settings"</string>
     <string name="install_applications" msgid="4872012136210802181">"Unknown sources"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Allow all app sources"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lets you install apps from sources other than Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lets you install apps from sources other than /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Allow installation of apps from unknown sources"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Your tablet and personal data are more vulnerable to attack by apps from unknown sources. You agree that you are solely responsible for any damage to your tablet or loss of data that may result from using these apps."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Your phone and personal data are more vulnerable to attack by apps from unknown sources. You agree that you are solely responsible for any damage to your phone or loss of data that may result from using these apps."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Backup &amp; restore"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Personal data"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Back up my data"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Back up app data, Wi‑Fi passwords and other settings to Google servers"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Back up app data, Wi‑Fi passwords and other settings to /e/ servers"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Backup account"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Include app data"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Automatic restore"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Backup service is inactive."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"No account is currently storing backed up data"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Stop backing up your Wi‑Fi passwords, bookmarks, other settings and app data, plus erase all copies on Google servers?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Stop backing up your Wi‑Fi passwords, bookmarks, other settings and app data, plus erase all copies on /e/ servers?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Stop backing up device data (such as Wi-Fi passwords and call history) and app data (such as settings and files stored by apps), plus erase all copies on remote servers?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Automatically back up device data (such as Wi-Fi passwords and call history) and app data (such as settings and files stored by apps) remotely.\n\nWhen you turn on automatic backup, device and app data is periodically saved remotely. App data can be any data that an app has saved (based on developer settings), including potentially sensitive data such as contacts, messages and photos."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Device administration settings"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Calendar"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Contacts"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welcome to Google sync!"</font>" \nA Google approach to syncing data to allow access to your contacts, appointments and more from wherever you are."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welcome to /e/ sync!"</font>" \nA /e/ approach to syncing data to allow access to your contacts, appointments and more from wherever you are."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"App sync settings"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Data &amp; synchronisation"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Change password"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"This feature may cause an app that depends on background data to stop working when only mobile networks are available.\n\nYou can find more appropriate data usage controls in the settings available within the app."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Restricting background data is possible only when you\'ve set a mobile data limit."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Turn auto-sync data on?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Any changes that you make to your accounts on the web will be automatically copied to your tablet.\n\nSome accounts may also automatically copy any changes that you make on the tablet to the web. A Google account works this way."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Any changes that you make to your accounts on the web will be automatically copied to your phone.\n\nSome accounts may also automatically copy any changes that you make on the phone to the web. A Google account works this way."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Any changes that you make to your accounts on the web will be automatically copied to your tablet.\n\nSome accounts may also automatically copy any changes that you make on the tablet to the web. A /e/ account works this way."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Any changes that you make to your accounts on the web will be automatically copied to your phone.\n\nSome accounts may also automatically copy any changes that you make on the phone to the web. A /e/ account works this way."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Turn auto-sync data off?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"This will conserve data and battery usage, but you\'ll need to sync each account manually to collect recent information and you won\'t receive notifications when updates occur."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Usage cycle reset date"</string>
