--- a/res/values-et-rEE/strings.xml
+++ b/res/values-et-rEE/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Hoiatus! Kui veel <xliff:g id="COUNT">^1</xliff:g> avamiskatset ebaõnnestub, siis seade tühjendatakse."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Sisestage parool"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Krüptimine ebaõnnestus"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Krüpteerimine katkestati ja seda ei saa lõpule viia. Seetõttu ei pääse te enam oma tahvelarvutis olevatele andmetele juurde. \n\n Tahvelarvuti kasutamise jätkamiseks peate lähtestama selle tehaseseadetele. Kui seadistate tahvelarvutit pärast lähtestamist, saate taastada kõik andmed, mis olid varundatud teie Google\'i kontole."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Krüpteerimine katkestati ja seda ei saa lõpule viia. Seetõttu ei pääse te enam oma telefonis olevatele andmetele juurde. \n\nTelefoni kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate telefoni pärast lähtestamist, saate taastada kõik andmed, mis olid varundatud teie Google\'i kontole."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Krüpteerimine katkestati ja seda ei saa lõpule viia. Seetõttu ei pääse te enam oma tahvelarvutis olevatele andmetele juurde. \n\n Tahvelarvuti kasutamise jätkamiseks peate lähtestama selle tehaseseadetele. Kui seadistate tahvelarvutit pärast lähtestamist, saate taastada kõik andmed, mis olid varundatud teie /e/\'i kontole."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Krüpteerimine katkestati ja seda ei saa lõpule viia. Seetõttu ei pääse te enam oma telefonis olevatele andmetele juurde. \n\nTelefoni kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate telefoni pärast lähtestamist, saate taastada kõik andmed, mis olid varundatud teie /e/\'i kontole."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Dekrüpteerimine ebaõnnestus"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Sisestatud parool on õige, kuid kahjuks on andmed rikutud. \n\nTahvelarvuti kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate tahvelarvuti pärast lähtestamist, saate taastada kõik andmed, mis on varundatud teie Google\'i kontole."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Sisestatud parool on õige, kuid kahjuks on andmed rikutud. \n\nTelefoni kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate telefoni pärast lähtestamist, saate taastada kõik andmed, mis on varundatud teie Google\'i kontole."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Sisestatud parool on õige, kuid kahjuks on andmed rikutud. \n\nTahvelarvuti kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate tahvelarvuti pärast lähtestamist, saate taastada kõik andmed, mis on varundatud teie /e/\'i kontole."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Sisestatud parool on õige, kuid kahjuks on andmed rikutud. \n\nTelefoni kasutamise jätkamiseks peate selle lähtestama tehaseseadetele. Kui seadistate telefoni pärast lähtestamist, saate taastada kõik andmed, mis on varundatud teie /e/\'i kontole."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Sisestusmeetodi vahetamine"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Ekraaniluku seadistamine"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Seadme kaitsmine"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Võrguseaded lähtestati"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Lähtesta seade"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Tehaseandmete lähtestamine"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"See kustutab kõik andmed teie tahvelarvuti "<b>"sisemälust"</b>", sh:\n\n"<li>"teie Google\'i konto"</li>\n<li>"süsteemi ja rakenduste andmed ning seaded"</li>\n<li>"Allalaaditud rakendused"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"See kustutab kõik andmed telefoni "<b>"sisemälust"</b>", sh:\n\n"<li>"teie Google\'i konto"</li>\n<li>"süsteemi ja rakenduse andmed ning seaded"</li>\n<li>"Allalaaditud rakendused"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"See kustutab kõik andmed teie tahvelarvuti "<b>"sisemälust"</b>", sh:\n\n"<li>"teie /e/\'i konto"</li>\n<li>"süsteemi ja rakenduste andmed ning seaded"</li>\n<li>"Allalaaditud rakendused"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"See kustutab kõik andmed telefoni "<b>"sisemälust"</b>", sh:\n\n"<li>"teie /e/\'i konto"</li>\n<li>"süsteemi ja rakenduse andmed ning seaded"</li>\n<li>"Allalaaditud rakendused"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Olete praegu sisse logitud järgmistele kontodele:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Seadmes on teisi kasutajaid.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muusika"</li>\n<li>"Fotod"</li>\n<li>"Muud kasutajaandmed"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetoothi skannimine"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Parandab asukoha täpsust, lubades süsteemirakendustel ja -teenustel mis tahes ajal tuvastada Bluetoothi seadmeid."</string>
     <string name="location_network_based" msgid="6010456018401296590">"WiFi/mobiilsidevõrgu asukoht"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Lubage rakendustel kasutada Google\'i asukohateenust, et asukohta kiiremini määrata. Kogutud anonüümsed asukohaandmed saadetakse Google\'ile."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Lubage rakendustel kasutada /e/\'i asukohateenust, et asukohta kiiremini määrata. Kogutud anonüümsed asukohaandmed saadetakse /e/\'ile."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"WiFi järgi määratud asukoht"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS-i satelliidid"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Lubage rakendustel tahvelarvuti GPS-i abil teie asukohta määrata"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Kasuta abistatud GPS-i"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Kasuta serverit GPS-i abistamiseks (eemaldage märge võrgukasutuse vähendamiseks)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Kasutage serverit GPS-i assisteerimiseks (eemaldage märge GPS-i toimivuse parandamiseks)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Asukoht ja Google\'i otsing"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Lubage Google\'il otsingutulemuste ja muude teenuste parandamiseks kasutada teie asukohta"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Asukoht ja /e/\'i otsing"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Lubage /e/\'il otsingutulemuste ja muude teenuste parandamiseks kasutada teie asukohta"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Juurdepääs minu asukohale"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Laske rakendustel, mis on palunud teie luba, kasutada teie asukohateavet"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Asukohaallikad"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Rakenduse seaded"</string>
     <string name="install_applications" msgid="4872012136210802181">"Tundmatud allikad"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Luba kõik rakenduse allikad"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lubab installida rakendusi muudest allikatest kui Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lubab installida rakendusi muudest allikatest kui /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Luba tundmatutest allikatest pärinevate rakenduste installimine"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Teie tahvelarvuti ja isikuandmed on haavatavamad rünnakutele rakenduste kaudu, mis pärinevad tundmatutest allikatest. Nõustute, et olete ainuisikuliselt vastutav tahvelarvuti kahjustuste või andmekao eest, mis võivad tuleneda nende rakenduste kasutamisest."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Telefon ja isiklikud andmed on rünnakute suhtes haavatavamad tundmatutest allikatest pärit rakenduste kaudu. Nõustute, et olete ainuisikuliselt vastutav telefoni kahjustuste või andmekao eest, mis võivad tuleneda nende rakenduste kasutusest."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Varundamine ja taastamine"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Isikuandmed"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Minu andmete varundamine"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Varundage rakenduse andmed, WiFi-paroolid ja muud seaded Google\'i serverites"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Varundage rakenduse andmed, WiFi-paroolid ja muud seaded /e/\'i serverites"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Varukonto"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Kaasa rakenduse andmed"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Automaatne taastamine"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Varundamisteenus ei ole aktiivne."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Ühelegi kontole ei ole praegu salvestatud varundatud andmeid"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Kas soovite WiFi-paroolide, järjehoidjate, muude seadete ja rakenduse andmete varundamise lõpetada ja kõik Google\'i serverites olevad koopiad kustutada?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Kas soovite WiFi-paroolide, järjehoidjate, muude seadete ja rakenduse andmete varundamise lõpetada ja kõik /e/\'i serverites olevad koopiad kustutada?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Kas soovite peatada seadme andmete (nt WiFi-paroolid ja kõneajalugu) ning rakenduse andmete (nt seaded ja rakenduste salvestatud failid) varundamise ning kustutada kõik kaugserverites olevad koopiad?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Varundage seadme andmed (nt WiFi-paroolid ja kõneajalugu) ning rakenduse andmed (nt seaded ja rakenduste salvestatud failid) kaugjuhtimisega automaatselt.\n\nKui lülitate automaatse varundamise sisse, salvestatakse seadme ja rakenduse andmed regulaarselt kaugjuhtimisega. Rakenduse andmed võivad olla mis tahes andmed, mille rakendus on salvestanud (arendaja seadete põhjal), sh potentsiaalselt tundlikud andmed, nagu kontaktid, sõnumid ja fotod."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Seadme haldusseaded"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalender"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontaktid"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Tere tulemast Google Synci!"</font>" \nSee on Google\'i meetod andmete sünkroonimiseks, mis tagab teile kõikjal juurdepääsu kontaktisikutele, kokkusaamistele ja muule."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Tere tulemast /e/ Synci!"</font>" \nSee on /e/\'i meetod andmete sünkroonimiseks, mis tagab teile kõikjal juurdepääsu kontaktisikutele, kokkusaamistele ja muule."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Rakenduse sünkroonimisseaded"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Andmed ja sünkroonimine"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Parooli muutmine"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Kui saadaval on ainult mobiilsidevõrgud, võib taustaandmeid kasutav rakendus selle funktsiooni tõttu lakata töötamast.\n\nVõite leida sobivamad andmekasutuse juhtimisvõimalused rakenduse seadetest."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Taustandmete piiramine on võimalik vaid juhul, kui olete määranud mobiilse andmeside piirangu."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Kas lülitan andmete automaatse sünkroonimise sisse?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Veebis kontodel tehtud muudatused kopeeritakse automaatselt teie tahvelarvutisse.\n\nMõned kontod võivad ka kõik tahvelarvutis tehtud muudatused automaatselt veebi kopeerida. Google\'i konto toimib sellisel viisil."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Veebis kontodel tehtud muudatused kopeeritakse automaatselt teie telefoni.\n\nMõned kontod võivad ka kõik telefonis tehtud muudatused automaatselt veebi kopeerida. Google\'i konto toimib sellisel viisil."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Veebis kontodel tehtud muudatused kopeeritakse automaatselt teie tahvelarvutisse.\n\nMõned kontod võivad ka kõik tahvelarvutis tehtud muudatused automaatselt veebi kopeerida. /e/\'i konto toimib sellisel viisil."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Veebis kontodel tehtud muudatused kopeeritakse automaatselt teie telefoni.\n\nMõned kontod võivad ka kõik telefonis tehtud muudatused automaatselt veebi kopeerida. /e/\'i konto toimib sellisel viisil."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Kas lülitan andmete automaatse sünkroonimise välja?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"See säästab andmeside mahu ja aku kasutust, kuid teil tuleb hiljutise teabe hankimiseks sünkroonida iga konto eraldi ja värskenduste ilmumisel ei kuvata märguandeid."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Kasutustsükli lähtestuskuupäev"</string>
