--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"चेतावनी: अनलॉक किए जाने के <xliff:g id="COUNT">^1</xliff:g> और विफल प्रयासों के बाद आपका डिवाइस हटा दिया जाएगा!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"अपना पासवर्ड लिखें"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"एन्क्रिप्‍शन विफल"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"एन्‍क्रिप्‍शन बाधित किया था और पूर्ण नहीं हो सकता. परिणामस्‍वरूप, आपके टेबलेट का डेटा अब पहुंच योग्‍य नहीं है. \n\n अपने टेबलेट का उपयोग फिर से शुरू करने के लिए, आपको फ़ैक्‍टरी रीसेट करना होगा. जब आप रीसेट करने के बाद अपना टेबलेट सेट करते हैं, तो आप अपने Google खाते पर बैकअप लिए गए किसी भी डेटा को पुनर्स्थापित कर सकेंगे."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"एन्‍क्रिप्‍शन बाधित था और पूर्ण नहीं हो सकता. इसके परिणामस्‍वरूप, आपके फ़ोन का डेटा अब पहुंच योग्‍य नहीं है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए, आपको फ़ैक्‍टरी रीसेट करना होगा. जब आप रीसेट करने के बाद अपना फ़ोन सेट करते हैं, तो आप अपने Google खाते पर बैकअप लिए गए किसी भी डेटा को पुनर्स्थापित कर सकेंगे."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"एन्‍क्रिप्‍शन बाधित किया था और पूर्ण नहीं हो सकता. परिणामस्‍वरूप, आपके टेबलेट का डेटा अब पहुंच योग्‍य नहीं है. \n\n अपने टेबलेट का उपयोग फिर से शुरू करने के लिए, आपको फ़ैक्‍टरी रीसेट करना होगा. जब आप रीसेट करने के बाद अपना टेबलेट सेट करते हैं, तो आप अपने /e/ खाते पर बैकअप लिए गए किसी भी डेटा को पुनर्स्थापित कर सकेंगे."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"एन्‍क्रिप्‍शन बाधित था और पूर्ण नहीं हो सकता. इसके परिणामस्‍वरूप, आपके फ़ोन का डेटा अब पहुंच योग्‍य नहीं है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए, आपको फ़ैक्‍टरी रीसेट करना होगा. जब आप रीसेट करने के बाद अपना फ़ोन सेट करते हैं, तो आप अपने /e/ खाते पर बैकअप लिए गए किसी भी डेटा को पुनर्स्थापित कर सकेंगे."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"डीक्रिप्‍शन असफल"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने टैबलेट का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना टैबलेट रीसेट करते हैं, तो आपके पास अपने Google खाते में बैकअप लिए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना फ़ोन सेट करते हैं, तो आपके पास अपने Google खाते में बैकअप किए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने टैबलेट का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना टैबलेट रीसेट करते हैं, तो आपके पास अपने /e/ खाते में बैकअप लिए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना फ़ोन सेट करते हैं, तो आपके पास अपने /e/ खाते में बैकअप किए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"इनपुट पद्धति‍ स्विच करें"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"स्‍क्रीन लॉक सेट करना"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"अपने डिवाइस की सुरक्षा करें"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"नेटवर्क सेटिंग रीसेट कर दी गई हैं"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"डिवाइस रीसेट करें"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"फ़ैक्टरी डेटा रीसेट"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टेबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टेबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आप वर्तमान में निम्‍न खातों में प्रवेश हैं:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"इस डिवाइस पर अन्‍य उपयोगकर्ता मौजूद हैं.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फ़ोटो"</li>\n<li>"अन्‍य उपयोगकर्ता डेटा"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ब्‍लूटूथ स्‍कैन करना"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"सिस्‍टम ऐप्‍स और सेवाओं को किसी भी समय ब्‍लूटूथ डिवाइसों का पता लगाने देकर स्‍थान को बेहतर बनाएं."</string>
     <string name="location_network_based" msgid="6010456018401296590">"वाई-फ़ाई और सेल्युलर नेटवर्क स्थान"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपके स्थान का तेज़ अनुमान लगाने के लिए, ऐप्स को Google की स्थानीय सेवा का उपयोग करने दें. अज्ञात स्थानीय डेटा एकत्रित करके Google को भेजा जाएगा."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपके स्थान का तेज़ अनुमान लगाने के लिए, ऐप्स को /e/ की स्थानीय सेवा का उपयोग करने दें. अज्ञात स्थानीय डेटा एकत्रित करके /e/ को भेजा जाएगा."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"वाई-फ़ाई  द्वारा निर्धारित किया गया स्‍थान"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS उपग्रह"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"आपके स्थान का पता लगाने के लिए, ऐप्स  को आपके टेबलेट पर GPS का उपयोग करने दें"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"सहायता प्राप्त GPS का उपयोग करें"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS की सहायता के लिए सर्वर का उपयोग करें (नेटवर्क उपयोग कम करने के लिए अनचेक करें)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS की सहायता के लिए सर्वर का उपयोग करें (GPS निष्‍पादन बेहतर बनाने के लिए अनचेक करें)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"स्‍थान और Google खोज"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"खोज परिणामों और अन्‍य सेवाओं में सुधार के लिए Google को आपके स्‍थान का उपयोग करने दें"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"स्‍थान और /e/ खोज"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"खोज परिणामों और अन्‍य सेवाओं में सुधार के लिए /e/ को आपके स्‍थान का उपयोग करने दें"</string>
     <string name="location_access_title" msgid="7064108942964081243">"मेरे स्थान पर एक्सेस"</string>
     <string name="location_access_summary" msgid="69031404093194341">"आप अपनी उन ऐप्स  को स्थान जानकारी का उपयोग करने दें, जिन्होंने आपकी अनुमति मांगी है."</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"स्‍थानीय स्रोत"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"ऐप्स सेटिंग"</string>
     <string name="install_applications" msgid="4872012136210802181">"अज्ञात स्रोत"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"सभी ऐप्स स्रोतों को अनुमति दें"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play के अलावा अन्य स्रोतों से ऐप्स इंस्टॉल करने देती है"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play के अलावा अन्य स्रोतों से ऐप्स इंस्टॉल करने देती है"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"अज्ञात स्रोतों से ऐप्स  इंस्टॉल करने दें"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"आपका टेबलेट एवं निजी डेटा अज्ञात स्रोतों के ऐप्स के आक्रमण के प्रति अधिक भेद्य हैं. आप इस बात से सहमत हैं कि आप इन ऐप्स के उपयोग परिणामस्वरूप आपके टेबलेट को होने वाली क्षति या डेटा की हानि के लिए पूर्ण रूप से ज़िम्मेदार हैं."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"आपका फ़ोन एवं निजी डेटा अज्ञात स्रोतों के ऐप्स के आक्रमण के प्रति अधिक भेद्य हैं. आप इस बात से सहमत हैं कि आप इन ऐप्स के उपयोग परिणामस्वरूप आपके फ़ोन को होने वाली क्षति या डेटा की हानि के लिए पूर्ण रूप से ज़िम्मेदार हैं."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"सुरक्षित करें और पुनर्स्‍थापित करें"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"निजी डेटा"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"मेरे डेटा का बैकअप लें"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"ऐप्स  डेटा, वाई-फ़ाई पासवर्ड, और अन्य सेटिंग को Google सर्वर पर सुरक्षित रखें"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"ऐप्स  डेटा, वाई-फ़ाई पासवर्ड, और अन्य सेटिंग को /e/ सर्वर पर सुरक्षित रखें"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"सुरक्षित खाता"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ऐप्स डेटा शामिल करें"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"अपने आप डेटा रिस्टोर करें"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"बैकअप सेवा निष्‍क्रिय है."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"वर्तमान में कोई भी खाता बैकअप डेटा संग्रहीत नहीं कर रहा है"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"अपने वाई-फ़ाई  पासवर्ड, बुकमार्क, अन्य सेटिंग और ऐप्स डेटा को सुरक्षित रखें, साथ ही Google सर्वर से सभी प्रतियां मिटाएं?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"अपने वाई-फ़ाई  पासवर्ड, बुकमार्क, अन्य सेटिंग और ऐप्स डेटा को सुरक्षित रखें, साथ ही /e/ सर्वर से सभी प्रतियां मिटाएं?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"डिवाइस डेटा (जैसे वाई-फ़ाई पासवर्ड और कॉल इतिहास) और ऐप डेटा (जैसे सेटिंग और ऐप्स द्वारा संग्रहीत फ़ाइलों) का बैक अप लेना बंद करें, साथ ही रिमोट सर्वर से सभी प्रतियां मिटाएं?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"दूरस्थ रूप से अपने आप डिवाइस डेटा (जैसे वाई-फ़ाई पासवर्ड और कॉल इतिहास) और ऐप डेटा (जैसे ऐप्स द्वारा संग्रहीत सेटिंग और फ़ाइलों) का बैक अप लें.\n\nजब आप स्वचालित बैकअप चालू करते हैं, तो डिवाइस और ऐप डेटा को दूरस्थ रूप से समय-समय पर सहेजा जाता है. ऐप डेटा कोई भी ऐसा डेटा हो सकता है जिसे किसी ऐप द्वारा सहेजा गया है (डेवलपर सेटिंग के आधार पर), जिसमें संभावित रूप से संवेदनशील डेटा जैसे संपर्क, संदेश और फ़ोटो शामिल हैं."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"डिवाइस की व्‍यवस्‍थापन सेटिंग"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"कैलेंडर"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"संपर्क"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google sync में आपका स्वागत है!"</font>\n"आप जहां भी हों वहां से आपके संपर्क, अपॉइंटमेंट, और अन्य चीज़ों तक पहुंच की सुविधा देने के लिए डेटा को समन्‍वयित करने का Google का तरीका."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ sync में आपका स्वागत है!"</font>\n"आप जहां भी हों वहां से आपके संपर्क, अपॉइंटमेंट, और अन्य चीज़ों तक पहुंच की सुविधा देने के लिए डेटा को समन्‍वयित करने का /e/ का तरीका."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ऐप्स समन्‍वयन सेटिंग"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"डेटा और सिंक्रनाइज़ेशन"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"पासवर्ड बदलें"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"यह सुविधा केवल सेल्युलर नेटवर्क उपलब्ध होने पर उस ऐप्स को कार्य करने से रोक सकती है जो पृष्ठभूमि डेटा पर निर्भर है.\n\nआपको ऐप्स में उपलब्ध सेटिंग में अधिक उपयुक्त डेटा उपयोग नियंत्रण मिल सकते हैं."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"पृष्ठभूमि डेटा प्रतिबंधित करना केवल तभी संभव है जब आपने सेल्युलर डेटा सीमा सेट की हुई हो."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"अपने आप डेटा समन्वयन चालू करें?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपके द्वारा वेब पर अपने खातों में किए जाने वाले किसी भी बदलाव की प्रतिलिपि आपके टेबलेट में अपने आप बन जाएगी.\n\nकुछ खाते आपके द्वारा टेबलेट पर किए जाने वाले किसी भी बदलाव की प्रतिलिपि वेब पर भी बना सकते हैं. Google खाता इसी तरह काम करता है."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपके द्वारा वेब पर अपने खातों में किए जाने वाले किसी भी बदलाव की प्रतिलिपि आपके फ़ोन में अपने आप बन जाएगी.\n\nकुछ खाते आपके द्वारा फ़ोन पर किए जाने वाले किसी भी बदलाव की प्रतिलिपि वेब पर भी बना सकते हैं. Google खाता इसी तरह काम करता है."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपके द्वारा वेब पर अपने खातों में किए जाने वाले किसी भी बदलाव की प्रतिलिपि आपके टेबलेट में अपने आप बन जाएगी.\n\nकुछ खाते आपके द्वारा टेबलेट पर किए जाने वाले किसी भी बदलाव की प्रतिलिपि वेब पर भी बना सकते हैं. /e/ खाता इसी तरह काम करता है."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपके द्वारा वेब पर अपने खातों में किए जाने वाले किसी भी बदलाव की प्रतिलिपि आपके फ़ोन में अपने आप बन जाएगी.\n\nकुछ खाते आपके द्वारा फ़ोन पर किए जाने वाले किसी भी बदलाव की प्रतिलिपि वेब पर भी बना सकते हैं. /e/ खाता इसी तरह काम करता है."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"अपने आप डेटा समन्वयन बंद करें?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"यह डेटा और बैटरी उपयोग को संरक्षित करेगा, किन्‍तु हाल की जानकारी एकत्रित करने के लिए आपको प्रत्‍येक खाते का समन्‍वयन मैन्‍युअल रूप से करना होगा. और जब नई जानकारी मिलेगा तो आपको नोटिफिकेशन प्राप्‍त नहीं होगी."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"उपयोग चक्र रीसेट दिनांक"</string>
