--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -423,11 +423,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"אזהרה: המכשיר שלך יימחק לאחר <xliff:g id="COUNT">^1</xliff:g> ניסיונות כושלים נוספים לביטול הנעילה!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"הקלד את הסיסמה שלך"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ההצפנה נכשלה"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏ההצפנה הופסקה ואין אפשרות להשלים אותה. בשל כך, לא ניתן עוד לגשת לנתונים בטאבלט שלך. \n\nכדי לחזור ולהשתמש בטאבלט, עליך לבצע איפוס נתוני יצרן. כאשר תגדיר את הטאבלט לאחר האיפוס, תוכל לשחזר נתונים שגובו בחשבון Google שלך."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏ההצפנה הופסקה ואין אפשרות להשלים אותה. כתוצאה מכך, לא ניתן עוד לגשת לנתונים בטלפון שלך. \n\nכדי לחזור ולהשתמש בטלפון, עליך לבצע איפוס להגדרות היצרן. כאשר תגדיר את הטלפון לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון Google שלך."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏ההצפנה הופסקה ואין אפשרות להשלים אותה. בשל כך, לא ניתן עוד לגשת לנתונים בטאבלט שלך. \n\nכדי לחזור ולהשתמש בטאבלט, עליך לבצע איפוס נתוני יצרן. כאשר תגדיר את הטאבלט לאחר האיפוס, תוכל לשחזר נתונים שגובו בחשבון /e/ שלך."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏ההצפנה הופסקה ואין אפשרות להשלים אותה. כתוצאה מכך, לא ניתן עוד לגשת לנתונים בטלפון שלך. \n\nכדי לחזור ולהשתמש בטלפון, עליך לבצע איפוס להגדרות היצרן. כאשר תגדיר את הטלפון לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון /e/ שלך."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"הפענוח נכשל"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏הסיסמה שהזנת נכונה, אך לצערנו הנתונים שלך פגומים. \n\nכדי לחזור ולהשתמש בטאבלט, עליך לבצע איפוס להגדרות היצרן. בזמן הגדרת הטאבלט לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון Google שלך."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏הסיסמה שהזנת נכונה, אך לצערנו הנתונים שלך פגומים. \n\nכדי לחזור ולהשתמש בטלפון, עליך לבצע איפוס להגדרות היצרן. בזמן הגדרת הטלפון לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון Google שלך."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏הסיסמה שהזנת נכונה, אך לצערנו הנתונים שלך פגומים. \n\nכדי לחזור ולהשתמש בטאבלט, עליך לבצע איפוס להגדרות היצרן. בזמן הגדרת הטאבלט לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון /e/ שלך."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏הסיסמה שהזנת נכונה, אך לצערנו הנתונים שלך פגומים. \n\nכדי לחזור ולהשתמש בטלפון, עליך לבצע איפוס להגדרות היצרן. בזמן הגדרת הטלפון לאחר האיפוס, תהיה לך הזדמנות לשחזר נתונים שגובו בחשבון /e/ שלך."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"החלפת שיטת קלט"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"הגדרה של נעילת מסך"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"הגן על המכשיר שלך"</string>
@@ -1259,8 +1259,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"הגדרות הרשת אופסו"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"אפס את המכשיר"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"איפוס נתוני יצרן"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏פעולה זו תמחק את כל הנתונים מ"<b>"האחסון הפנימי"</b>" של הטאבלט שלך, כולל:\n\n"<li>"חשבון Google שלך"</li>\n<li>"הנתונים וההגדרות של המערכת והאפליקציות שלך"</li>\n<li>"האפליקציות שהורדת"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏פעולה זו תמחק את כל הנתונים מ"<b>"האחסון הפנימי"</b>" של הטלפון שלך, כולל:\n\n"<li>"חשבון Google שלך"</li>\n<li>"הנתונים וההגדרות של המערכת והאפליקציות שלך"</li>\n<li>"האפליקציות שהורדת"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏פעולה זו תמחק את כל הנתונים מ"<b>"האחסון הפנימי"</b>" של הטאבלט שלך, כולל:\n\n"<li>"חשבון /e/ שלך"</li>\n<li>"הנתונים וההגדרות של המערכת והאפליקציות שלך"</li>\n<li>"האפליקציות שהורדת"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏פעולה זו תמחק את כל הנתונים מ"<b>"האחסון הפנימי"</b>" של הטלפון שלך, כולל:\n\n"<li>"חשבון /e/ שלך"</li>\n<li>"הנתונים וההגדרות של המערכת והאפליקציות שלך"</li>\n<li>"האפליקציות שהורדת"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"אתה מחובר כעת לחשבונות הבאים:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"קיימים משתמשים אחרים במכשיר זה.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"מוסיקה"</li>\n<li>"תמונות"</li>\n<li>"נתוני משתמש אחרים"</li></string>
@@ -1345,7 +1345,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"‏סריקת Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"‏שפר את דיוק המיקום על ידי כך שתאפשר לשירותים ואפליקציות של המערכת לזהות התקני Bluetooth בכל עת."</string>
     <string name="location_network_based" msgid="6010456018401296590">"‏מיקום עם Wi‑Fi ורשת סלולרית"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏אפשר לאפליקציות להשתמש בשירות המיקום של Google כדי להעריך את מיקומך מהר יותר. נתוני מיקום אנונימיים ייאספו ויישלחו אל Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏אפשר לאפליקציות להשתמש בשירות המיקום של /e/ כדי להעריך את מיקומך מהר יותר. נתוני מיקום אנונימיים ייאספו ויישלחו אל /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"‏המיקום נקבע באמצעות Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"‏לווייני GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"‏אפשר לאפליקציות להשתמש ב-GPS בטאבלט שלך כדי לאתר את מיקומך"</string>
@@ -1353,8 +1353,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"‏השתמש ב-Assisted GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"‏השתמש בשרת כדי לסייע ל-GPS (הסר את הסימון כדי לצמצם את השימוש ברשת)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"‏השתמש בשרת כדי לסייע ל-GPS (הסר את הסימון כדי לשפר את ביצועי GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"‏מיקום וחיפוש Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"‏אפשר ל-Google להשתמש במיקום שלך כדי לשפר את תוצאות החיפוש ושירותים נוספים"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"‏מיקום וחיפוש /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"‏אפשר ל-/e/ להשתמש במיקום שלך כדי לשפר את תוצאות החיפוש ושירותים נוספים"</string>
     <string name="location_access_title" msgid="7064108942964081243">"גישה למיקום שלי"</string>
     <string name="location_access_summary" msgid="69031404093194341">"אפשר לאפליקציות שביקשו את אישורך להשתמש בפרטי המיקום שלך"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"מקורות מיקום"</string>
@@ -1453,7 +1453,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"הגדרות אפליקציה"</string>
     <string name="install_applications" msgid="4872012136210802181">"מקורות לא ידועים"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"התר את כל המקורות לאפליקציות"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"‏מאפשר לך להתקין אפליקציות ממקורות שאינם Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"‏מאפשר לך להתקין אפליקציות ממקורות שאינם /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"אפשר התקנת אפליקציות ממקורות לא ידועים"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"הטאבלט והנתונים האישיים שלך חשופים יותר בפני התקפות על ידי אפליקציות ממקורות לא ידועים. אתה מסכים לכך שאתה האחראי הבלעדי לכל נזק שייגרם לטאבלט שלך או לאובדן נתונים שעלולים להיגרם בעקבות שימוש באפליקציות אלה."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"הטלפון והנתונים האישיים שלך חשופים יותר בפני התקפות של אפליקציות ממקורות לא ידועים. אתה מסכים לכך שאתה האחראי הבלעדי לכל נזק שנגרם לטלפון או לאובדן של נתונים שעשויים להיגרם כתוצאה משימוש באפליקציות אלה."</string>
@@ -1914,7 +1914,7 @@
     <string name="usage_type_data_wifi_send" msgid="1847552143597396162">"‏מנות Wi-Fi נשלחו"</string>
     <string name="usage_type_data_wifi_recv" msgid="5678475911549183829">"‏מנות Wi-Fi התקבלו"</string>
     <string name="usage_type_audio" msgid="6957269406840886290">"אודיו"</string>
-    <string name="usage_type_video" msgid="4295357792078579944">"‏Google וידאו"</string>
+    <string name="usage_type_video" msgid="4295357792078579944">"‏/e/ וידאו"</string>
     <string name="usage_type_camera" msgid="8299433109956769757">"מצלמה"</string>
     <string name="usage_type_flashlight" msgid="1516392356962208230">"פנס"</string>
     <string name="usage_type_on_time" msgid="3351200096173733159">"משך פעולה עד כה"</string>
@@ -2069,7 +2069,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"גיבוי ושחזור"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"נתונים אישיים"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"גיבוי הנתונים שלי"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"‏גבה נתוני אפליקציות, סיסמאות Wi-Fi והגדרות אחרות בשרתי Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"‏גבה נתוני אפליקציות, סיסמאות Wi-Fi והגדרות אחרות בשרתי /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"חשבון גיבוי"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"כלול נתוני אפליקציה"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"שחזור אוטומטי"</string>
@@ -2077,9 +2077,9 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"שירות הגיבוי אינו פעיל."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"אף חשבון אינו מאחסן כרגע נתונים מגובים"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏האם להפסיק לגבות את סיסמאות ה-Wi-Fi, הסימניות, הגדרות אחרות ונתוני האפליקציות שלך ולמחוק את כל העותקים משרתי Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏האם להפסיק לגבות את סיסמאות ה-Wi-Fi, הסימניות, הגדרות אחרות ונתוני האפליקציות שלך ולמחוק את כל העותקים משרתי /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"‏האם להפסיק לגבות את נתוני המכשיר (כמו סיסמאות לרשתות Wi-Fi והיסטוריית שיחות) ונתוני אפליקציות (כמו הגדרות וקבצים המאוחסנים על ידי אפליקציות) ולמחוק את כל העותקים בשרתים מרוחקים?"</string>
-    <string name="fullbackup_data_summary" msgid="960850365007767734">"‏גבה מרחוק באופן אוטומטי נתונים מהמכשיר (כמו סיסמאות לרשתות Wi-Fi והיסטוריית שיחות) ונתוני אפליקציות (כמו הגדרות וקבצים שאוחסנו על ידי אפליקציות) אל Google Drive.‏\n\nכשתפעיל את הגיבוי האוטומטי, נתוני המכשיר והאפליקציות יישמרו מדי פעם באופן מרוחק. נתוני אפליקציות יכולים להיות מכל סוג שהאפליקציה שומרת (בהתבסס על הגדרות המפתח), כולל נתונים שעשויים להיות רגישים, כמו אנשי קשר, הודעות ותמונות."</string>
+    <string name="fullbackup_data_summary" msgid="960850365007767734">"‏גבה מרחוק באופן אוטומטי נתונים מהמכשיר (כמו סיסמאות לרשתות Wi-Fi והיסטוריית שיחות) ונתוני אפליקציות (כמו הגדרות וקבצים שאוחסנו על ידי אפליקציות) אל /e/ Drive.‏\n\nכשתפעיל את הגיבוי האוטומטי, נתוני המכשיר והאפליקציות יישמרו מדי פעם באופן מרוחק. נתוני אפליקציות יכולים להיות מכל סוג שהאפליקציה שומרת (בהתבסס על הגדרות המפתח), כולל נתונים שעשויים להיות רגישים, כמו אנשי קשר, הודעות ותמונות."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"הגדרות ניהול מכשיר"</string>
     <string name="active_device_admin_msg" msgid="6930903262612422111">"מנהל מכשיר"</string>
     <string name="remove_device_admin" msgid="7736174723276745230">"השבת את מנהל המערכת של מכשיר זה"</string>
@@ -2162,9 +2162,9 @@
     <string name="sync_one_time_sync" msgid="3733796114909082260">"הקש כדי לסנכרן כעת<xliff:g id="LAST_SYNC_TIME">
 %1$s</xliff:g>"</string>
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
-    <string name="sync_calendar" msgid="9056527206714733735">"‏יומן Google"</string>
+    <string name="sync_calendar" msgid="9056527206714733735">"‏יומן /e/"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"אנשי קשר"</string>
-    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"ברוכים הבאים אל סנכרון Google‏!"</font>" \nזוהי גישה של Google לסנכרון נתונים במטרה לאפשר לך גישה לאנשי קשר, לפגישות ועוד מכל מקום שבו אתה נמצא."</string>
+    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"ברוכים הבאים אל סנכרון /e/‏!"</font>" \nזוהי גישה של /e/ לסנכרון נתונים במטרה לאפשר לך גישה לאנשי קשר, לפגישות ועוד מכל מקום שבו אתה נמצא."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"הגדרות סנכרון אפליקציות"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"נתונים וסינכרון"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"שנה סיסמה"</string>
@@ -2252,8 +2252,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"תכונה זו עלולה לגרום לאפליקציה התלויה בנתוני רקע להפסיק לפעול כאשר רק רשתות סלולריות זמינות.\n\nניתן למצוא אמצעים מתאימים יותר לבקרת השימוש בנתונים דרך ההגדרות הזמינות באפליקציה."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"הגבלה של נתוני רקע אפשרית רק אם הגדרת הגבלה על נתונים סלולריים."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"האם להפעיל סנכרון אוטומטי של נתונים?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏שינויים שתבצע בחשבונות שלך באינטרנט יועתקו באופן אוטומטי לטאבלט שלך.\n\nייתכן גם שחשבונות מסוימים יעתיקו לאינטרנט באופן אוטומטי שינויים שתבצע בטלפון. חשבון Google פועל באופן זה."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏כל שינוי שתבצע בחשבונות שלך באינטרנט יועתק לטלפון שלך באופן אוטומטי.\n\nייתכן גם שחשבונות מסוימים יעתיקו לאינטרנט באופן אוטומטי שינויים שתבצע בטלפון. חשבון Google פועל באופן זה."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏שינויים שתבצע בחשבונות שלך באינטרנט יועתקו באופן אוטומטי לטאבלט שלך.\n\nייתכן גם שחשבונות מסוימים יעתיקו לאינטרנט באופן אוטומטי שינויים שתבצע בטלפון. חשבון /e/ פועל באופן זה."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏כל שינוי שתבצע בחשבונות שלך באינטרנט יועתק לטלפון שלך באופן אוטומטי.\n\nייתכן גם שחשבונות מסוימים יעתיקו לאינטרנט באופן אוטומטי שינויים שתבצע בטלפון. חשבון /e/ פועל באופן זה."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"האם לכבות סנכרון אוטומטי של נתונים?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"פעולה זו תחסוך בשימוש בנתונים ובעוצמת סוללה, אך יהיה עליך לסנכרן כל חשבון באופן ידני על מנת לאסוף מידע עדכני. בזמן עדכונים לא תקבל התראות."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"תאריך איפוס של מחזור שימוש"</string>
