--- a/res/values-kn-rIN/strings.xml
+++ b/res/values-kn-rIN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ಎಚ್ಚರಿಕೆ: ಅನ್‌ಲಾಕ್‌ ಮಾಡಲು <xliff:g id="COUNT">^1</xliff:g> ಹೆಚ್ಚಿನ ವಿಫಲ ಪ್ರಯತ್ನಗಳ ನಂತರ ನಿಮ್ಮ ಸಾಧನವನ್ನು ಅಳಿಸಲಾಗುತ್ತದೆ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್‌ ಟೈಪ್ ಮಾಡಿ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ಎನ್‌ಕ್ರಿಪ್ಷನ್ ಯಶಸ್ವಿಯಾಗಿದೆ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ಎನ್‌ಕ್ರಿಪ್ಶನ್‌‌ ಅಡಚಣೆಗೊಳಗಾಗಿದೆ ಮತ್ತು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ. ಇದರ ಪರಿಣಾಮವಾಗಿ, ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌‌ನಲ್ಲಿ ಇನ್ನು ಮುಂದೆ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲಾಗುವುದಿಲ್ಲ. \n\n ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌‌ ಅನ್ನು ಬಳಸಿಕೊಂಡು ಪುನರಾರಂಭಿಸಲು, ನಿಮಗೆ ಫ್ಯಾಕ್ಟರಿಯನ್ನು ಮರುಹೊಂದಿಸುವ ಅಗತ್ಯವಿದೆ. ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ ಅನ್ನು ಮರುಹೊಂದಿಸಿದ ನಂತರ ನೀವು ಅದನ್ನು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ Google ಖಾತೆಯಲ್ಲಿ ಬ್ಯಾಕಪ್‌ ಆಗಿರುವ ಯಾವುದೇ ಡೇಟಾವನ್ನು ನೀವು ಮರುಸ್ಥಾಪಿಸುವ ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ಎನ್‌ಕ್ರಿಪ್ಶನ್‌‌ ಅಡಚಣೆಗೊಳಗಾಗಿದೆ ಮತ್ತು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ. ಇದರ ಪರಿಣಾಮವಾಗಿ, ನಿಮ್ಮ ಫೋನ್‌ನಲ್ಲಿ ಇನ್ನು ಮುಂದೆ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲಾಗುವುದಿಲ್ಲ. \n\nನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ಬಳಸುವುದನ್ನು ಮುಂದುವರಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಾಣಿಕೆ ಮಾಡುವ ಅಗತ್ಯವಿರುತ್ತದೆ. ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ಮರುಹೊಂದಿಸಿದ ನಂತರ ಅದನ್ನು ನೀವು ಹೊಂದಿಸಿದರೆ, ನಿಮ್ಮ Google ಖಾತೆಯಲ್ಲಿ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸುವ ಅವಕಾಶವನ್ನು ನೀವು ಹೊಂದಿರುತ್ತೀರಿ."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ಎನ್‌ಕ್ರಿಪ್ಶನ್‌‌ ಅಡಚಣೆಗೊಳಗಾಗಿದೆ ಮತ್ತು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ. ಇದರ ಪರಿಣಾಮವಾಗಿ, ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌‌ನಲ್ಲಿ ಇನ್ನು ಮುಂದೆ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲಾಗುವುದಿಲ್ಲ. \n\n ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌‌ ಅನ್ನು ಬಳಸಿಕೊಂಡು ಪುನರಾರಂಭಿಸಲು, ನಿಮಗೆ ಫ್ಯಾಕ್ಟರಿಯನ್ನು ಮರುಹೊಂದಿಸುವ ಅಗತ್ಯವಿದೆ. ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ ಅನ್ನು ಮರುಹೊಂದಿಸಿದ ನಂತರ ನೀವು ಅದನ್ನು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ /e/ ಖಾತೆಯಲ್ಲಿ ಬ್ಯಾಕಪ್‌ ಆಗಿರುವ ಯಾವುದೇ ಡೇಟಾವನ್ನು ನೀವು ಮರುಸ್ಥಾಪಿಸುವ ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ಎನ್‌ಕ್ರಿಪ್ಶನ್‌‌ ಅಡಚಣೆಗೊಳಗಾಗಿದೆ ಮತ್ತು ಪೂರ್ಣಗೊಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ. ಇದರ ಪರಿಣಾಮವಾಗಿ, ನಿಮ್ಮ ಫೋನ್‌ನಲ್ಲಿ ಇನ್ನು ಮುಂದೆ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲಾಗುವುದಿಲ್ಲ. \n\nನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ಬಳಸುವುದನ್ನು ಮುಂದುವರಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಾಣಿಕೆ ಮಾಡುವ ಅಗತ್ಯವಿರುತ್ತದೆ. ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ಮರುಹೊಂದಿಸಿದ ನಂತರ ಅದನ್ನು ನೀವು ಹೊಂದಿಸಿದರೆ, ನಿಮ್ಮ /e/ ಖಾತೆಯಲ್ಲಿ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸುವ ಅವಕಾಶವನ್ನು ನೀವು ಹೊಂದಿರುತ್ತೀರಿ."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ಡೀಕ್ರಿಪ್ಷನ್ ಯಶಸ್ವಿಯಾಗಿಲ್ಲ"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ವರ್ಡ್‌ ಸರಿಯಾಗಿದೆ, ಆದರೆ ದುರದೃಷ್ಟವಶಾತ್ ನಿಮ್ಮ ಡೇಟಾ ದೋಷಪೂರಿತವಾಗಿದೆ. \n\nನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ ಬಳಕೆಯನ್ನು ಮುಂದುವರಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಿಸುವಿಕೆಯನ್ನು ನಿರ್ವಹಿಸುವ ಅಗತ್ಯವಿದೆ. ಮರುಹೊಂದಿಕೆಯ ನಂತರ ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ನೀವು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ Google ಖಾತೆಗೆ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಆ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸಲು ನೀವು ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ವರ್ಡ್‌ ಸರಿಯಾಗಿದೆ, ಆದರೆ ದುರದೃಷ್ಟವಶಾತ್ ನಿಮ್ಮ ಡೇಟಾ ದೋಷಪೂರಿತವಾಗಿದೆ. \n\nನಿಮ್ಮ ಫೋನ್ ಬಳಸಿಕೊಂಡು ಪುನರಾರಂಭಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಿಸುವಿಕೆಯನ್ನು ಮಾಡಬೇಕಾದ ಅಗತ್ಯವಿರುತ್ತದೆ. ಮರುಹೊಂದಿಸಿದ ನಂತರ ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ನೀವು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ Google ಖಾತೆಗೆ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಆ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸಲು ನೀವು ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ವರ್ಡ್‌ ಸರಿಯಾಗಿದೆ, ಆದರೆ ದುರದೃಷ್ಟವಶಾತ್ ನಿಮ್ಮ ಡೇಟಾ ದೋಷಪೂರಿತವಾಗಿದೆ. \n\nನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ ಬಳಕೆಯನ್ನು ಮುಂದುವರಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಿಸುವಿಕೆಯನ್ನು ನಿರ್ವಹಿಸುವ ಅಗತ್ಯವಿದೆ. ಮರುಹೊಂದಿಕೆಯ ನಂತರ ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ನೀವು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ /e/ ಖಾತೆಗೆ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಆ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸಲು ನೀವು ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ವರ್ಡ್‌ ಸರಿಯಾಗಿದೆ, ಆದರೆ ದುರದೃಷ್ಟವಶಾತ್ ನಿಮ್ಮ ಡೇಟಾ ದೋಷಪೂರಿತವಾಗಿದೆ. \n\nನಿಮ್ಮ ಫೋನ್ ಬಳಸಿಕೊಂಡು ಪುನರಾರಂಭಿಸಲು, ನೀವು ಫ್ಯಾಕ್ಟರಿ ಮರುಹೊಂದಿಸುವಿಕೆಯನ್ನು ಮಾಡಬೇಕಾದ ಅಗತ್ಯವಿರುತ್ತದೆ. ಮರುಹೊಂದಿಸಿದ ನಂತರ ನಿಮ್ಮ ಫೋನ್‌ ಅನ್ನು ನೀವು ಹೊಂದಿಸಿದಾಗ, ನಿಮ್ಮ /e/ ಖಾತೆಗೆ ಬ್ಯಾಕಪ್‌ ಮಾಡಲಾದ ಆ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಮರುಸ್ಥಾಪಿಸಲು ನೀವು ಅವಕಾಶವನ್ನು ಹೊಂದಿರುತ್ತೀರಿ."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ಇನ್‌ಪುಟ್‌‌ ವಿಧಾನ ಬದಲಿಸಿ"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"ಪರದೆ ಲಾಕ್ ಹೊಂದಿಸಿ"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"ನಿಮ್ಮ ಸಾಧನವನ್ನು ರಕ್ಷಿಸಿ"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ನೆಟ್‌ವರ್ಕ್‌ ಸೆಟ್ಟಿಂಗ್‌ ರಿಸೆಟ್‌ ಮಾಡಲಾಗಿದೆ"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ಸಾಧನವನ್ನು ಮರುಹೊಂದಿಸಿ"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ಫ್ಯಾಕ್ಟರಿಡೇಟಾ ರಿಸೆಟ್‌"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ಇದು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯ"</b>" ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸುತ್ತದೆ, ಅವುಗಳೆಂದರೆ:\n\n"<li>"ನಿಮ್ಮ Google ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಿರುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ಇದು ನಿಮ್ಮ ಫೋನ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯಲ್ಲಿರುವ"</b>"ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸಿ ಹಾಕುತ್ತದೆ. ಡೇಟಾ ಇವುಗಳನ್ನೂ ಒಳಗೊಂಡಿರಬಹುದು:\n\n"<li>"ನಿಮ್ಮ Google ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ಇದು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯ"</b>" ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸುತ್ತದೆ, ಅವುಗಳೆಂದರೆ:\n\n"<li>"ನಿಮ್ಮ /e/ ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಿರುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ಇದು ನಿಮ್ಮ ಫೋನ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯಲ್ಲಿರುವ"</b>"ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸಿ ಹಾಕುತ್ತದೆ. ಡೇಟಾ ಇವುಗಳನ್ನೂ ಒಳಗೊಂಡಿರಬಹುದು:\n\n"<li>"ನಿಮ್ಮ /e/ ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ನೀವು ಪ್ರಸ್ತುತ ಕೆಳಗಿನ ಖಾತೆಗಳಿಗೆ ಸೈನ್ ಇನ್ ಆಗಿರುವಿರಿ:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ಈ ಸಾಧನದಲ್ಲಿ ಪ್ರಸ್ತುತ ಇತರ ಬಳಕೆದಾರರಿದ್ದಾರೆ.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ಸಂಗೀತ"</li>\n<li>"ಫೋಟೋಗಳು"</li>\n<li>"ಇತರ ಬಳಕೆದಾರರ ಡೇಟಾ"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ಬ್ಲೂಟೂತ್ ಸ್ಕ್ಯಾನಿಂಗ್"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"ಯಾವುದೇ ಸಮಯದಲ್ಲಿ ಬ್ಲೂಟೂತ್ ಸಾಧನಗಳನ್ನು ಪತ್ತೆಹಚ್ಚಲು ಸಿಸ್ಟಮ್ ಸೇವೆಗಳು ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್‌ಗಳಿಗೆ ಅನುಮತಿಸುವುದರ ಮೂಲಕ ಸ್ಥಳ ಸುಧಾರಣೆ ಮಾಡಿ."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi &amp; ಸೆಲ್ಯುಲಾರ್ ನೆಟ್‌ವರ್ಕ್ ಸ್ಥಾನ"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಅತಿ ವೇಗವಾಗಿ ಅಂದಾಜು ಮಾಡಲು Google ನ ಸ್ಥಾನ ಸೇವೆ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಬಳಸಿ. ಅನಾಮಧೇಯ ಸ್ಥಳದ ಡೇಟಾವನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುವುದು ಮತ್ತು Google ಗೆ ಕಳುಹಿಸಲಾಗುವುದು."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಅತಿ ವೇಗವಾಗಿ ಅಂದಾಜು ಮಾಡಲು /e/ ನ ಸ್ಥಾನ ಸೇವೆ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಬಳಸಿ. ಅನಾಮಧೇಯ ಸ್ಥಳದ ಡೇಟಾವನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುವುದು ಮತ್ತು /e/ ಗೆ ಕಳುಹಿಸಲಾಗುವುದು."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi‑Fi ಮೂಲಕ ನಿರ್ಧರಿಸಲಾಗಿರುವ ಸ್ಥಳ"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ಉಪಗ್ರಹಗಳು"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ನಿಮ್ಮ ಸ್ಥಳವನ್ನು ಗುರುತಿಸುವ ಸಲುವಾಗಿ ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌‌ನಲ್ಲಿ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು GPS ಬಳಸಲು ಅನುಮತಿಸಿ"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ಸಹಾಯಕ GPS ಬಳಸು"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ಗೆ ನೆರವಾಗಲು ಸರ್ವರ್‌ ಅನ್ನು ಬಳಸಿ (ನೆಟ್‌ವರ್ಕ್‌ ಬಳಕೆಯನ್ನು ಕಡಿಮೆ ಮಾಡಲು ಗುರುತು ತೆಗೆಯಿರಿ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ಗೆ ನೆರವಾಗಲು ಸರ್ವರ್‌ ಬಳಸಿ (GPS ಕೆಲಸ ನಿರ್ವಹಣೆಯನ್ನು ಸುಧಾರಿಸಲು ಗುರುತು ತೆಗೆಯಿರಿ)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ಸ್ಥಾನ &amp; Google ಹುಡುಕಾಟ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"ಹುಡುಕಾಟ ಫಲಿತಾಂಶಗಳು ಮತ್ತು ಇತರೆ ಸೇವೆಗಳನ್ನು ಸುಧಾರಿಸುವುದಕ್ಕಾಗಿ ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಬಳಸಲು Google ಗೆ ಅವಕಾಶ ಮಾಡಿಕೊಡಿ"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ಸ್ಥಾನ &amp; /e/ ಹುಡುಕಾಟ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"ಹುಡುಕಾಟ ಫಲಿತಾಂಶಗಳು ಮತ್ತು ಇತರೆ ಸೇವೆಗಳನ್ನು ಸುಧಾರಿಸುವುದಕ್ಕಾಗಿ ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಬಳಸಲು /e/ ಗೆ ಅವಕಾಶ ಮಾಡಿಕೊಡಿ"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ನನ್ನ ಸ್ಥಳಕ್ಕೆ ಪ್ರವೇಶ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ನಿಮ್ಮ ಅನುಮತಿಯನ್ನು ಕೇಳುವ ಅಪ್ಲಿಕೇಶನ್‌‌ಗೆ ನಿಮ್ಮ ಸ್ಥಳ ಮಾಹಿತಿಯನ್ನು ಬಳಸಲು ಅನುಮತಿಸಿ"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ಸ್ಥಾನ ಮೂಲಗಳು"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"ಅಪ್ಲಿಕೇಶನ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
     <string name="install_applications" msgid="4872012136210802181">"ಅಪರಿಚಿತ ಮೂಲಗಳು"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"ಎಲ್ಲಾ ಅಪ್ಲಿಕೇಶನ್ ಮೂಲಗಳನ್ನು ಅನುಮತಿಸಿ"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play ಗಿಂತ ಬೇರೆ ಮೂಲಗಳಿಂದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಸ್ಥಾಪಿಸಲು ನಿಮಗೆ ಅವಕಾಶ ನೀಡುತ್ತದೆ"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play ಗಿಂತ ಬೇರೆ ಮೂಲಗಳಿಂದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಸ್ಥಾಪಿಸಲು ನಿಮಗೆ ಅವಕಾಶ ನೀಡುತ್ತದೆ"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"ಅಪರಿಚಿತ ಮೂಲಗಳಿಂದ ಅಪ್ಲಿಕೇಶನ್‌‌ಗಳನ್ನು ಸ್ಥಾಪಿಸಲು ಅನುಮತಿಸಿ"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್ ಮತ್ತು ವೈಯಕ್ತಿಕ ಡೇಟಾವು ಅಪರಿಚಿತ ಮೂಲಗಳಿಂದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳ ದಾಳಿಗೆ ಒಳಗಾಗುವ ಸಾಧ್ಯತೆ ಹೆಚ್ಚಿದೆ. ಈ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಬಳಸುವುದರಿಂದ ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ಗೆ ಉಂಟಾಗಬಹುದಾದ ಯಾವುದೇ ಹಾನಿ ಅಥವಾ ಡೇಟಾ ನಷ್ಟಕ್ಕೆ ನೀವು ಸ್ವತಃ ಜವಾಬ್ದಾರರಾಗಿರುತ್ತೀರಿ ಎಂಬುದನ್ನು ನೀವು ಒಪ್ಪಿಕೊಳ್ಳುತ್ತೀರಿ."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"ನಿಮ್ಮ ಫೋನ್ ಮತ್ತು ವೈಯಕ್ತಿಕ ಡೇಟಾವು ಅಪರಿಚಿತ ಮೂಲಗಳ ಅಪ್ಲಿಕೇಶನ್‌ಗಳ ದಾಳಿಗೆ ಒಳಗಾಗುವ ಸಾಧ್ಯತೆ ಹೆಚ್ಚು. ಈ ಅಪ್ಲಿಕೇಶನ್‌ಗಳಿಂದ ನಿಮ್ಮ ಫೋನ್‌ಗೆ ಉಂಟಾಗಬಹುದಾದ ಯಾವುದೇ ಹಾನಿ ಅಥವಾ ಡೇಟಾ ನಷ್ಟಕ್ಕೆ ನೀವೇ ಜವಾಬ್ದಾರರಾಗಿರುತ್ತೀರಿ ಎಂಬುದನ್ನು ನೀವು ಒಪ್ಪಿಕೊಳ್ಳುತ್ತೀರಿ."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ಬ್ಯಾಕಪ್ &amp; ಮರುಸ್ಥಾಪನೆ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ವೈಯಕ್ತಿಕ ಡೇಟಾ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ನನ್ನ ಡೇಟಾ ಬ್ಯಾಕಪ್ ಮಾಡು"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google ಸರ್ವರ್‌ಗಳಿಗೆ ಅಪ್ಲಿಕೇಶನ್‌‌ ಡೇಟಾ, ವೈ-ಫೈ ಪಾಸ್‌ವರ್ಡ್‌ಗಳು ಮತ್ತು ಇತರ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಬ್ಯಾಕಪ್‌ ಮಾಡು"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ ಸರ್ವರ್‌ಗಳಿಗೆ ಅಪ್ಲಿಕೇಶನ್‌‌ ಡೇಟಾ, ವೈ-ಫೈ ಪಾಸ್‌ವರ್ಡ್‌ಗಳು ಮತ್ತು ಇತರ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಬ್ಯಾಕಪ್‌ ಮಾಡು"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ಬ್ಯಾಕಪ್ ಖಾತೆ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಸೇರಿಸಿ"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ಸ್ವಯಂಚಾಲಿತ ಮರುಸ್ಥಾಪನೆ"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"ಬ್ಯಾಕಪ್ ಸೇವೆಯು ನಿಷ್ಕ್ರಿಯವಾಗಿದೆ."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ಬ್ಯಾಕ್‌ ಅಪ್‌ ಆಗಿರುವ ಡೇಟಾವನ್ನು ಯಾವುದೇ ಖಾತೆಯು ಪ್ರಸ್ತುತ ಸಂಗ್ರಹಿಸುತ್ತಿಲ್ಲ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ನಿಮ್ಮ Wi‑Fi ಪಾಸ್‌ವರ್ಡ್‌ಗಳು, ಬುಕ್‌ಮಾರ್ಕ್‌ಗಳು ಇತರ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಹಾಗೂ ಆಪ್‌‌ ಡೇಟಾವನ್ನು ಬ್ಯಾಕಪ್‌‌‌ ಮಾಡುವುದನ್ನು ನಿಲ್ಲಿಸುವುದರ ಜೊತೆಗೆ Google ಸರ್ವರ್‌ಗಳಲ್ಲಿನ ಎಲ್ಲ ಪ್ರತಿಗಳನ್ನು ಅಳಿಸುವುದೇ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ನಿಮ್ಮ Wi‑Fi ಪಾಸ್‌ವರ್ಡ್‌ಗಳು, ಬುಕ್‌ಮಾರ್ಕ್‌ಗಳು ಇತರ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಹಾಗೂ ಆಪ್‌‌ ಡೇಟಾವನ್ನು ಬ್ಯಾಕಪ್‌‌‌ ಮಾಡುವುದನ್ನು ನಿಲ್ಲಿಸುವುದರ ಜೊತೆಗೆ /e/ ಸರ್ವರ್‌ಗಳಲ್ಲಿನ ಎಲ್ಲ ಪ್ರತಿಗಳನ್ನು ಅಳಿಸುವುದೇ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ಸಾಧನ ಡೇಟಾ (ವೈ-ಫೈ ಪಾಸ್‌ವರ್ಡ್‌ಗಳು ಮತ್ತು ಕರೆ ಇತಿಹಾಸದಂತಹ) ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾವನ್ನು (ಅಪ್ಲಿಕೇಶನ್‌ಗಳ ಮೂಲಕ ಸಂಗ್ರಹಿಸಲಾದ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಮತ್ತು ಫೈಲ್‌ಗಳಂತಹ) ಬ್ಯಾಕಪ್ ಮಾಡುವುದನ್ನು ನಿಲ್ಲಿಸುವುದೇ ಹಾಗೂ ರಿಮೋಟ್ ಸರ್ವರ್‌ಗಳಲ್ಲಿರುವ ಎಲ್ಲಾ ನಕಲುಗಳನ್ನು ಅಳಿಸುವುದೇ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ಸಾಧನ ಡೇಟಾ (ವೈ-ಫೈ ಪಾಸ್‌ವರ್ಡ್‌ಗಳು ಮತ್ತು ಕರೆ ಇತಿಹಾಸದಂತಹವು) ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾವನ್ನು (ಅಪ್ಲಿಕೇಶನ್‌ಗಳ ಮೂಲಕ ಸಂಗ್ರಹಿಸಲಾದ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಮತ್ತು ಫೈಲ್‌ಗಳಂತಹವು) ರಿಮೋಟ್ ಮೂಲಕ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಬ್ಯಾಕಪ್ ಮಾಡಿ.\n\nನೀವು ಸ್ವಯಂಚಾಲಿತ ಬ್ಯಾಕಪ್ ಅನ್ನು ಆನ್ ಮಾಡಿದಾಗ, ಸಾಧನ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾವನ್ನು ರಿಮೋಟ್ ಮೂಲಕ ನಿಯತಕಾಲಿಕವಾಗಿ ಉಳಿಸಲಾಗುವುದು. ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಎಂದರೆ ಅಪ್ಲಿಕೇಶನ್ ಮೂಲಕ ಉಳಿಸಲಾಗಿರುವ (ಡೆವಲಪರ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಆಧರಿಸಿ) ಯಾವುದೇ ಡೇಟಾ ಆಗಿರಬಹುದು. ಇದು ಸಂಪರ್ಕಗಳು, ಸಂದೇಶಗಳು ಮತ್ತು ಫೋಟೋಗಳಂತಹ ಸಂಭವನೀಯ ಸೂಕ್ಷ್ಮ ಡೇಟಾವನ್ನು ಒಳಗೊಂಡಿರುತ್ತದೆ."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"ಸಾಧನದ ನಿರ್ವಹಣೆ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ಕ್ಯಾಲೆಂಡರ್"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ಸಂಪರ್ಕಗಳು"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ಸಿಂಕ್‌ಗೆ ಸ್ವಾಗತ!"</font>" \nನಿಮ್ಮ ಸಂಪರ್ಕಗಳು, ಪೂರ್ವನಿಗದಿಗಳು, ಮತ್ತು ನೀವು ಎಲ್ಲಿದ್ದೀರೋ ಅಲ್ಲಿಂದಲೇ ಇನ್ನಷ್ಟನ್ನು ಪ್ರವೇಶಿಸಲು ಅನುಮತಿಸಲು ಡೇಟಾವನ್ನು ಸಿಂಕ್‌ ಮಾಡಲು Google ನ ಒಂದು ತೊಡಗುವಿಕೆಯಾಗಿದೆ."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ಸಿಂಕ್‌ಗೆ ಸ್ವಾಗತ!"</font>" \nನಿಮ್ಮ ಸಂಪರ್ಕಗಳು, ಪೂರ್ವನಿಗದಿಗಳು, ಮತ್ತು ನೀವು ಎಲ್ಲಿದ್ದೀರೋ ಅಲ್ಲಿಂದಲೇ ಇನ್ನಷ್ಟನ್ನು ಪ್ರವೇಶಿಸಲು ಅನುಮತಿಸಲು ಡೇಟಾವನ್ನು ಸಿಂಕ್‌ ಮಾಡಲು /e/ ನ ಒಂದು ತೊಡಗುವಿಕೆಯಾಗಿದೆ."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ಅಪ್ಲಿಕೇಶನ್ ಸಿಂಕ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ಡೇಟಾ &amp; ಸಿಂಕ್ರೋನೈಜ್ ಮಾಡುವಿಕೆ"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ಪಾಸ್‌ವರ್ಡ್ ಬದಲಾಯಿಸಿ"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"ಸೆಲ್ಯುಲಾರ್ ನೆಟ್‌ವರ್ಕ್‌ಗಳು ಮಾತ್ರ ಲಭ್ಯವಿದ್ದಾಗ ಕಾರ್ಯವನ್ನು ನಿಲ್ಲಿಸುವುದಕ್ಕಾಗಿ ಹಿನ್ನೆಲೆ ಡೇಟಾದ ಮೇಲೆ ಅವಲಂಬಿತವಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗೆ ಈ ವೈಶಿಷ್ಟ್ಯವು ಕಾರಣವಾಗಬಹುದು.\n\nಅಪ್ಲಿಕೇಶನ್‌‌ ವ್ಯಾಪ್ತಿಯೊಳಗೆ ಲಭ್ಯವಿರುವ ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ ನೀವು ಇನ್ನಷ್ಟು ಸೂಕ್ತವಾದ ಡೇಟಾ ಬಳಕೆಯ ನಿಯಂತ್ರಣಗಳನ್ನು ಪಡೆದುಕೊಳ್ಳಬಹುದು."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"ನೀವು ಸೆಲ್ಯುಲಾರ್ ಡೇಟಾ ಮಿತಿಯನ್ನು ಹೊಂದಿಸಿದಾಗ ಮಾತ್ರವೆ ಹಿನ್ನೆಲೆ ಡೇಟಾ ನಿರ್ಬಂಧಿಸುವುದು ಸಾಧ್ಯವಾಗುತ್ತದೆ."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ಸ್ವಯಂ-ಸಿಂಕ್‌ ಡೇಟಾ ಆನ್‌‌ಮಾಡುವುದೇ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ವೆಬ್‌ನಲ್ಲಿ ನಿಮ್ಮ ಖಾತೆಗಳಲ್ಲಿ ಮಾಡಲಾದ್ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ಗೆ ನಕಲಿಸಲಾಗುತ್ತದೆ.\n\nಟ್ಯಾಬ್ಲೆಟ್‌ನಲ್ಲಿ ನೀವು ಮಾಡುವ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಕೆಲವು ಖಾತೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವೆಬ್‌ಗೆ ನಕಲಿಸುತ್ತವೆ. Google ಖಾತೆ ಕಾರ್ಯನಿರ್ವಹಿಸುವ ರೀತಿ ಇದು."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ವೆಬ್‌ನಲ್ಲಿ ನಿಮ್ಮ ಖಾತೆಗಳಲ್ಲ್ ಮಾಡಲಾದ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಮ್ಮ ಫೋನ್‌ಗೆ ನಕಲಿಸಲಾಗುತ್ತದೆ.\n\nಫೋನ್‌ನಲ್ಲಿ ನೀವು ಮಾಡುವ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಕೆಲವು ಖಾತೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವೆಬ್‌ಗೆ ನಕಲಿಸುತ್ತವೆ. Google ಖಾತೆ ಕಾರ್ಯನಿರ್ವಹಿಸುವ ರೀತಿ ಇದು."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ವೆಬ್‌ನಲ್ಲಿ ನಿಮ್ಮ ಖಾತೆಗಳಲ್ಲಿ ಮಾಡಲಾದ್ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ಗೆ ನಕಲಿಸಲಾಗುತ್ತದೆ.\n\nಟ್ಯಾಬ್ಲೆಟ್‌ನಲ್ಲಿ ನೀವು ಮಾಡುವ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಕೆಲವು ಖಾತೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವೆಬ್‌ಗೆ ನಕಲಿಸುತ್ತವೆ. /e/ ಖಾತೆ ಕಾರ್ಯನಿರ್ವಹಿಸುವ ರೀತಿ ಇದು."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ವೆಬ್‌ನಲ್ಲಿ ನಿಮ್ಮ ಖಾತೆಗಳಲ್ಲ್ ಮಾಡಲಾದ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿಮ್ಮ ಫೋನ್‌ಗೆ ನಕಲಿಸಲಾಗುತ್ತದೆ.\n\nಫೋನ್‌ನಲ್ಲಿ ನೀವು ಮಾಡುವ ಯಾವುದೇ ಬದಲಾವಣೆಗಳನ್ನು ಕೆಲವು ಖಾತೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ವೆಬ್‌ಗೆ ನಕಲಿಸುತ್ತವೆ. /e/ ಖಾತೆ ಕಾರ್ಯನಿರ್ವಹಿಸುವ ರೀತಿ ಇದು."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ಸ್ವಯಂ-ಸಿಂಕ್‌ ಡೇಟಾ ಆಫ್‌ ಮಾಡುವುದೇ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ಇದು ಡೇಟಾ ಮತ್ತು ಬ್ಯಾಟರಿ ಪೋಲಾಗದಂತೆ ತಡೆಯುತ್ತದೆ. ಆದರೆ ಇತ್ತೀಚಿನ ಮಾಹಿತಿಯನ್ನು ಸಂಗ್ರಹಿಸಲು ನೀವು ಪ್ರತಿ ಖಾತೆಯನ್ನು ಹಸ್ತಚಾಲಿತವಾಗಿ ಸಿಂಕ್‌ ಮಾಡಬೇಕಾಗುತ್ತದೆ. ಜೊತೆಗೆ, ಅಪ್‌ಡೇಟ್‌ಗಳ ಸಂದರ್ಭದಲ್ಲಿ ನಿಮಗೆ ಅಧಿಸೂಚನೆ ಬರುವುದಿಲ್ಲ."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ಬಳಕೆಯ ಆವರ್ತನೆ ಮರುಹೊಂದಿಕೆ ಡೇಟಾ"</string>
