--- a/res/values-ml-rIN/strings.xml
+++ b/res/values-ml-rIN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"മുന്നറിയിപ്പ്: <xliff:g id="COUNT">^1</xliff:g>-ൽ കൂടുതൽ തവണ അൺലോക്ക് ചെയ്യാനുള്ള ശ്രമങ്ങൾ പരാജയപ്പെട്ടുകഴിഞ്ഞാൽ നിങ്ങളുടെ ഉപകരണം മായ്ക്കപ്പെടും!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"നിങ്ങളുടെ പാസ്‌വേഡ് ടൈപ്പുചെയ്യുക"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"എൻക്രിപ്റ്റുചെയ്യൽ പരാജയപ്പെട്ടു"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"എൻക്രിപ്ഷൻ തടസ്സപ്പെട്ടതിനാൽ പൂർത്തിയാക്കാനായില്ല. തൽഫലമായി, നിങ്ങളുടെ ടാബ്‌ലെറ്റിലെ ഡാറ്റ ഇപ്പോൾ ആക്‌സസ്സുചെയ്യാനാകില്ല. \n\n നിങ്ങളുടെ ടാബ്‌ലെറ്റ് പുനരാരംഭിക്കുന്നതിന് ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം ആവശ്യമാണ്. പുനഃസജ്ജീകരണത്തിനുശേഷം നിങ്ങളുടെ ടാബ്‌ലെറ്റ് സജ്ജമാക്കുമ്പോൾ, നിങ്ങളുടെ Google അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാനുള്ള ഒരു അവസരം നിങ്ങൾക്ക് ഉണ്ടായിരിക്കും."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"എൻക്രിപ്ഷൻ തടസ്സപ്പെട്ടതിനാൽ പൂർത്തിയാക്കാനായില്ല. തൽഫലമായി, നിങ്ങളുടെ ഫോണിലെ ഡാറ്റ ഇപ്പോൾ ആക്‌സസ്സുചെയ്യാനാകില്ല. \n\nനിങ്ങളുടെ ഫോൺ പുനരാരംഭിക്കുന്നതിന് ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം ആവശ്യമാണ്. പുനഃസജ്ജീകരണത്തിനുശേഷം നിങ്ങളുടെ ഫോൺ സജ്ജമാക്കുമ്പോൾ, നിങ്ങളുടെ Google അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാനുള്ള ഒരു അവസരം നിങ്ങൾക്ക് ഉണ്ടായിരിക്കും."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"എൻക്രിപ്ഷൻ തടസ്സപ്പെട്ടതിനാൽ പൂർത്തിയാക്കാനായില്ല. തൽഫലമായി, നിങ്ങളുടെ ടാബ്‌ലെറ്റിലെ ഡാറ്റ ഇപ്പോൾ ആക്‌സസ്സുചെയ്യാനാകില്ല. \n\n നിങ്ങളുടെ ടാബ്‌ലെറ്റ് പുനരാരംഭിക്കുന്നതിന് ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം ആവശ്യമാണ്. പുനഃസജ്ജീകരണത്തിനുശേഷം നിങ്ങളുടെ ടാബ്‌ലെറ്റ് സജ്ജമാക്കുമ്പോൾ, നിങ്ങളുടെ /e/ അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാനുള്ള ഒരു അവസരം നിങ്ങൾക്ക് ഉണ്ടായിരിക്കും."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"എൻക്രിപ്ഷൻ തടസ്സപ്പെട്ടതിനാൽ പൂർത്തിയാക്കാനായില്ല. തൽഫലമായി, നിങ്ങളുടെ ഫോണിലെ ഡാറ്റ ഇപ്പോൾ ആക്‌സസ്സുചെയ്യാനാകില്ല. \n\nനിങ്ങളുടെ ഫോൺ പുനരാരംഭിക്കുന്നതിന് ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം ആവശ്യമാണ്. പുനഃസജ്ജീകരണത്തിനുശേഷം നിങ്ങളുടെ ഫോൺ സജ്ജമാക്കുമ്പോൾ, നിങ്ങളുടെ /e/ അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാനുള്ള ഒരു അവസരം നിങ്ങൾക്ക് ഉണ്ടായിരിക്കും."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ഡീക്രി‌പ്‌ഷൻ പരാജയപ്പെട്ടു"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"നിങ്ങൾ നൽകിയ പാസ്‌വേഡ് ശരിയാണെങ്കിലും നിർഭാഗ്യവശാൽ ഡാറ്റ കേടായി. \n\nനിങ്ങളുടെ ടാബ്‌ലെറ്റ് ഉപയോഗിച്ച് പുനരാരംഭിക്കാൻ ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം നടത്തേണ്ടതുണ്ട്. പുനഃസജ്ജീകരിച്ച ശേഷം നിങ്ങളുടെ ടാബ്‌ലെറ്റ് സജ്ജീകരിക്കുമ്പോൾ, Google അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാൻ അവസരം ലഭിക്കും."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"നിങ്ങൾ നൽകിയ പാസ്‌വേഡ് ശരിയാണെങ്കിലും നിർഭാഗ്യവശാൽ ഡാറ്റ കേടായി. \n\nനിങ്ങളുടെ ഫോൺ ഉപയോഗിച്ച് പുനരാരംഭിക്കാൻ ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം നടത്തേണ്ടതുണ്ട്. പുനഃസജ്ജീകരിച്ച ശേഷം നിങ്ങളുടെ ഫോൺ സജ്ജീകരിക്കുമ്പോൾ, Google അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാൻ അവസരം ലഭിക്കും."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"നിങ്ങൾ നൽകിയ പാസ്‌വേഡ് ശരിയാണെങ്കിലും നിർഭാഗ്യവശാൽ ഡാറ്റ കേടായി. \n\nനിങ്ങളുടെ ടാബ്‌ലെറ്റ് ഉപയോഗിച്ച് പുനരാരംഭിക്കാൻ ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം നടത്തേണ്ടതുണ്ട്. പുനഃസജ്ജീകരിച്ച ശേഷം നിങ്ങളുടെ ടാബ്‌ലെറ്റ് സജ്ജീകരിക്കുമ്പോൾ, /e/ അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാൻ അവസരം ലഭിക്കും."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"നിങ്ങൾ നൽകിയ പാസ്‌വേഡ് ശരിയാണെങ്കിലും നിർഭാഗ്യവശാൽ ഡാറ്റ കേടായി. \n\nനിങ്ങളുടെ ഫോൺ ഉപയോഗിച്ച് പുനരാരംഭിക്കാൻ ഒരു ഫാക്‌ടറി പുനഃസജ്ജീകരണം നടത്തേണ്ടതുണ്ട്. പുനഃസജ്ജീകരിച്ച ശേഷം നിങ്ങളുടെ ഫോൺ സജ്ജീകരിക്കുമ്പോൾ, /e/ അക്കൗണ്ടിൽ ബാക്കപ്പുചെയ്‌തിരിക്കുന്ന എല്ലാ ഡാറ്റയും പുനഃസ്ഥാപിക്കാൻ അവസരം ലഭിക്കും."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ടൈപ്പിംഗ് രീതി മാറുക"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"സ്ക്രീൻ ലോക്ക് സജ്ജമാക്കുക"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"നിങ്ങളുടെ ഉപകരണം പരിരക്ഷിക്കുക"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"നെറ്റ്‌വർക്ക് ക്രമീകരണം റീസെറ്റുചെയ്‌തു"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ഉപകരണം പുനഃസജ്ജീകരിക്കുക"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ഫാക്‌ടറിഡാറ്റ റീസെറ്റ്"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ഇത് നിങ്ങളുടെ ടാബ്‌ലെറ്റിന്റെ "<b>"ആന്തരിക സംഭരണത്തിൽ"</b>" നിന്നും ഇവയുൾപ്പെടെ എല്ലാ ഡാറ്റയും മായ്ക്കും:\n\n"<li>"നിങ്ങളുടെ Google അക്കൗണ്ട്"</li>\n<li>"സി‌സ്റ്റത്തിന്റെയും അപ്ലിക്കേഷന്റെയും ഡാറ്റയും ക്രമീകരണങ്ങളും"</li>\n<li>"ഡൗൺലോഡുചെ‌യ്‌ത അപ്ലിക്കേഷനുകൾ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ഇത് നിങ്ങളുടെ ഫോണിലെ "<b>"ആന്തരിക സംഭരണത്തിലെ"</b>" എല്ലാ ഡാറ്റയും മായ്ക്കും, അതിൽ ഇവയുൾപ്പെടുന്നു:\n\n"<li>"നിങ്ങളുടെ Google അക്കൗണ്ട്"</li>\n<li>"സിസ്റ്റം, അപ്ലിക്കേഷൻ എന്നിവയുടെ ഡാറ്റയും ക്രമീകരണങ്ങളും"</li>\n<li>"ഡൗൺലോഡ്ചെയ്‌ത അപ്ലിക്കേഷനുകൾ"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ഇത് നിങ്ങളുടെ ടാബ്‌ലെറ്റിന്റെ "<b>"ആന്തരിക സംഭരണത്തിൽ"</b>" നിന്നും ഇവയുൾപ്പെടെ എല്ലാ ഡാറ്റയും മായ്ക്കും:\n\n"<li>"നിങ്ങളുടെ /e/ അക്കൗണ്ട്"</li>\n<li>"സി‌സ്റ്റത്തിന്റെയും അപ്ലിക്കേഷന്റെയും ഡാറ്റയും ക്രമീകരണങ്ങളും"</li>\n<li>"ഡൗൺലോഡുചെ‌യ്‌ത അപ്ലിക്കേഷനുകൾ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ഇത് നിങ്ങളുടെ ഫോണിലെ "<b>"ആന്തരിക സംഭരണത്തിലെ"</b>" എല്ലാ ഡാറ്റയും മായ്ക്കും, അതിൽ ഇവയുൾപ്പെടുന്നു:\n\n"<li>"നിങ്ങളുടെ /e/ അക്കൗണ്ട്"</li>\n<li>"സിസ്റ്റം, അപ്ലിക്കേഷൻ എന്നിവയുടെ ഡാറ്റയും ക്രമീകരണങ്ങളും"</li>\n<li>"ഡൗൺലോഡ്ചെയ്‌ത അപ്ലിക്കേഷനുകൾ"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"നിങ്ങൾ നിലവിൽ ഇനിപ്പറയുന്ന അക്കൗണ്ടുകളിൽ സൈൻ ചെ‌യ്തിരിക്കുന്നു:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ഈ ഉപകരണത്തിൽ മറ്റ് ഉപയോക്താക്കളുണ്ട്.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"സംഗീതം"</li>\n<li>"ഫോട്ടോകൾ"</li>\n<li>"മറ്റ് ഉപയോക്തൃ ഡാറ്റ"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth സ്‌കാനിംഗ്"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"ഏത് സമയത്തും Bluetooth ഉപകരണങ്ങളെ തിരിച്ചറിയാൻ സിസ്റ്റം ആപ്സിനെയും സേവനങ്ങളെയും അനുവദിച്ചുകൊണ്ട് ലൊക്കേഷൻ മെച്ചപ്പെടുത്തുക."</string>
     <string name="location_network_based" msgid="6010456018401296590">"വൈഫൈ, സെല്ലുലാർ നെറ്റ്‌വർക്ക് ലൊക്കേഷൻ"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"നിങ്ങളുടെ ലൊക്കേഷൻ വേഗത്തിൽ നിർണ്ണയിക്കാൻ Google-ന്റെ ലൊക്കേഷൻ സേവനം ഉപയോഗിക്കാൻ അപ്ലിക്കേഷനുകളെ അനുവദിക്കുക. അജ്ഞാത ലൊക്കേഷൻ ഡാറ്റ ശേഖരിച്ച് Google-ന് അയയ്‌ക്കും."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"നിങ്ങളുടെ ലൊക്കേഷൻ വേഗത്തിൽ നിർണ്ണയിക്കാൻ /e/-ന്റെ ലൊക്കേഷൻ സേവനം ഉപയോഗിക്കാൻ അപ്ലിക്കേഷനുകളെ അനുവദിക്കുക. അജ്ഞാത ലൊക്കേഷൻ ഡാറ്റ ശേഖരിച്ച് /e/-ന് അയയ്‌ക്കും."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"വൈഫൈ നിർണ്ണയിച്ച ലൊക്കേഷൻ"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ഉപഗ്രഹങ്ങൾ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"നിങ്ങളുടെ ലൊക്കേഷൻ കൃത്യമായി കണ്ടെത്തുന്നതിന് ടാബ്‌ലെറ്റിൽ GPS ഉപയോഗിക്കാൻ അപ്ലിക്കേഷനുകളെ അനുവദിക്കുക"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"സഹായകരമായ GPS ഉപയോഗിക്കുക"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS-നെ സഹായിക്കുന്നതിന് സെർവർ ഉപയോഗിക്കുക (നെറ്റ്‌വർക്ക് ഉപയോഗം കുറയ്ക്കുന്നതിന് അൺചെക്കുചെയ്യുക)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS-നെ സഹായിക്കുന്നതിന് സെർവർ ഉപയോഗിക്കുക (GPS പ്രകടനം മെച്ചപ്പെട്ടതാക്കുന്നതിന് അൺചെക്കുചെയ്യുക)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ലൊക്കേഷനും Google തിരയലും"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"തിരയൽ ഫലങ്ങളും മറ്റ് സേവനങ്ങളും മെച്ചപ്പെടുത്താൻ നിങ്ങളുടെ ലൊക്കേഷൻ ഉപയോഗിക്കാൻ Google-നെ അനുവദിക്കുക"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ലൊക്കേഷനും /e/ തിരയലും"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"തിരയൽ ഫലങ്ങളും മറ്റ് സേവനങ്ങളും മെച്ചപ്പെടുത്താൻ നിങ്ങളുടെ ലൊക്കേഷൻ ഉപയോഗിക്കാൻ /e/-നെ അനുവദിക്കുക"</string>
     <string name="location_access_title" msgid="7064108942964081243">"എന്റെ ലൊക്കേഷനിലേക്ക് ആക്‌സസ്സുചെയ്യുക"</string>
     <string name="location_access_summary" msgid="69031404093194341">"നിങ്ങളുടെ അനുമതി ആവശ്യപ്പെട്ട അപ്ലിക്കേഷനുകളെ ലൊക്കേഷൻ വിവരങ്ങൾ ഉപയോഗിക്കാൻ അനുവദിക്കുക"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ലൊക്കേഷൻ ഉറവിടങ്ങൾ"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"അപ്ലിക്കേഷൻ ക്രമീകരണങ്ങൾ"</string>
     <string name="install_applications" msgid="4872012136210802181">"അജ്ഞാത ഉറവിടങ്ങൾ"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"എല്ലാ അപ്ലിക്കേഷൻ ഉറവിടങ്ങളും അനുവദിക്കുക"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play-യ്ക്ക് പുറമെയുള്ള മറ്റ് ഉറവിടങ്ങളിൽ നിന്ന് അപ്ലിക്കേഷനുകൾ ഇൻസ്റ്റാൾ ചെയ്യാൻ അനുവദിക്കുന്നു"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play-യ്ക്ക് പുറമെയുള്ള മറ്റ് ഉറവിടങ്ങളിൽ നിന്ന് അപ്ലിക്കേഷനുകൾ ഇൻസ്റ്റാൾ ചെയ്യാൻ അനുവദിക്കുന്നു"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"അജ്ഞാത ഉറവിടങ്ങളിൽ നിന്നും അപ്ലിക്കേഷനുകൾ ഇൻസ്റ്റാളുചെയ്യാൻ അനുവദിക്കുക"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"അജ്ഞാത ഉറവിടങ്ങളിൽ നിന്നുള്ള അപ്ലിക്കേഷനുകളാൽ നിങ്ങളുടെ ടാബ്‌ലെറ്റും വ്യക്തിഗത ഡാറ്റയും ആക്രമിക്കപ്പെടാനുള്ള സാധ്യത വളരെ കൂടുതലാണ്. ഈ അപ്ലിക്കേഷനുകൾ ഉപയോഗിക്കുന്നതിലൂടെ നിങ്ങളുടെ ടാബ്‌ലെറ്റിനു സംഭവിക്കുന്ന എല്ലാ നാശനഷ്‌ടങ്ങൾക്കും അല്ലെങ്കിൽ ഡാറ്റ നഷ്‌ടങ്ങൾക്കും നിങ്ങൾ മാത്രമാണ് ഉത്തരവാദിയെന്ന് നിങ്ങൾ അംഗീകരിക്കുന്നു."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"അജ്ഞാത ഉറവിടങ്ങളിൽ നിന്നുള്ള അപ്ലിക്കേഷനുകളാൽ നിങ്ങളുടെ ഫോണും വ്യക്തിഗത ഡാറ്റയും ആക്രമിക്കപ്പെടാനുള്ള സാധ്യത വളരെ കൂടുതലാണ്. ഈ അപ്ലിക്കേഷനുകൾ ഉപയോഗിക്കുന്നതിലൂടെ നിങ്ങളുടെ ഫോണിനു സംഭവിക്കുന്ന എല്ലാ നാശനഷ്‌ടങ്ങൾക്കും അല്ലെങ്കിൽ ഡാറ്റ നഷ്‌ടങ്ങൾക്കും നിങ്ങൾ മാത്രമാണ് ഉത്തരവാദിയെന്ന് നിങ്ങൾ അംഗീകരിക്കുന്നു."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ബാക്കപ്പുചെയ്യലും പുനഃസ്ഥാപിക്കലും"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"വ്യക്തിഗത ഡാറ്റ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ഡാറ്റ ബാക്കപ്പുചെയ്യൂ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"അപ്ലിക്കേഷൻ ഡാറ്റ, വൈഫൈ പാസ്‌വേഡുകൾ, മറ്റ് ക്രമീകരണങ്ങൾ എന്നിവ Google സെർവറുകളിൽ ബാക്കപ്പുചെയ്യുക"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"അപ്ലിക്കേഷൻ ഡാറ്റ, വൈഫൈ പാസ്‌വേഡുകൾ, മറ്റ് ക്രമീകരണങ്ങൾ എന്നിവ /e/ സെർവറുകളിൽ ബാക്കപ്പുചെയ്യുക"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ബാക്കപ്പ് അക്കൗണ്ട്"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"അപ്ലിക്കേഷൻ ഡാറ്റ ഉൾപ്പെടുത്തുക"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"സ്വയമേവ പുനഃസ്ഥാപിക്കൽ"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"ബാക്കപ്പ് സേവനം നിർജ്ജീവമാണ്."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"നിലവിൽ അക്കൗണ്ടുകളൊന്നും ബാക്കപ്പ് ചെയ്ത ഡാറ്റ സംഭരിക്കുന്നില്ല"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Google സെർവറുകളിൽ നിങ്ങളുടെ വൈഫൈ പാസ്‌വേഡുകൾ, ബുക്ക്‌മാർക്കുകൾ, മറ്റ് ക്രമീകരണങ്ങൾ, അപ്ലിക്കേഷൻ ഡാറ്റ എന്നിവ ബാക്കപ്പുചെയ്യുന്നത് അവസാനിപ്പിക്കുകയും അതിലെ എല്ലാ പകർപ്പുകളും മായ്‌ക്കുകയും ചെയ്യണോ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"/e/ സെർവറുകളിൽ നിങ്ങളുടെ വൈഫൈ പാസ്‌വേഡുകൾ, ബുക്ക്‌മാർക്കുകൾ, മറ്റ് ക്രമീകരണങ്ങൾ, അപ്ലിക്കേഷൻ ഡാറ്റ എന്നിവ ബാക്കപ്പുചെയ്യുന്നത് അവസാനിപ്പിക്കുകയും അതിലെ എല്ലാ പകർപ്പുകളും മായ്‌ക്കുകയും ചെയ്യണോ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ഉപകരണ വിവരവും (വൈഫൈ പാസ്‌വേഡുകളും കോൾ ചരിത്രവും പോലുള്ളവ) ആപ്പ് വിവരവും (ആപ്പ്‌സ് സംഭരിച്ച ക്രമീകരണവും ഫയലുകളും പോലുള്ളവ) ബാക്കപ്പുചെയ്യുന്നത് നിർത്തുകയും വിദൂര സെർവറുകളിലെ എല്ലാ പകർപ്പുകളും മായ്‌ക്കുകയും ചെയ്യണോ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ഉപകരണ വിവരവും (വൈഫൈ പാസ്‌വേഡുകളും കോൾ ചരിത്രവും പോലുള്ളവ) ആപ്പ് വിവരവും (ക്രമീകരണവും ആപ്പ്‌സ് സംഭരിച്ച ഫയലുകളും പോലുള്ളവ) വിദൂരമായി സ്വയമേവ ബാക്കപ്പെടുക്കുന്നു.\n\nനിങ്ങൾ സ്വയമേയുള്ള ബാക്കപ്പ് ഓണാക്കുമ്പോൾ, ഉപകരണ, ആപ്പ് വിവരം ഇടയ്‌ക്കിടെ വിദൂരമായി സംരക്ഷിക്കും. ആപ്പ് വിവരം എന്നത് കോൺടാക്റ്റുകൾ, സന്ദേശങ്ങൾ, ഫോട്ടോകൾ എന്നിവ പോലുള്ള രഹസ്യസ്വഭാവമുള്ളവ ഉൾപ്പെടെ ആപ്പ് സംരക്ഷിച്ചിട്ടുള്ള ഏതൊരു വിവരവും (ഡെവലപ്പർ ക്രമീകരണം അടിസ്ഥാനമാക്കി) ആകാം."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"ഉപകരണ അഡ്മിനിസ്‌ട്രേഷൻ ക്രമീകരണങ്ങൾ"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"കലണ്ടർ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"കോണ്ടാക്റ്റ്"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google സമന്വയത്തിലേക്ക് സ്വാഗതം!"</font>" \nനിങ്ങൾ എവിടെയായിരുന്നാലും കോൺടാക്റ്റുകളും അപ്പോയ്‌ന്റ്മെന്റുകളും അതിലധികം കാര്യങ്ങളും ആക്‌സസ്സുചെയ്യാൻ അനുവദിക്കുന്നതിനായി ഡാറ്റ സമന്വയിപ്പിക്കാനുള്ള Google-ന്റെ ഒരു സമീപനം."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ സമന്വയത്തിലേക്ക് സ്വാഗതം!"</font>" \nനിങ്ങൾ എവിടെയായിരുന്നാലും കോൺടാക്റ്റുകളും അപ്പോയ്‌ന്റ്മെന്റുകളും അതിലധികം കാര്യങ്ങളും ആക്‌സസ്സുചെയ്യാൻ അനുവദിക്കുന്നതിനായി ഡാറ്റ സമന്വയിപ്പിക്കാനുള്ള /e/-ന്റെ ഒരു സമീപനം."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"അപ്ലിക്കേഷൻ സമന്വയ ക്രമീകരണങ്ങൾ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ഡാറ്റയും സമന്വയവും"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"പാസ്‌വേഡ് മാറ്റുക"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"സെല്ലുലാർ നെറ്റ്‌വർക്കുകൾ ലഭ്യമാകുമ്പോൾ മാത്രം പാശ്ചാത്തല ഡാറ്റയെ ആശ്രയിക്കുന്ന ഒരു അപ്ലിക്കേഷൻ പ്രവർത്തനം നിർത്തുന്നതിന് ഈ സവിശേഷത ഇടയാക്കാം.\n\nഅപ്ലിക്കേഷനിൽ ലഭ്യമായ ക്രമീകരണങ്ങളിൽ കൂടുതൽ ഉചിതമായ ഡാറ്റാ ഉപയോഗ നിയന്ത്രണങ്ങൾ നിങ്ങൾക്ക് കണ്ടെത്താനാകും."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"ഒരു സെല്ലുലാർ ഡാറ്റ പരിധി സജ്ജീകരിക്കുമ്പോൾ മാത്രമേ പശ്ചാത്തല ഡാറ്റ പരിമിതപ്പെടുത്താനാകൂ."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ഡാറ്റ സ്വയംസമന്വയിപ്പിക്കൽ ഓണാക്കണോ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"വെബിൽ നിങ്ങളുടെ അക്കൗണ്ടുകളിൽ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം നിങ്ങളുടെ ടാബ്‌ലെറ്റിലേക്ക് സ്വയമേവ പകർത്തും.\n\nടാബ്‌ലെറ്റിൽ നിങ്ങൾ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം ചില അക്കൗണ്ടുകൾ സ്വയമേവ വെബിലേക്കും പകർത്താനിടയുണ്ട്. ഒരു Google അക്കൗണ്ട് ഇത്തരത്തിൽ പ്രവർത്തിക്കുന്നു."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"വെബിൽ നിങ്ങളുടെ അക്കൗണ്ടുകളിൽ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം നിങ്ങളുടെ ഫോണിലേക്ക് സ്വയമേവ പകർത്തും.\n\nഫോണിൽ നിങ്ങൾ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം ചില അക്കൗണ്ടുകൾ സ്വയമേവ വെബിലേക്കും പകർത്താനിടയുണ്ട്. ഒരു Google അക്കൗണ്ട് ഇത്തരത്തിൽ പ്രവർത്തിക്കുന്നു."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"വെബിൽ നിങ്ങളുടെ അക്കൗണ്ടുകളിൽ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം നിങ്ങളുടെ ടാബ്‌ലെറ്റിലേക്ക് സ്വയമേവ പകർത്തും.\n\nടാബ്‌ലെറ്റിൽ നിങ്ങൾ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം ചില അക്കൗണ്ടുകൾ സ്വയമേവ വെബിലേക്കും പകർത്താനിടയുണ്ട്. ഒരു /e/ അക്കൗണ്ട് ഇത്തരത്തിൽ പ്രവർത്തിക്കുന്നു."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"വെബിൽ നിങ്ങളുടെ അക്കൗണ്ടുകളിൽ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം നിങ്ങളുടെ ഫോണിലേക്ക് സ്വയമേവ പകർത്തും.\n\nഫോണിൽ നിങ്ങൾ വരുത്തുന്ന മാറ്റങ്ങളെല്ലാം ചില അക്കൗണ്ടുകൾ സ്വയമേവ വെബിലേക്കും പകർത്താനിടയുണ്ട്. ഒരു /e/ അക്കൗണ്ട് ഇത്തരത്തിൽ പ്രവർത്തിക്കുന്നു."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ഡാറ്റ സ്വയം സമന്വയിപ്പിക്കൽ ഓഫാക്കണോ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ഇത് ഡാറ്റയും ബാറ്ററി ഉപയോഗവും സംരക്ഷിക്കുമെങ്കിലും ഏറ്റവും പുതിയ വിവരങ്ങൾ ശേഖരിക്കാൻ നിങ്ങൾക്ക് ഓരോ അക്കൗണ്ടും സ്വമേധയാ സമന്വയിപ്പിക്കേണ്ടതായി വരും. അപ്‌ഡേറ്റുകൾ സംഭവിക്കുമ്പോൾ നിങ്ങൾക്ക് അറിയിപ്പുകൾ ലഭിക്കുകയുമില്ല."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ഉപയോഗ സൈക്കിൾ പുനഃസജ്ജീകരണ തീയതി"</string>
