--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Advarsel: Enheten din tømmes etter <xliff:g id="COUNT">^1</xliff:g> mislykkede opplåsningsforsøk til."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Skriv inn passordet"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Kryptering mislykket"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Krypteringen ble avbrutt og kan ikke fullføres. Dette betyr at dataene på nettbrettet ditt ikke lenger er tilgjengelige.\n\nFor å fortsette å bruke nettbrettet, må du gjennomføre en tilbakestilling til fabrikkstandard. Når du konfigurerer nettbrettet etter tilbakestillingen, får du mulighet til å gjenopprette data som ble sikkerhetskopiert til Google-kontoen din."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Krypteringen ble avbrutt og kan ikke fullføres. Dette betyr at dataene på telefonen din ikke lenger er tilgjengelige.\n\nFor å fortsette å bruke telefonen, må du gjennomføre en tilbakestilling til fabrikkstandard. Når du konfigurerer telefonen etter tilbakestillingen, får du mulighet til å gjenopprette data som ble sikkerhetskopiert til Google-kontoen din."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Krypteringen ble avbrutt og kan ikke fullføres. Dette betyr at dataene på nettbrettet ditt ikke lenger er tilgjengelige.\n\nFor å fortsette å bruke nettbrettet, må du gjennomføre en tilbakestilling til fabrikkstandard. Når du konfigurerer nettbrettet etter tilbakestillingen, får du mulighet til å gjenopprette data som ble sikkerhetskopiert til /e/-kontoen din."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Krypteringen ble avbrutt og kan ikke fullføres. Dette betyr at dataene på telefonen din ikke lenger er tilgjengelige.\n\nFor å fortsette å bruke telefonen, må du gjennomføre en tilbakestilling til fabrikkstandard. Når du konfigurerer telefonen etter tilbakestillingen, får du mulighet til å gjenopprette data som ble sikkerhetskopiert til /e/-kontoen din."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Dekrypteringen mislyktes"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Passordet du skrev inn, er korrekt, men dataene dine er dessverre skadet. \n\nHvis du vil bruke nettbrettet ditt, må du tilbakestille det til fabrikkstandard. Når du konfigurerer nettbrettet etter tilbakestillingen, kan du gjenopprette alle data som er blitt sikkerhetskopiert fra Google-kontoen din."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Passordet du skrev inn, er korrekt, men dataene dine er dessverre skadet. \n\nHvis du vil bruke telefonen din, må du tilbakestille den til fabrikkstandard. Når du konfigurerer telefonen etter tilbakestillingen, kan du gjenopprette alle data som er blitt sikkerhetskopiert fra Google-kontoen din."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Passordet du skrev inn, er korrekt, men dataene dine er dessverre skadet. \n\nHvis du vil bruke nettbrettet ditt, må du tilbakestille det til fabrikkstandard. Når du konfigurerer nettbrettet etter tilbakestillingen, kan du gjenopprette alle data som er blitt sikkerhetskopiert fra /e/-kontoen din."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Passordet du skrev inn, er korrekt, men dataene dine er dessverre skadet. \n\nHvis du vil bruke telefonen din, må du tilbakestille den til fabrikkstandard. Når du konfigurerer telefonen etter tilbakestillingen, kan du gjenopprette alle data som er blitt sikkerhetskopiert fra /e/-kontoen din."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Bytt inndatametode"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Angi skjermlås"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Beskytt enheten"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Nettverksinnstillingene er tilbakestilt"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Tilbakestill enheten"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Tilbakestill til fabrikkstandard"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dette kommer til å slette alle data fra nettbrettets "<b>"interne lagringsplass"</b>", herunder:\n\n"<li>"Google-kontoen din"</li>\n<li>"Data og innstillinger for system og apper"</li>\n<li>"Nedlastede apper"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dette sletter alle data fra telefonens "<b>"interne lagringsplass"</b>", inkludert\n\n"<li>"Google-kontoen din"</li>\n<li>"data og innstillinger for system og apper"</li>\n<li>"nedlastede apper"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dette kommer til å slette alle data fra nettbrettets "<b>"interne lagringsplass"</b>", herunder:\n\n"<li>"/e/-kontoen din"</li>\n<li>"Data og innstillinger for system og apper"</li>\n<li>"Nedlastede apper"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dette sletter alle data fra telefonens "<b>"interne lagringsplass"</b>", inkludert\n\n"<li>"/e/-kontoen din"</li>\n<li>"data og innstillinger for system og apper"</li>\n<li>"nedlastede apper"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Du er for øyeblikket pålogget følgende kontoer:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Det er andre brukere tilstede på denne enheten.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musikk"</li>\n<li>"Bilder"</li>\n<li>"Andre brukerdata"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth-skanning"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Gjør posisjonsangivelse mer nøyaktig ved å la systemapper og -tjenester oppdage Bluetooth-enheter når som helst."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi-Fi- og mobilnettverksposisjon"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Tillat at apper bruker posisjonstjenesten fra Google til å finne posisjonen din raskere. Anonym posisjonsdata blir samlet inn og sendt til Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Tillat at apper bruker posisjonstjenesten fra /e/ til å finne posisjonen din raskere. Anonym posisjonsdata blir samlet inn og sendt til /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Posisjon fastsatt av Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS-satellitter"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Tillat at apper bruker GPS på nettbrettet til å finne den eksakte posisjonen din"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Aktiver GPS med hjelp"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Bruk tjener til å hjelpe GPS (opphev for å redusere nettverksbruken)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Bruk tjeneren til å hjelpe GPS (velg for å forbedre GPS-ytelsen)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Posisjon og Google-søk"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"La Google bruke posisjonen din til å forbedre søkeresultatene og andre tjenester"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Posisjon og /e/-søk"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"La /e/ bruke posisjonen din til å forbedre søkeresultatene og andre tjenester"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Bruk av posisjon"</string>
     <string name="location_access_summary" msgid="69031404093194341">"La apper som har bedt om tillatelse, bruke posisjonsinformasjonen din"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Posisjonskilder"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Innstillinger for app"</string>
     <string name="install_applications" msgid="4872012136210802181">"Ukjente kilder"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Tillat alle appkilder"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lar deg installere apper fra andre kilder enn Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lar deg installere apper fra andre kilder enn /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Tillat installasjon av apper fra ukjente kilder"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Nettbrettet og personopplysningene dine er mer sårbare for angrep fra apper fra ukjente kilder. Du godtar at du alene er ansvarlig for enhver skade på nettbrettet eller tap av data som kan oppstå fra bruk av disse appene."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Telefonen og personopplysningene dine er mer sårbare for angrep hvis du bruker apper fra ukjente kilder. Du godtar at du selv er ansvarlig for skade på telefonen eller tap av data som kan skje ved å bruke disse appene."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Sikkerhetskopier og gjenopprett"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Personlige data"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Sikkerhetskopiér data"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Sikkerhetskopiér appdata, Wi-Fi-passord og andre innstillinger til Googles tjenere"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Sikkerhetskopiér appdata, Wi-Fi-passord og andre innstillinger til /e/s tjenere"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Sikkerhetskopikonto"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Inkluder appdata"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Auto-gjenoppretting"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Sikkerhetskopieringstjenesten er inaktiv."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Ingen konto lagrer for øyeblikket sikkerhetskopierte data"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Vil du stoppe sikkerhetskopiering av Wi-Fi-passord, bokmerker, andre innstillinger og appdata, samt slette alle kopier på Googles tjenere?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Vil du stoppe sikkerhetskopiering av Wi-Fi-passord, bokmerker, andre innstillinger og appdata, samt slette alle kopier på /e/s tjenere?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Vil du stoppe automatisk sikkerhetskopiering av enhetsdata (for eksempel Wi-Fi-passord og anropslogg) og appdata (for eksempel innstillinger og filer lagret av apper), og i tillegg slette alle kopier på eksterne tjenere?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Sikkerhetskopiér enhetsdata (for eksempel Wi-Fi-passord og anropslogg) og appdata (for eksempel innstillinger og filer lagret av apper) automatisk fra en ekstern posisjon.\n\nNår du slår på automatisk sikkerhetskopiering, lagres app- og enhetsdata automatisk fra en ekstern posisjon. Appdata kan være alle slags data apper har lagret (basert på utviklerinnstillinger), inkludert potensielle sensitive data, for eksempel kontakter, meldinger og bilder."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Innstillinger for enhetsadministrasjon"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalender"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontakter"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Velkommen til Google-synkronisering!"</font>\n"Synkroniser på Google-måten, slik at du har tilgang til kontaktene dine, avtalene dine og mye mer – uansett hvor du befinner deg."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Velkommen til /e/-synkronisering!"</font>\n"Synkroniser på /e/-måten, slik at du har tilgang til kontaktene dine, avtalene dine og mye mer – uansett hvor du befinner deg."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Synkroniseringsinnstillinger for app"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Data og synkronisering"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Endre passord"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Denne funksjonen kan føre til at apper som er avhengig av bakgrunnsdata, slutter å fungere når bare mobilnett er tilgjengelig. \n\nDu kan finne flere relevante kontroller for databruk i innstillingene som er tilgjengelige i appen."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Begrensning av bakgrunnsdata er bare mulig etter du har angitt en grense for mobildata."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Slå på auto-synkronisering?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Alle endringene du gjør i kontoene dine på nettet, kopieres auto­matisk til nettbrettet ditt.\n\nNoen kontoer kan også auto­matisk kopiere endringer du gjør på nettbrettet til nettet. Google-kontoer fungerer på denne måten."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Alle endringene du gjør i kontoene dine på nettet, kopieres auto­matisk til telefonen din.\n\nNoen kontoer kan også auto­matisk kopiere endringer du gjør på telefonen, til nettet. Google-kontoer fungerer på denne måten."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Alle endringene du gjør i kontoene dine på nettet, kopieres auto­matisk til nettbrettet ditt.\n\nNoen kontoer kan også auto­matisk kopiere endringer du gjør på nettbrettet til nettet. /e/-kontoer fungerer på denne måten."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Alle endringene du gjør i kontoene dine på nettet, kopieres auto­matisk til telefonen din.\n\nNoen kontoer kan også auto­matisk kopiere endringer du gjør på telefonen, til nettet. /e/-kontoer fungerer på denne måten."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Vil du slå av auto-synkronisering?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Dette bevarer data- og batteribruk, men du må synkronisere hver konto manuelt for å samle ny informasjon. Du kommer ikke til å motta varsler når det gjøres oppdateringer."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Tilbakestillingsdato for brukssyklus"</string>
