--- a/res/values-ne-rNP/strings.xml
+++ b/res/values-ne-rNP/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"चेतावनी: खुला गर्न <xliff:g id="COUNT">^1</xliff:g> भन्दा बढी असफल प्रयासहरू पछि तपाईँको उपकरण पुछिने छ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"तपाईँको पासवर्ड टाइप गर्नुहोस्"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"इन्क्रिप्सन असफल"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"इन्क्रिप्सन अवरूद्ध भयो र पूरा हुन सक्दैन। परिणाम स्वरूप तपाईँको ट्याब्लेटको डेटा अब पहुँचयोग्य हुँदैन।\n \n तपाईँको ट्याब्लेटको प्रयोग सुरू गर्नका लागि तपाईँले कारखाना पुनःसेट गर्नु  पर्छ। जब पुनःसेट हुन्छ तब तपाईँ ट्याब्लेट सेट गर्नुहुन्छ, तपाईँको Google खातामा जगेडा गरिएको कुनै पनि डेटा पुनर्स्थापना गर्ने अवसर तपाईँलाई हुने छ।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"एन्क्रिप्सन रोकिएको थियो र पूरा हुन सकेन। नतिजाको रूपमा तपाईँको फोनमा डेटा पहुँच यग्य छैन। \n\nतपाईँको फोनको उपयोग फरि सुरु गर्नको लागि तपाईँले एउटा फ्याक्ट्रि पुनःसेट गर्न जरूरी छ। जब तपाईँ पुनःसेटपछि तपाईँको फोन सेटअप गर्नु हुन्छ भने  कुनै पनि डेटा जुन तपाईँको Google खातामा ब्याकअप गरिएको थियो तपाईँलाई पुनःप्राप्त गर्ने अवसर हुने छ।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"इन्क्रिप्सन अवरूद्ध भयो र पूरा हुन सक्दैन। परिणाम स्वरूप तपाईँको ट्याब्लेटको डेटा अब पहुँचयोग्य हुँदैन।\n \n तपाईँको ट्याब्लेटको प्रयोग सुरू गर्नका लागि तपाईँले कारखाना पुनःसेट गर्नु  पर्छ। जब पुनःसेट हुन्छ तब तपाईँ ट्याब्लेट सेट गर्नुहुन्छ, तपाईँको /e/ खातामा जगेडा गरिएको कुनै पनि डेटा पुनर्स्थापना गर्ने अवसर तपाईँलाई हुने छ।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"एन्क्रिप्सन रोकिएको थियो र पूरा हुन सकेन। नतिजाको रूपमा तपाईँको फोनमा डेटा पहुँच यग्य छैन। \n\nतपाईँको फोनको उपयोग फरि सुरु गर्नको लागि तपाईँले एउटा फ्याक्ट्रि पुनःसेट गर्न जरूरी छ। जब तपाईँ पुनःसेटपछि तपाईँको फोन सेटअप गर्नु हुन्छ भने  कुनै पनि डेटा जुन तपाईँको /e/ खातामा ब्याकअप गरिएको थियो तपाईँलाई पुनःप्राप्त गर्ने अवसर हुने छ।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"गुप्तिकरण उल्टाउन असफल"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"तपाईँले प्रविष्ट गर्नुभएको पासवर्ड ठीक छ, तर दुर्भाग्यबश तपाईँको डेटा बिग्रिएको छ।\n\n तपाईँको ट्याब्लेट पुन: प्रयोग गर्न फ्याक्ट्री रिसेट गर्न पर्छ। रिसेट गरे पश्चात जब तपाई आफ्नो ट्याब्लेट सेटअप गर्नुहुन्छ तपाईँले Google खातामा ब्याकअप भए सम्मका डेटा पुनर्स्थापना गर्ने अवसर प्राप्त गर्नु हुनेछ।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"तपाईँले प्रविष्ट गर्नुभएको पासवर्ड ठीक छ, तर दुर्भाग्यबश तपाईँको डेटा बिग्रिएको छ।\n\n तपाईँको फोन पुन: प्रयोग गर्न फ्याक्ट्री रिसेट गर्न पर्छ। रिसेट गरे पश्चात जब तपाईँ आफ्नो फोन सेटअप गर्नुहुन्छ तपाईँले Google खातामा ब्याकअप भए सम्मका डेटा पुनर्स्थापना गर्ने अवसर प्राप्त गर्नु हुनेछ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"तपाईँले प्रविष्ट गर्नुभएको पासवर्ड ठीक छ, तर दुर्भाग्यबश तपाईँको डेटा बिग्रिएको छ।\n\n तपाईँको ट्याब्लेट पुन: प्रयोग गर्न फ्याक्ट्री रिसेट गर्न पर्छ। रिसेट गरे पश्चात जब तपाई आफ्नो ट्याब्लेट सेटअप गर्नुहुन्छ तपाईँले /e/ खातामा ब्याकअप भए सम्मका डेटा पुनर्स्थापना गर्ने अवसर प्राप्त गर्नु हुनेछ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"तपाईँले प्रविष्ट गर्नुभएको पासवर्ड ठीक छ, तर दुर्भाग्यबश तपाईँको डेटा बिग्रिएको छ।\n\n तपाईँको फोन पुन: प्रयोग गर्न फ्याक्ट्री रिसेट गर्न पर्छ। रिसेट गरे पश्चात जब तपाईँ आफ्नो फोन सेटअप गर्नुहुन्छ तपाईँले /e/ खातामा ब्याकअप भए सम्मका डेटा पुनर्स्थापना गर्ने अवसर प्राप्त गर्नु हुनेछ।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"स्विच इनपुट विधि"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"स्क्रिन लक सेट गर्नुहोस्"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"तपाईँको यन्त्र सुरक्षित गर्नुहोस्"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"सञ्जाल सेटिङ्हरू रिसेट गरियो"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"उपकरण पुनः सेट गर्नुहोस्"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"कारखाना डेटा रिसेट"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"यस कार्यले तपाईँको सम्पूर्ण डेटा मेटाउँछ ट्याब्लेटको "<b>" आन्तरिक भण्डारणबाट "</b>" : जसमा, \n \n "<li>" तपाईँको Google खाता "</li>" \n "<li>" प्रणाली र अनुप्रयोग डेटा र सेटिङहरू"</li>" \n "<li>" डाउनलोड गरिएका अनुप्रयोगहरू "</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"यसले सबै डेटा तपाईंको "<b>"आन्तरिक भण्डारणबाट मेटाउँदछ"</b>", समावेश गर्दछ:\n\n"<li>"तपाईंको Google खाता"</li>\n<li>"प्रणाली र अनुप्रयोग डेटा र सेटिङहरू"</li>\n<li>"डाउनलोड गरिएका अनुप्रयोगहरू"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"यस कार्यले तपाईँको सम्पूर्ण डेटा मेटाउँछ ट्याब्लेटको "<b>" आन्तरिक भण्डारणबाट "</b>" : जसमा, \n \n "<li>" तपाईँको /e/ खाता "</li>" \n "<li>" प्रणाली र अनुप्रयोग डेटा र सेटिङहरू"</li>" \n "<li>" डाउनलोड गरिएका अनुप्रयोगहरू "</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"यसले सबै डेटा तपाईंको "<b>"आन्तरिक भण्डारणबाट मेटाउँदछ"</b>", समावेश गर्दछ:\n\n"<li>"तपाईंको /e/ खाता"</li>\n<li>"प्रणाली र अनुप्रयोग डेटा र सेटिङहरू"</li>\n<li>"डाउनलोड गरिएका अनुप्रयोगहरू"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n" \nतपाईँले अहिले निम्न खाताहरूमा साइन इन गर्नुभयो:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n" यस यन्त्रमा हाल अन्य प्रयोगकर्ताहरु छन्। \n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"तस्बिरहरू"</li>\n<li>"अन्य उपयोगकर्ता डेटा"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ब्लुटुथ स्क्यान हुँदै"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"प्रणाली अनुप्रयोगहरू र सेवाहरूलाई कुनै पनि समयमा ब्लुटुथ यन्त्रहरू पहिचान गर्न अनुमति दिएर स्थान पहिचान सामर्थ्यतामा सुधार गर्नुहोस्।"</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi-Fi र सेलुलर सञ्जाल स्थान"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"तपाईँको स्थानलाई सीघ्र अनुमान गर्न अनुप्रयोगहरूलाई Google स्थान सेवा प्रयोग गर्न अनुमति दिनुहोस्। बेनामी स्थान डेटा भेला गरिने छ र Googleमा पठाइने छ।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"तपाईँको स्थानलाई सीघ्र अनुमान गर्न अनुप्रयोगहरूलाई /e/ स्थान सेवा प्रयोग गर्न अनुमति दिनुहोस्। बेनामी स्थान डेटा भेला गरिने छ र /e/मा पठाइने छ।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"वाइ-फाइद्वारा निर्धारित स्थान"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS सेटेलाइट"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"तपाईँको स्थान इङ्गित गर्नको लागि तपाईँको ट्याब्लेटमा अनुप्रयोगलाई GPS को प्रयोग गर्न दिनुहोस्"</string>
@@ -1333,7 +1333,7 @@
     <string name="assisted_gps" msgid="4649317129586736885">"सहायोगी GPSको प्रयोग गर्नुहोस्"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS लाई सहयोग पुर्‍याउन सर्भरको प्रयोग गर्नुहोस् (सञ्जाल प्रयोग घटाउन अनचेक गर्नुहोस्)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS लाई मद्दत पुर्याउन सर्भर प्रयोग गर्नुहोस् (GPS कार्यसम्पादन सुधार्न अनचेक गर्नुहोस्)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"स्थान; Google खोजी"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"स्थान; /e/ खोजी"</string>
     <string name="use_location_summary" msgid="3978805802386162520">"तपाईँको खोज परिणामहरू र अन्य सेवाहरू सुधार्नका लागि गुगललाई तपाईँको स्थान प्रयोग गर्न अनुमति दिनुहोस्"</string>
     <string name="location_access_title" msgid="7064108942964081243">"मेरो स्थानमा पहुँच गर्नुहोस्"</string>
     <string name="location_access_summary" msgid="69031404093194341">"तपाईंको अनुमतिबाट अनुप्रयोगहरूलाई तपाईंको स्थान जानकारीको उपयोग गर्न दिनुहोस्।"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"अनुप्रयोग सेटिङहरू"</string>
     <string name="install_applications" msgid="4872012136210802181">"अज्ञात स्रोतहरू"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"सबै अनुप्रयोग स्रोतहरू अनुमति"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google प्ले भन्दा अन्य स्रोतबाट अनुप्रयोगको स्थापना गर्न दिनुहोस्"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ प्ले भन्दा अन्य स्रोतबाट अनुप्रयोगको स्थापना गर्न दिनुहोस्"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"अज्ञात स्थानबाट अनुप्रयोगहरूका स्थापनाका लागि अनुमति दिनुहोस्"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"तपाईँको ट्याब्लेट र व्यक्तिगत डेटा अज्ञात स्रोतहरूबाट अनुप्रयोगहरूद्वारा हमलाको निकै मारमा छन्। यी अनुप्रोगहरू गर्दा तपाईँको ट्याब्लेट बिग्रने वा डेटा हराउने नतिजाको लागि तपाईँ आफैँ जिम्मेवार हुन सहमत हुनु हुन्छ।"</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"तपाईँका फोन र व्यक्तिगत डेटा अज्ञात स्रोतका अनुप्रयोगहरूबाट हुने आक्रमणमा पर्न सक्ने बढी सम्भावना छ। यी अनुप्रयोगको प्रयोगबाट तपाईँको फोनमा वा डेटामा हुन सक्ने नोक्सानीका लागि तपाईँ आफै जिम्मेवार हुनु हुन्छ भन्नेमा तपाईँ सहमत हुनु हुन्छ।"</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ब्याकअप र पुनःस्थापना गर्नुहोस्"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"व्यक्तिगत डेटा"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"मेरो डेटा ब्याकअप गर्नुहोस्।"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"अनुप्रयोग डेटा, Wi-Fi पासवर्डहरू र Google सर्भरहरूका अन्य सेटिङहरूको ब्याकअप गर्नुहोस्"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"अनुप्रयोग डेटा, Wi-Fi पासवर्डहरू र /e/ सर्भरहरूका अन्य सेटिङहरूको ब्याकअप गर्नुहोस्"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ब्याकअप खाता"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"अनुप्रयोग डेटा समावेश"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"स्वतः पुनःप्राप्त"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"जगेडा सेवा निष्क्रिय छ।"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"कुनै पनि खाताले ब्याकअप गरिएका डेटा हाल भण्डारण गरिरहेको छैन"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"तपाईँको Wi-Fi पासवर्डहरू, बुकमार्क, अन्य सेटिङहरू, र अनुप्रयोग डेटाको जगेडा राख्न बन्द गर्ने र Google सर्भरबाट सम्पूर्ण प्रतिलिपिहरू मेटाउने हो?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"तपाईँको Wi-Fi पासवर्डहरू, बुकमार्क, अन्य सेटिङहरू, र अनुप्रयोग डेटाको जगेडा राख्न बन्द गर्ने र /e/ सर्भरबाट सम्पूर्ण प्रतिलिपिहरू मेटाउने हो?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"के यन्त्र डेटा (जस्तै Wi-Fi पासवर्डहरू र इतिहास कल) र अनुप्रयोग डेटा (जस्तै अनुप्रयोगहरू द्वारा भण्डारण सेटिङहरू र फाइलहरू) को ब्याकअपलाई रोक्ने, र थप रिमोट सर्भरहरूमा सबै प्रतिलिपिहरू मेटाउन चाहनु हुन्छ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"यन्त्र डेटा (जस्तै Wi-Fi पासवर्डहरू र कल इतिहास) र अनुप्रयोग डेटा (जस्तै अनुप्रयोगहरूद्वारा भण्डारित सेटिङहरू र फाइलहरू) टाढाबाट स्वचालित रुपमा ब्याकअप गर्नुहोस्। \n\nजब तपाईँ स्वचालित ब्याकअप यन्त्र सक्षम गर्नुहुन्छ, यन्त्र र अनुप्रयोग डेटा आवधिक रूपमा टाढाबाट सुरक्षित गरिएको छ। सम्पर्क, सन्देशहरू, र तस्बिरहरू जस्तै सम्भावित संवेदनशील डेटा सहित, अनुप्रयोग डेटा कुनै पनि डेटा हुनसक्छ जुन अनुप्रयोगले (विकासकर्ता सेटिङहरूमा आधारित) सुरक्षित गरेको छ।"</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"यन्त्र प्रशासन सेटिङहरू"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"जिमेल"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"पात्रो"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"सम्पर्कहरू"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google सिंकमा स्वागत छ!"</font>\n" तपाईँका सम्पर्कहरू, भेट्ने समयहरू, र तपाईँ जहाँ भए पनि अरू बढी पहुँच दिनको लागि डेटा सिंक गर्न अनुमतिका लागि एउटा Google दृष्टिकोण।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ सिंकमा स्वागत छ!"</font>\n" तपाईँका सम्पर्कहरू, भेट्ने समयहरू, र तपाईँ जहाँ भए पनि अरू बढी पहुँच दिनको लागि डेटा सिंक गर्न अनुमतिका लागि एउटा /e/ दृष्टिकोण।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"अनुप्रयोग सिंक सेटिङहरू"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"डेटा र सिङ्क्रोनाइजेसन"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"पासवर्ड बदल्नुहोस्"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"यस फिचरले पृष्ठभूमि डेटामा निर्भर अनुप्रयोगलाई सेलुलर सञ्जाल उपलब्ध हुने समयमा मात्र काम नगर्ने बनाउन सक्छ।\n\nयस अनुप्रयोग भित्रको सेटिङमा तपाईँले थप उपयुक्त डेटाको प्रयोग नियन्त्रणहरू भेट्टाउन सक्नुहुन्छ।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"तपाईँले सेलुलर डेटा सीमा निर्धारण गर्नुहुन्छ भने मात्र पृष्ठभूमि डेटा निषेध गर्न सम्भव हुन्छ।"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"डेटा स्वचालित सिंक खोल्ने हो?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"तपाईंले वेबमा आफ्नो खातामा गर्न हुने कुनै पनि परिवर्तनहरू स्वचालित रूपमा तपाईँको ट्याब्लेटमा प्रतिलिपि गरिने छ।\n\nकेही खाता पनि स्वचालित वेब ट्याब्लेटमा तपाईंले बनाउने कुनै पनि परिवर्तनहरू प्रतिलिपि हुनसक्छ। Google खाताले यसरी कार्य गर्दछ।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"तपाईंले वेबमा आफ्नो खातामा गर्न हुने कुनै पनि परिवर्तनहरू स्वचालित रूपमा तपाईँको फोनमा प्रतिलिपि गरिने छ।\n\nकेही खाता पनि स्वचालित वेब फोनमा तपाईंले बनाउने कुनै पनि परिवर्तनहरू प्रतिलिपि हुनसक्छ। Google खाताले यसरी कार्य गर्दछ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"तपाईंले वेबमा आफ्नो खातामा गर्न हुने कुनै पनि परिवर्तनहरू स्वचालित रूपमा तपाईँको ट्याब्लेटमा प्रतिलिपि गरिने छ।\n\nकेही खाता पनि स्वचालित वेब ट्याब्लेटमा तपाईंले बनाउने कुनै पनि परिवर्तनहरू प्रतिलिपि हुनसक्छ। /e/ खाताले यसरी कार्य गर्दछ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"तपाईंले वेबमा आफ्नो खातामा गर्न हुने कुनै पनि परिवर्तनहरू स्वचालित रूपमा तपाईँको फोनमा प्रतिलिपि गरिने छ।\n\nकेही खाता पनि स्वचालित वेब फोनमा तपाईंले बनाउने कुनै पनि परिवर्तनहरू प्रतिलिपि हुनसक्छ। /e/ खाताले यसरी कार्य गर्दछ।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"डेटा स्वचालित सिंक बन्द गर्ने हो?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"यस कार्यले डेटा र ब्याट्री प्रयोगको बचत गर्दछ, तर तपाईँले प्रत्येक खाता म्यानुअल तरिकाले हालसालको जानकारी भेला पार्न पर्ने हुन्छ। र तपाईँले अद्यावधिक हुने बेलामा तपाईँले सूचना प्राप्त गर्नु हुन्न।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"प्रयोग चक्र पुनःसेट मिति"</string>
