--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Waarschuwing: na nog <xliff:g id="COUNT">^1</xliff:g> mislukte pogingen om te ontgrendelen, wordt je apparaat gewist."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Typ je wachtwoord"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Encryptie mislukt"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Het versleutelen is onderbroken en kan niet worden voltooid. Als gevolg hiervan zijn de gegevens op je telefoon niet meer toegankelijk. \n\nAls je je tablet weer wilt gebruiken, moet je de fabrieksinstellingen herstellen. Wanneer je de tablet instelt na het herstel, krijg je de mogelijkheid gegevens waarvan je een back-up hebt gemaakt in je Google-account, terug te zetten."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Het versleutelen is onderbroken en kan niet worden voltooid. Daardoor zijn de gegevens op je telefoon niet meer toegankelijk. \n\nAls je je telefoon weer wilt gebruiken, moet je de fabrieksinstellingen herstellen. Wanneer je de telefoon instelt na het herstel, krijg je de mogelijkheid gegevens terug te zetten waarvan je een back-up hebt gemaakt in je Google-account."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Het versleutelen is onderbroken en kan niet worden voltooid. Als gevolg hiervan zijn de gegevens op je telefoon niet meer toegankelijk. \n\nAls je je tablet weer wilt gebruiken, moet je de fabrieksinstellingen herstellen. Wanneer je de tablet instelt na het herstel, krijg je de mogelijkheid gegevens waarvan je een back-up hebt gemaakt in je /e/-account, terug te zetten."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Het versleutelen is onderbroken en kan niet worden voltooid. Daardoor zijn de gegevens op je telefoon niet meer toegankelijk. \n\nAls je je telefoon weer wilt gebruiken, moet je de fabrieksinstellingen herstellen. Wanneer je de telefoon instelt na het herstel, krijg je de mogelijkheid gegevens terug te zetten waarvan je een back-up hebt gemaakt in je /e/-account."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Ontsleutelen mislukt"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Het wachtwoord dat je hebt opgegeven, is correct, maar je gegevens zijn beschadigd. \n\nAls je je tablet weer wilt gebruiken, moet je deze terugzetten naar de fabrieksinstellingen. Wanneer je je tablet configureert na het terugzetten, heb je de mogelijkheid gegevens waarvan je een back-up in je Google-account hebt gemaakt, te herstellen."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Het wachtwoord dat je hebt opgegeven, is correct, maar je gegevens zijn beschadigd. \n\nAls je je telefoon weer wilt gebruiken, moet je deze terugzetten naar de fabrieksinstellingen. Wanneer je je telefoon configureert na het terugzetten, heb je de mogelijkheid gegevens waarvan je een back-up in je Google-account hebt gemaakt, te herstellen."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Het wachtwoord dat je hebt opgegeven, is correct, maar je gegevens zijn beschadigd. \n\nAls je je tablet weer wilt gebruiken, moet je deze terugzetten naar de fabrieksinstellingen. Wanneer je je tablet configureert na het terugzetten, heb je de mogelijkheid gegevens waarvan je een back-up in je /e/-account hebt gemaakt, te herstellen."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Het wachtwoord dat je hebt opgegeven, is correct, maar je gegevens zijn beschadigd. \n\nAls je je telefoon weer wilt gebruiken, moet je deze terugzetten naar de fabrieksinstellingen. Wanneer je je telefoon configureert na het terugzetten, heb je de mogelijkheid gegevens waarvan je een back-up in je /e/-account hebt gemaakt, te herstellen."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Invoermethode schakelen"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Schermvergrendeling instellen"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Bescherm je apparaat"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Netwerkinstellingen zijn gereset"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Apparaat resetten"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Fabrieksinstellingen herstellen"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Hiermee worden alle gegevens in de "<b>"interne opslag"</b>" van je telefoon gewist, waaronder:\n\n"<li>"Je Google-account"</li>\n<li>"Gegevens en instellingen van het systeem en de apps"</li>\n<li>"Gedownloade apps"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Hiermee worden alle gegevens in de "<b>"interne opslag"</b>" van je telefoon gewist, waaronder:\n\n"<li>"Je Google-account"</li>\n<li>"Gegevens en instellingen van het systeem en de apps"</li>\n<li>"Gedownloade apps"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Hiermee worden alle gegevens in de "<b>"interne opslag"</b>" van je telefoon gewist, waaronder:\n\n"<li>"Je /e/-account"</li>\n<li>"Gegevens en instellingen van het systeem en de apps"</li>\n<li>"Gedownloade apps"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Hiermee worden alle gegevens in de "<b>"interne opslag"</b>" van je telefoon gewist, waaronder:\n\n"<li>"Je /e/-account"</li>\n<li>"Gegevens en instellingen van het systeem en de apps"</li>\n<li>"Gedownloade apps"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Je bent momenteel aangemeld bij de volgende accounts:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Er zijn andere gebruikers aanwezig op dit apparaat.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muziek"</li>\n<li>"Foto\'s"</li>\n<li>"Andere gebruikersgegevens"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth-scannen"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Locatie verbeteren door systeem-apps en services toe te staan altijd Bluetooth-apparaten te detecteren."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Locatie via wifi en mob. netw."</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Apps toestaan de locatieservice van Google te gebruiken om je locatie sneller te schatten. Anonieme locatiegegevens worden verzameld en verzonden naar Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Apps toestaan de locatieservice van /e/ te gebruiken om je locatie sneller te schatten. Anonieme locatiegegevens worden verzameld en verzonden naar /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Locatie bepaald via wifi"</string>
     <string name="location_gps" msgid="8392461023569708478">"gps-satellieten"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Apps toestaan gps op je telefoon te gebruiken om je locatie te bepalen"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Ondersteunde gps gebruiken"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Server gebruiken ter ondersteuning van gps (uitschakelen om het netwerkgebruik te beperken)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Server gebruiken ter ondersteuning van gps (uitschakelen om gps-prestaties te verbeteren)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Locatie en Google Zoeken"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google toestaan je locatie te gebruiken om zoekresultaten en andere services te verbeteren"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Locatie en /e/ Zoeken"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ toestaan je locatie te gebruiken om zoekresultaten en andere services te verbeteren"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Toegang tot mijn locatie"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Apps die je toestemming hebben gevraagd, toestaan je locatiegegevens te gebruiken"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Locatiebronnen"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"App-instellingen"</string>
     <string name="install_applications" msgid="4872012136210802181">"Onbekende bronnen"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Alle appbronnen toestaan"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Zo kun je apps installeren uit andere bronnen dan Google Play"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Zo kun je apps installeren uit andere bronnen dan /e/ Play"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Toestaan dat apps uit onbekende bronnen worden geïnstalleerd"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Je tablet en persoonlijke gegevens zijn gevoeliger voor aanvallen door apps van onbekende bronnen. Je gaat ermee akkoord dat alleen jij verantwoordelijk bent voor enige schade aan je telefoon of verlies van gegevens die voortkomen uit het gebruik van deze apps."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Je telefoon en persoonlijke gegevens worden door apps van onbekende bronnen gevoeliger voor aanvallen. Je gaat ermee akkoord dat alleen jij verantwoordelijk bent voor enige schade aan je telefoon of verlies van gegevens die voortkomen uit het gebruik van deze apps."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Back-up en herstel"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Persoonlijke gegevens"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Back-up maken van mijn gegevens"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Een back-up van app-gegevens, wifi-wachtwoorden en andere instellingen maken op de Google-servers"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Een back-up van app-gegevens, wifi-wachtwoorden en andere instellingen maken op de /e/-servers"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Back-upaccount"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Appgegevens opnemen"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Automatisch terugzetten"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Back-upservice is inactief."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Er is momenteel geen account ingesteld voor het opslaan van back-upgegevens"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Weet je zeker dat je het maken van back-ups van je wifi-wachtwoorden, bladwijzers, andere instellingen en app-gegevens wilt stoppen en alle kopieën op Google-servers wilt wissen?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Weet je zeker dat je het maken van back-ups van je wifi-wachtwoorden, bladwijzers, andere instellingen en app-gegevens wilt stoppen en alle kopieën op /e/-servers wilt wissen?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Wil je stoppen met het maken van back-ups van apparaatgegevens (zoals wifi-wachtwoorden en oproepgeschiedenis) en app-gegevens (zoals instellingen en bestanden opgeslagen door apps), en alle kopieën op externe servers wissen?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Automatisch op afstand een back-up maken van apparaatgegevens (zoals wifi-wachtwoorden en oproepgeschiedenis) en app-gegevens (zoals instellingen en bestanden opgeslagen door apps).\n\nAls je de functie voor automatische back-ups inschakelt, worden apparaat- en app-gegevens periodiek op afstand opgeslagen. App-gegevens kunnen gegevens omvatten die een app heeft opgeslagen (op basis van de instellingen van de ontwikkelaar), waaronder potentieel gevoelige gegevens als contacten, berichten en foto\'s."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Instellingen voor apparaatbeheer"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Agenda"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Contacten"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welkom bij Google Sync!"</font>" \nEen benadering van Google voor de synchronisatie van gegevens, zodat je altijd en overal toegang hebt tot je contacten, afspraken en nog veel meer."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Welkom bij /e/ Sync!"</font>" \nEen benadering van /e/ voor de synchronisatie van gegevens, zodat je altijd en overal toegang hebt tot je contacten, afspraken en nog veel meer."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Synchronisatie-instellingen van de app"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Gegevens en synchronisatie"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Wachtwoord wijzigen"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Deze functie kan zorgen dat een app die afhankelijk is van achtergrondgegevens, niet meer werkt als er alleen mobiele netwerken beschikbaar zijn.\n\nIn de instellingen van de app kun je relevantere opties voor gegevensbeheer vinden."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Je moet een mobiele datalimiet instellen om achtergronddata te kunnen beperken."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Auto-synchronisatie inschakelen?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Wijzigingen die je op internet aanbrengt in je accounts, worden automatisch naar je telefoon gekopieerd.\n\nBij sommige accounts worden mogelijk ook de wijzigingen die je op de tablet aanbrengt, naar internet gekopieerd. Dit geldt bijvoorbeeld voor Google-accounts."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Wijzigingen die je op internet aanbrengt in je accounts, worden automatisch naar je telefoon gekopieerd.\n\nBij sommige accounts worden mogelijk ook de wijzigingen die je op de telefoon aanbrengt, naar internet gekopieerd. Dit geldt bijvoorbeeld voor Google-accounts."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Wijzigingen die je op internet aanbrengt in je accounts, worden automatisch naar je telefoon gekopieerd.\n\nBij sommige accounts worden mogelijk ook de wijzigingen die je op de tablet aanbrengt, naar internet gekopieerd. Dit geldt bijvoorbeeld voor /e/-accounts."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Wijzigingen die je op internet aanbrengt in je accounts, worden automatisch naar je telefoon gekopieerd.\n\nBij sommige accounts worden mogelijk ook de wijzigingen die je op de telefoon aanbrengt, naar internet gekopieerd. Dit geldt bijvoorbeeld voor /e/-accounts."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Auto-synchr. uitschakelen?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Hiermee beperk je gegevens- en accugebruik. Je moet elk account echter handmatig synchroniseren om recente informatie te verzamelen. Je ontvangt geen meldingen wanneer er updates zijn."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Herzieningsdatum voor gebruikscyclus"</string>
