--- a/res/values-sq-rAL/strings.xml
+++ b/res/values-sq-rAL/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Paralajmërim! Pajisja jote do të fshihet pas <xliff:g id="COUNT">^1</xliff:g> përpjekjeve të tjera të dështuara për shkyçje!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Shkruaj fjalëkalimin tënd"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Enkriptimi ishte i pasuksesshëm"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Enkriptimi u ndërpre dhe nuk mund të përfundojë. Si rezultat, nuk është më e mundur qasja te të dhënat në tablet. \n\nPër të rifilluar përdorimin e tabletit, duhet të kryesh një rivendosje në gjendje fabrike. Kur ta konfigurosh tabletin pas rivendosjes, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Enkriptimi u ndërpre dhe nuk mund të përfundojë. Si rezultat, nuk është më e mundur qasja te të dhënat në telefon. \n\nPër të rifilluar përdorimin e telefonit, duhet të kryesh një rivendosje në gjendje fabrike. Kur ta konfigurosh telefonin pas rivendosjes, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Enkriptimi u ndërpre dhe nuk mund të përfundojë. Si rezultat, nuk është më e mundur qasja te të dhënat në tablet. \n\nPër të rifilluar përdorimin e tabletit, duhet të kryesh një rivendosje në gjendje fabrike. Kur ta konfigurosh tabletin pas rivendosjes, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Enkriptimi u ndërpre dhe nuk mund të përfundojë. Si rezultat, nuk është më e mundur qasja te të dhënat në telefon. \n\nPër të rifilluar përdorimin e telefonit, duhet të kryesh një rivendosje në gjendje fabrike. Kur ta konfigurosh telefonin pas rivendosjes, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Dekriptimi ishte i pasuksesshëm"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Fjalëkalimi që fute është i saktë, por fatkeqësisht të dhënat e tua janë të dëmtuara. \n\nPër të rifilluar përdorimin e tabletit, duhet të kryesh një vendosje në gjendje fabrike. Pas kësaj, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Fjalëkalimi që fute është i saktë, por fatkeqësisht të dhënat e tua janë të dëmtuara. \n\nPër të rifilluar përdorimin e telefonit, duhet të kryesh një vendosje në gjendje fabrike. Pas kësaj, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Fjalëkalimi që fute është i saktë, por fatkeqësisht të dhënat e tua janë të dëmtuara. \n\nPër të rifilluar përdorimin e tabletit, duhet të kryesh një vendosje në gjendje fabrike. Pas kësaj, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Fjalëkalimi që fute është i saktë, por fatkeqësisht të dhënat e tua janë të dëmtuara. \n\nPër të rifilluar përdorimin e telefonit, duhet të kryesh një vendosje në gjendje fabrike. Pas kësaj, do të kesh mundësinë për të restauruar çdo të dhënë që është rezervuar në llogarinë e /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Ndërro metodën e hyrjes"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Vendos kyçjen e ekranit"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Mbroje pajisjen tënde"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Cilësimet e rrjetit janë rivendosur"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Rivendos pajisjen"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Konfig. i fabrikës"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Kjo do t\'i fshijë të gjitha të dhënat nga "<b>"hapësira e brendshme për ruajtje"</b>" e tabletit, përfshirë:\n\n"<li>"Llogarinë e Google"</li>\n<li>"Të dhënat e sistemit dhe aplikacioneve si dhe cilësimet"</li>\n<li>"Aplikacionet e shkarkuara"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Kjo do t\'i fshijë të gjitha të dhënat nga "<b>"hapësira e brendshme për ruajtje"</b>" e telefonit, përfshirë:\n\n"<li>"Llogarinë e Google"</li>\n<li>"Të dhënat e sistemit dhe aplikacioneve si dhe cilësimet"</li>\n<li>"Aplikacionet e shkarkuara"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Kjo do t\'i fshijë të gjitha të dhënat nga "<b>"hapësira e brendshme për ruajtje"</b>" e tabletit, përfshirë:\n\n"<li>"Llogarinë e /e/"</li>\n<li>"Të dhënat e sistemit dhe aplikacioneve si dhe cilësimet"</li>\n<li>"Aplikacionet e shkarkuara"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Kjo do t\'i fshijë të gjitha të dhënat nga "<b>"hapësira e brendshme për ruajtje"</b>" e telefonit, përfshirë:\n\n"<li>"Llogarinë e /e/"</li>\n<li>"Të dhënat e sistemit dhe aplikacioneve si dhe cilësimet"</li>\n<li>"Aplikacionet e shkarkuara"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Je i identifikuar aktualisht në llogaritë e mëposhtme:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Ka përdorues të tjerë të pranishëm në këtë pajisje.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muzika"</li>\n<li>"Fotografitë"</li>\n<li>"Të dhëna të tjera të përdoruesit"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Skanimi i Bluetooth-it"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Përmirëso vendndodhjen duke lejuar aplikacionet dhe shërbimet e sistemit të zbulojnë pajisjet me Bluetooth në çdo kohë."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Vend. rrjetit Wi‑Fi e celular"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Lejo aplikacionet të përdorin shërbimin e vendndodhjes së Google për të llogaritur më shpejt vendndodhjen tënde. Të dhënat e vendndodhjes do të jenë anonime dhe do të mblidhen e do t\'i dërgohen Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Lejo aplikacionet të përdorin shërbimin e vendndodhjes së /e/ për të llogaritur më shpejt vendndodhjen tënde. Të dhënat e vendndodhjes do të jenë anonime dhe do të mblidhen e do t\'i dërgohen /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Vendndodhja u përcaktua nga Wi‑Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Satelitët GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Lejo aplikacionet të përdorin GPS-në në tablet për të shënuar vendndodhjen tënde"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Përdor GPS-në e ndihmuar"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Përdor serverin për të ndihmuar GPS-në (anulo zgjedhjen për të zvogëluar përdorimin e rrjetit)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Përdor serverin për të ndihmuar GPS-në (anulo zgjedhjen për të përmirësuar veprimtarinë e GPS-së)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Vendndodhja dhe kërkimi në Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Lejo Google të përdorë vendndodhjen për të përmirësuar rezultatet e kërkimit dhe shërbime të tjera"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Vendndodhja dhe kërkimi në /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Lejo /e/ të përdorë vendndodhjen për të përmirësuar rezultatet e kërkimit dhe shërbime të tjera"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Qasja në vendndodhjen time"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Lejoji aplikacionet që kanë kërkuar lejen tënde të përdorin informacionin e vendndodhjes"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Burimet e vendndodhjes"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Cilësimet e apl."</string>
     <string name="install_applications" msgid="4872012136210802181">"Burime të panjohura"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Lejo të gjitha burimet e apl."</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lejon instalimin e aplikacioneve jashtë \"Luaj me Google\""</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"Lejon instalimin e aplikacioneve jashtë \"Luaj me /e/\""</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Lejo instalimin e aplikacioneve nga burime të panjohura"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Tableti yt dhe të dhënat personale janë më të cenueshme nga sulmet nga burime të panjohura. Ti pranon se je plotësisht përgjegjës për çdo dëm ndaj tabletit ose çdo humbje të dhënash që mund të rezultojë nga përdorimi i këtyre aplikacioneve."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Telefoni dhe të dhënat e tua personale janë më të cenueshme për t\'u sulmuar nga aplikacione të cilat vijnë nga burime të panjohura. Ti pranon se je plotësisht përgjegjës për çdo dëm ndaj telefonit ose çdo humbje të dhënash që mund të rezultojë nga përdorimi i këtyre aplikacioneve."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Rezervo dhe restauro"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Të dhënat personale"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Rezervo të dhënat e mia"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Rezervo të dhënat e aplikacioneve, fjalëkalimet e Wi-Fi dhe cilësimet e tjera në serverët e Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Rezervo të dhënat e aplikacioneve, fjalëkalimet e Wi-Fi dhe cilësimet e tjera në serverët e /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Llogaria rezervë"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Përfshi të dhënat e aplikacionit"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Restaurimi automatik"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Shërbimi i rezervimit është joaktiv."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Asnjë llogari nuk po ruan aktualisht të dhënat e kopjes rezervë"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Të ndalohet rezervimi i fjalëkalimeve të Wi-Fi, faqeshënuesve, të dhënave të aplikacioneve dhe cilësimeve të tjera? Të fshihen gjithashtu edhe të gjitha kopjet në serverët e Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Të ndalohet rezervimi i fjalëkalimeve të Wi-Fi, faqeshënuesve, të dhënave të aplikacioneve dhe cilësimeve të tjera? Të fshihen gjithashtu edhe të gjitha kopjet në serverët e /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Ndalo rezervimin e të dhënave të pajisjes (si p.sh. fjalëkalimet e Wi-Fi dhe historikun e telefonatave) dhe të dhënave të aplikacioneve (si p.sh. cilësimet dhe skedarët e ruajtur nga aplikacionet) dhe spastro të gjitha kopjet në serverët në largësi?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Rezervo automatikisht në largësi të dhënat e pajisjes (si p.sh. fjalëkalimet e Wi-Fi dhe historikun e telefonatave) dhe të dhënat e aplikacioneve (si p.sh. cilësimet dhe skedarët e ruajtur nga aplikacionet).\n\nKur aktivizon rezervimin automatik, të dhënat e pajisjes dhe të aplikacioneve ruhen periodikisht në largësi. Të dhënat e aplikacioneve mund të jenë çdo e dhënë që ka ruajtur një aplikacion (bazuar në cilësimet e zhvilluesit), duke përfshirë të dhëna ndoshta delikate si kontaktet, mesazhet dhe fotografitë."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Cilësimet e administrimit të pajisjes"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalendari"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontaktet"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Mirë se erdhe në sinkronizimin e Google!"</font>" \nNjë metodë e Google për të sinkronizuar të dhënat për të të lejuar qasje te kontaktet, takimet dhe të tjera, kudo ku të ndodhesh."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Mirë se erdhe në sinkronizimin e /e/!"</font>" \nNjë metodë e /e/ për të sinkronizuar të dhënat për të të lejuar qasje te kontaktet, takimet dhe të tjera, kudo ku të ndodhesh."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Cilësimet e sinkronizimit të apl."</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Të dhënat dhe sinkronizimi"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Ndërro fjalëkalimin"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Ky funksion mund të shkaktojë që një aplikacion, i cili mbështetet në të dhënat në sfond, të mos punojë kur janë të disponueshme vetëm rrjetet celulare.\n\nMund të gjesh kontrolle më të përshtatshme për përdorimin e të dhënave në cilësimet që ofrohen brenda aplikacionit."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Kufizimi i të dhënave në sfond është i mundur vetëm kur ke caktuar një kufi të të dhënave celulare."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Të aktivizohen të dhënat e sinkronizimit automatik?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Çdo ndryshim që bën në llogaritë e tua në ueb do të kopjohet automatikisht te tableti.\n\nDisa llogari mund të kopjojnë po ashtu automatikisht çdo ndryshim që bën në tablet, për ta sinkronizuar në ueb. Kështu funksionon llogaria e Google."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Çdo ndryshim që bën në llogaritë e tua në ueb do të kopjohet automatikisht te telefoni.\n\nDisa llogari mund të kopjojnë po ashtu automatikisht çdo ndryshim që bën në telefon, për ta sinkronizuar në ueb. Kjo është mënyra se si funksionon llogaria e Google."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Çdo ndryshim që bën në llogaritë e tua në ueb do të kopjohet automatikisht te tableti.\n\nDisa llogari mund të kopjojnë po ashtu automatikisht çdo ndryshim që bën në tablet, për ta sinkronizuar në ueb. Kështu funksionon llogaria e /e/."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Çdo ndryshim që bën në llogaritë e tua në ueb do të kopjohet automatikisht te telefoni.\n\nDisa llogari mund të kopjojnë po ashtu automatikisht çdo ndryshim që bën në telefon, për ta sinkronizuar në ueb. Kjo është mënyra se si funksionon llogaria e /e/."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Të çaktivizohen të dhënat e sinkronizimit automatik?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Ky funksion do të kursejë përdorimin e të dhënave dhe të baterisë, por për të mbledhur informacionet më të fundit, do të të duhet të sinkronizosh në mënyrë manuale çdo llogari. Nuk do të marrësh njoftime kur të ndodhin përditësimet."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Data e rivendosjes së ciklit të përdorimit"</string>
