--- a/res/values-ta-rIN/strings.xml
+++ b/res/values-ta-rIN/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"எச்சரிக்கை: சாதனத்தைத் திறப்பதற்கான <xliff:g id="COUNT">^1</xliff:g> முயற்சிகளும் தோல்வி அடைந்தால், சாதனத்தின் தரவு அழிக்கப்படும்!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"உங்கள் கடவுச்சொல்லை உள்ளிடவும்"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"என்க்ரிப்ட் தோல்வி"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"முறைமையாக்கத்தில் குறுக்கீடு ஏற்பட்டது, இதனால் நிறைவுசெய்ய முடியாது. இதன் விளைவாக, உங்கள் டேப்லெட்டில் உள்ள தரவை இனிமேல் அணுக முடியாது. \n\nஉங்கள் டேப்லெட்டைத் தொடர்ந்து பயன்படுத்த ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்த வேண்டும். மீட்டமைவிற்குப் பிறகு உங்கள் டேப்லெட்டை அமைக்கும்போது, உங்கள் Google கணக்கில் காப்புப் பிரதியெடுக்கப்பட்ட எந்தத் தரவையும் மீட்டமைப்பதற்கான வாய்ப்பைப் பெறுவீர்கள்."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"முறைமையாக்கத்தில் குறுக்கீடு ஏற்பட்டது, மேலும் நிறைவுசெய்ய முடியாது. இதன் விளைவாக உங்கள் தொலைபேசியில் உள்ள தரவை இனிமேல் அணுக முடியாது. \n\nஉங்கள் தொலைபேசியைப் பயன்படுத்தி மீண்டும் தொடங்குவதற்கு ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்த வேண்டும். மீட்டமைவிற்குப் பிறகு உங்கள் தொலைபேசியை அமைக்கும்போது, உங்கள் Google கணக்கில் காப்புப் பிரதியெடுக்கப்பட்ட எந்தத் தரவையும் மீட்டமைப்பதற்கான வாய்ப்பைப் பெறுவீர்கள்."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"முறைமையாக்கத்தில் குறுக்கீடு ஏற்பட்டது, இதனால் நிறைவுசெய்ய முடியாது. இதன் விளைவாக, உங்கள் டேப்லெட்டில் உள்ள தரவை இனிமேல் அணுக முடியாது. \n\nஉங்கள் டேப்லெட்டைத் தொடர்ந்து பயன்படுத்த ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்த வேண்டும். மீட்டமைவிற்குப் பிறகு உங்கள் டேப்லெட்டை அமைக்கும்போது, உங்கள் /e/ கணக்கில் காப்புப் பிரதியெடுக்கப்பட்ட எந்தத் தரவையும் மீட்டமைப்பதற்கான வாய்ப்பைப் பெறுவீர்கள்."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"முறைமையாக்கத்தில் குறுக்கீடு ஏற்பட்டது, மேலும் நிறைவுசெய்ய முடியாது. இதன் விளைவாக உங்கள் தொலைபேசியில் உள்ள தரவை இனிமேல் அணுக முடியாது. \n\nஉங்கள் தொலைபேசியைப் பயன்படுத்தி மீண்டும் தொடங்குவதற்கு ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்த வேண்டும். மீட்டமைவிற்குப் பிறகு உங்கள் தொலைபேசியை அமைக்கும்போது, உங்கள் /e/ கணக்கில் காப்புப் பிரதியெடுக்கப்பட்ட எந்தத் தரவையும் மீட்டமைப்பதற்கான வாய்ப்பைப் பெறுவீர்கள்."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"குறிவிலக்கம் தோல்வி"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"சரியான கடவுச்சொல்லை உள்ளிட்டீர்கள், ஆனால் எதிர்பாராதவிதமாக உங்கள் தரவு சிதைந்துவிட்டது. \n\nடேப்லெட்டை மீண்டும் பயன்படுத்த, ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்தவும். மீட்டமைத்த பின் டேப்லெட்டை அமைக்கும் போது, உங்கள் Google கணக்கில் காப்புப் பிரதி எடுக்கப்பட்ட எந்தத் தரவையும் நீங்கள் மீட்டெடுக்க முடியும்."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"சரியான கடவுச்சொல்லை உள்ளிட்டீர்கள், ஆனால் எதிர்பாராதவிதமாக உங்கள் தரவு சிதைந்துவிட்டது. \n\nமொபைலை மீண்டும் பயன்படுத்த, ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்தவும். மீட்டமைத்த பின் மொபைலை அமைக்கும் போது, Google கணக்கில் காப்புப் பிரதி எடுக்கப்பட்ட எந்தத் தரவையும் நீங்கள் மீட்டெடுக்க முடியும்."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"சரியான கடவுச்சொல்லை உள்ளிட்டீர்கள், ஆனால் எதிர்பாராதவிதமாக உங்கள் தரவு சிதைந்துவிட்டது. \n\nடேப்லெட்டை மீண்டும் பயன்படுத்த, ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்தவும். மீட்டமைத்த பின் டேப்லெட்டை அமைக்கும் போது, உங்கள் /e/ கணக்கில் காப்புப் பிரதி எடுக்கப்பட்ட எந்தத் தரவையும் நீங்கள் மீட்டெடுக்க முடியும்."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"சரியான கடவுச்சொல்லை உள்ளிட்டீர்கள், ஆனால் எதிர்பாராதவிதமாக உங்கள் தரவு சிதைந்துவிட்டது. \n\nமொபைலை மீண்டும் பயன்படுத்த, ஆரம்பநிலை மீட்டமைவைச் செயல்படுத்தவும். மீட்டமைத்த பின் மொபைலை அமைக்கும் போது, /e/ கணக்கில் காப்புப் பிரதி எடுக்கப்பட்ட எந்தத் தரவையும் நீங்கள் மீட்டெடுக்க முடியும்."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"உள்ளீட்டு முறையை மாற்று"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"திரைப் பூட்டை அமைக்கவும்"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"சாதனத்தைப் பாதுகாக்கவும்"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"நெட்வொர்க் அமைப்புகள் மீட்டமைக்கப்பட்டன"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"சாதனத்தை மீட்டமை"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"தரவின் ஆரம்பநிலை மீட்டமைப்பு"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"இது, உங்கள் டேப்லெடின் "<b>"அகச் சேமிப்பிடத்தில்"</b>" உள்ள எல்லா தரவையும் அழித்துவிடும், இவற்றில் உள்ளடங்குவன:\n\n"<li>"உங்கள் Google கணக்கு"</li>\n<li>"அமைப்பு மற்றும் பயன்பாட்டுத் தரவு, மற்றும் அமைப்புகள்"</li>\n<li>"பதிவிறக்கப்பட்ட பயன்பாடுகள்"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"இது, உங்கள் மொபைலின் "<b>"அகச் சேமிப்பிடத்தில்"</b>" உள்ள பின்வரும் எல்லா தரவையும் அழித்துவிடும்:\n\n"<li>"உங்கள் Google கணக்கு"</li>\n<li>"கணினி, பயன்பாட்டுத் தரவு மற்றும் அமைப்புகள்"</li>\n<li>"பதிவிறக்கிய பயன்பாடுகள்"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"இது, உங்கள் டேப்லெடின் "<b>"அகச் சேமிப்பிடத்தில்"</b>" உள்ள எல்லா தரவையும் அழித்துவிடும், இவற்றில் உள்ளடங்குவன:\n\n"<li>"உங்கள் /e/ கணக்கு"</li>\n<li>"அமைப்பு மற்றும் பயன்பாட்டுத் தரவு, மற்றும் அமைப்புகள்"</li>\n<li>"பதிவிறக்கப்பட்ட பயன்பாடுகள்"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"இது, உங்கள் மொபைலின் "<b>"அகச் சேமிப்பிடத்தில்"</b>" உள்ள பின்வரும் எல்லா தரவையும் அழித்துவிடும்:\n\n"<li>"உங்கள் /e/ கணக்கு"</li>\n<li>"கணினி, பயன்பாட்டுத் தரவு மற்றும் அமைப்புகள்"</li>\n<li>"பதிவிறக்கிய பயன்பாடுகள்"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"தற்போது, பின்வரும் கணக்குகளில் உள்நுழைந்துள்ளீர்கள்:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"இந்தச் சாதனத்தில் பிற பயனர்கள் உள்ளனர்.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"இசை"</li>\n<li>"படங்கள்"</li>\n<li>"பிற பயனர் தரவு"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"புளூடூத் ஸ்கேன் செய்தல்"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"முறைமையின் பயன்பாடுகளும் சேவைகளும் எந்த நேரத்திலும் புளூடூத் சாதனங்களைக் கண்டறிய அனுமதிப்பதன் மூலம், இருப்பிட அறிதலை மேம்படுத்தவும்."</string>
     <string name="location_network_based" msgid="6010456018401296590">"வைஃபை &amp; செல்லுலார் நெட்வொர்க் இடம்"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"உங்கள் இருப்பிடத்தை விரைவாகக் கணிக்கும் வகையில் பயன்பாடுகள், Google இன் இருப்பிடச் சேவையைப் பயன்படுத்தலாம். அநாமதேய இருப்பிடத் தரவு சேகரிக்கப்பட்டு Google க்கு அனுப்பப்படும்."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"உங்கள் இருப்பிடத்தை விரைவாகக் கணிக்கும் வகையில் பயன்பாடுகள், /e/ இன் இருப்பிடச் சேவையைப் பயன்படுத்தலாம். அநாமதேய இருப்பிடத் தரவு சேகரிக்கப்பட்டு /e/ க்கு அனுப்பப்படும்."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"வைஃபை மூலம் இருப்பிடம் கண்டறியப்பட்டது"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS சாட்டிலைட்டுகள்"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"உங்கள் இருப்பிடத்தைக் குறிப்பதற்காக, பயன்பாடுகள் உங்கள் டேப்லெட்டில் GPS ஐப் பயன்படுத்தும்"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"துணை GPS ஐப் பயன்படுத்து"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS க்கு உதவ, சேவையகத்தைப் பயன்படுத்து (நெட்வொர்க் பயன்பாட்டைக் குறைக்க, தேர்வுநீக்கு)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS க்கு உதவ, சேவையகத்தைப் பயன்படுத்து (GPS செயல்திறனை மேம்படுத்த தேர்வுநீக்கு)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"இருப்பிடம் &amp; Google தேடல்"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"தேடல் முடிவுகள் மற்றும் பிற சேவைகளை மேம்படுத்துவதற்காக Google உங்கள் இருப்பிடத்தைப் பயன்படுத்தும்"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"இருப்பிடம் &amp; /e/ தேடல்"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"தேடல் முடிவுகள் மற்றும் பிற சேவைகளை மேம்படுத்துவதற்காக /e/ உங்கள் இருப்பிடத்தைப் பயன்படுத்தும்"</string>
     <string name="location_access_title" msgid="7064108942964081243">"எனது இருப்பிடத்திற்கான அணுகல்"</string>
     <string name="location_access_summary" msgid="69031404093194341">"உங்கள் அனுமதியைக் கேட்ட பயன்பாடுகள் உங்களின் இருப்பிடத் தகவலைப் பயன்படுத்தும்"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"இருப்பிட ஆதாரங்கள்"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"பயன்பாட்டு அமைப்பு"</string>
     <string name="install_applications" msgid="4872012136210802181">"அறியப்படாத மூலங்கள்"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"எல்லா பயன்பாட்டு ஆதாரங்களையும் அனுமதி"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play தவிர பிற ஆதாரங்களின் பயன்பாடுகளை நிறுவ அனுமதிக்கிறது"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play தவிர பிற ஆதாரங்களின் பயன்பாடுகளை நிறுவ அனுமதிக்கிறது"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"அறியப்படாத ஆதாரங்களிலிருந்து பயன்பாடுகளின் நிறுவலை அனுமதி"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"அறியப்படாத ஆதாரங்களிலிருந்து பெறப்படும் பயன்பாடுகள் மூலமாக உங்கள் டேப்லெட் மற்றும் தனிப்பட்ட தரவு பாதிக்கப்படலாம். இந்தப் பயன்பாடுகளைப் பயன்படுத்துவதன் மூலம், உங்கள் டேப்லெட்டிற்கு ஏற்படும் பாதிப்பிற்கு அல்லது தரவு இழப்பிற்கு நீங்கள்தான் பொறுப்பு என்பதை ஏற்கிறீர்கள்."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"உங்கள் மொபைல் மற்றும் தனிப்பட்ட தரவு ஆகியவை அறியப்படாத மூலங்களிலிருந்து பெற்ற பயன்பாடுகளால் தாக்குதலுக்கு உள்ளாகக்கூடியவையாக இருக்கின்றன. இந்தப் பயன்பாடுகளைப் பயன்படுத்தியதன் விளைவாக உங்கள் மொபைல் பாதிக்கப்பட்டால் அல்லது தரவை இழந்தால் அதற்கு நீங்கள் மட்டும்தான் பொறுப்பு என்பதை ஒப்புக்கொள்கிறீர்கள்."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"காப்புப் பிரதி &amp; மீட்டெடுத்தல்"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"தனிப்பட்ட தரவு"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"தரவை காப்புப்பிரதியெடு"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"பயன்பாட்டுத் தரவு, வைஃபை கடவுச்சொற்கள் மற்றும் Google சேவையகங்களுக்கான பிற அமைப்புகளைக் காப்புப் பிரதியெடு"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"பயன்பாட்டுத் தரவு, வைஃபை கடவுச்சொற்கள் மற்றும் /e/ சேவையகங்களுக்கான பிற அமைப்புகளைக் காப்புப் பிரதியெடு"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"காப்புப்பிரதி கணக்கு"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"பயன்பாட்டுத் தரவு உட்பட"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"தானியங்கு மீட்டெடுப்பு"</string>
@@ -2043,7 +2043,7 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"காப்புப்பிரதி சேவை செயல்படவில்லை."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"தற்போது எந்தக் கணக்கும் காப்புப் பிரதி எடுக்கப்பட்ட தரவைச் சேமிப்பதில்லை"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"உங்கள் வைஃபை கடவுச்சொற்கள், புத்தகக்குறிகள், பிற அமைப்புகள் மற்றும் பயன்பாட்டுத் தரவைக் காப்புப் பிரதியெடுப்பதை நிறுத்துவதுடன், Google சேவையகங்களில் உள்ள எல்லா நகல்களையும் அழித்துவிட வேண்டுமா?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"உங்கள் வைஃபை கடவுச்சொற்கள், புத்தகக்குறிகள், பிற அமைப்புகள் மற்றும் பயன்பாட்டுத் தரவைக் காப்புப் பிரதியெடுப்பதை நிறுத்துவதுடன், /e/ சேவையகங்களில் உள்ள எல்லா நகல்களையும் அழித்துவிட வேண்டுமா?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"சாதனத் தரவையும் (வைஃபை கடவுச்சொற்கள் மற்றும் அழைப்பு பதிவு போன்றவை) பயன்பாட்டுத் தரவையும் (பயன்பாடுகளில் சேமிக்கப்பட்டிருக்கும் அமைப்புகள் மற்றும் கோப்புகள் போன்றவை) காப்புப் பிரதி எடுப்பதை நிறுத்தி, தொலைநிலை சேவையகங்களில் உள்ள எல்லா நகல்களையும் அழிக்கவா?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"சாதனத் தரவையும் (வைஃபை கடவுச்சொற்கள், அழைப்பு பதிவு போன்றவை) பயன்பாட்டுத் தரவையும் (பயன்பாடுகளில் சேமிக்கப்பட்டிருக்கும் அமைப்புகள், கோப்புகள் போன்றவை) தொலைநிலையில் தானாகக் காப்புப் பிரதி எடுக்கும்.\n\nதானியங்கு காப்புப் பிரதியை இயக்கும் போது, சாதனம் மற்றும் பயன்பாட்டுத் தரவானது குறிப்பிட்ட கால இடைவெளியில் தொலைநிலையில் சேமிக்கப்படும். பயன்பாட்டுத் தரவு என்பது, தொடர்புகள், செய்திகள், படங்கள் போன்ற மிகவும் முக்கிய தரவு உட்பட, பயன்பாடு சேமித்த (டெவெலப்பர் அமைப்புகளைப் பொறுத்து) எந்தத் தரவாகவும் இருக்கலாம்."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"சாதன நிர்வாகியின் அமைப்பு"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"கேலெண்டர்"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"தொடர்புகள்"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ஒத்திசைவுக்கு வரவேற்கிறோம்!"</font>" \nநீங்கள் எங்கிருந்தாலும் உங்கள் தொடர்புகள், சந்திப்புகள் மற்றும் பலவற்றுக்கான அணுகலை அனுமதிப்பதற்காக Google தரவை ஒத்திசைக்கிறது."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ஒத்திசைவுக்கு வரவேற்கிறோம்!"</font>" \nநீங்கள் எங்கிருந்தாலும் உங்கள் தொடர்புகள், சந்திப்புகள் மற்றும் பலவற்றுக்கான அணுகலை அனுமதிப்பதற்காக /e/ தரவை ஒத்திசைக்கிறது."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"பயன்பாட்டு ஒத்திசைவு அமைப்பு"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"தரவு &amp; ஒத்திசைத்தல்"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"கடவுச்சொல்லை மாற்று"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"செல்லுலார் நெட்வொர்க்குகள் மட்டும் கிடைக்கும்போது பின்புலத் தரவைச் சார்ந்திருக்கும் பயன்பாட்டின் செயல்பாட்டை இந்த அம்சம் பாதிக்கலாம்.\n\nபயன்பாட்டின் அமைப்புகளில் மிகவும் பொருத்தமான தரவுப் பயன்பாட்டின் கட்டுப்பாடுகளைக் காணலாம்."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"செல்லுலார் தரவு வரம்பை அமைக்கும் போது மட்டுமே பின்புலத் தரவைக் கட்டுப்படுத்துவது சாத்தியமாகும்."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"தரவைத் தானாக ஒத்திசைப்பதை இயக்கவா?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"இணையத்தில் உங்கள் கணக்குகளில் நீங்கள் செய்யும் எந்த மாற்றங்களும் தானாகவே டேப்லெட்டில் நகலெடுக்கப்படும்.\n\nசில கணக்குகள், டேப்லெட்டில் செய்யும் எந்த மாற்றங்களையும் தானாகவே இணையத்தில் நகலெடுக்கலாம். Google கணக்கு இப்படிதான் செயல்படுகிறது."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"இணையத்தில் உங்கள் கணக்குகளில் நீங்கள் செய்யும் எந்த மாற்றங்களும் தானாகவே மொபைலில் நகலெடுக்கப்படும்.\n\nசில கணக்குகள், மொபைலில் செய்யும் எந்த மாற்றங்களையும் தானாகவே இணையத்தில் நகலெடுக்கலாம். Google கணக்கு இப்படிதான் செயல்படுகிறது."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"இணையத்தில் உங்கள் கணக்குகளில் நீங்கள் செய்யும் எந்த மாற்றங்களும் தானாகவே டேப்லெட்டில் நகலெடுக்கப்படும்.\n\nசில கணக்குகள், டேப்லெட்டில் செய்யும் எந்த மாற்றங்களையும் தானாகவே இணையத்தில் நகலெடுக்கலாம். /e/ கணக்கு இப்படிதான் செயல்படுகிறது."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"இணையத்தில் உங்கள் கணக்குகளில் நீங்கள் செய்யும் எந்த மாற்றங்களும் தானாகவே மொபைலில் நகலெடுக்கப்படும்.\n\nசில கணக்குகள், மொபைலில் செய்யும் எந்த மாற்றங்களையும் தானாகவே இணையத்தில் நகலெடுக்கலாம். /e/ கணக்கு இப்படிதான் செயல்படுகிறது."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"தரவைத் தானாக ஒத்திசைப்பதை முடக்கவா?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"இது தரவு மற்றும் பேட்டரியின் பயன்பாட்டைச் சேமிக்கும், ஆனால் சமீபத்திய தகவலைச் சேகரிக்க ஒவ்வொரு கணக்கையும் கைமுறையாக நீங்கள் ஒத்திசைக்க வேண்டும். புதுப்பிக்கப்படும்போது அறிவிப்புகளைப் பெற மாட்டீர்கள்."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"பயன்பாட்டு சுழற்சியை மீட்டமைப்பதற்கான தேதி"</string>
