--- a/res/values-uz-rUZ/strings.xml
+++ b/res/values-uz-rUZ/strings.xml
@@ -417,11 +417,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Ogohlantirish: Agar yana <xliff:g id="COUNT">^1</xliff:g> marta muvaffaqiyatsiz urinish qilsangiz, qurilmangiz ma’lumotlari o‘chirib tashlanadi!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Parolingizni tering"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Shifrlanmadi"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Shifrlash jarayoni uzildi va uning ishini yakunlashning imkoni yo‘q. Natijada, planshetingizdagi ma‘lumotga yana kirishning imkoni bo‘lmaydi.  \n\n Planshetdan yana foydalana olish uchun, uni dastlabki sozlamalarga qaytarish lozim. Planshetingizni asl sozlamalariga qaytargandan so‘ng, uni sozlashni boshlaganingizda Google hisobingizga zaxiralangan har qanday ma‘lumotlar nusxasini tiklash imkoniyatiga ega bo‘lasiz."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Shifrlash jarayoni uzildi va uning ishini yakunlashning imkoni yo‘q. Natijada, telefoningizdagi ma‘lumotga yana kirishning imkoni bo‘lmaydi. \n\nTelefondan yana foydalana olish uchun, uni dastlabki sozlamalarga qaytarish lozim. Telefoningizni asl sozlamalariga qaytargandan so‘ng, uni sozlashni boshlaganingizda, Google hisobingizga zaxiralangan har qanday ma‘lumotlar nusxasini tiklash imkoniyatiga ega bo‘lasiz."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Shifrlash jarayoni uzildi va uning ishini yakunlashning imkoni yo‘q. Natijada, planshetingizdagi ma‘lumotga yana kirishning imkoni bo‘lmaydi.  \n\n Planshetdan yana foydalana olish uchun, uni dastlabki sozlamalarga qaytarish lozim. Planshetingizni asl sozlamalariga qaytargandan so‘ng, uni sozlashni boshlaganingizda /e/ hisobingizga zaxiralangan har qanday ma‘lumotlar nusxasini tiklash imkoniyatiga ega bo‘lasiz."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Shifrlash jarayoni uzildi va uning ishini yakunlashning imkoni yo‘q. Natijada, telefoningizdagi ma‘lumotga yana kirishning imkoni bo‘lmaydi. \n\nTelefondan yana foydalana olish uchun, uni dastlabki sozlamalarga qaytarish lozim. Telefoningizni asl sozlamalariga qaytargandan so‘ng, uni sozlashni boshlaganingizda, /e/ hisobingizga zaxiralangan har qanday ma‘lumotlar nusxasini tiklash imkoniyatiga ega bo‘lasiz."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Shifrni yechib bo‘lmadi"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Siz kiritgan parol to‘g‘ri, biroq planshetdagi ma’lumotlar shikastlangan.\n\nPlanshetdan foydalanishda davom etish uchun uning zavod sozlamalarini tiklashingiz lozim. Shundan so‘ng, Google hisobingizga zaxiralangan barcha ma’lumotlaringizni qayta tiklab olishingiz mumkin bo‘ladi."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Siz kiritgan parol to‘g‘ri, biroq telefondagi ma’lumotlar shikastlangan.\n\nTelefondan foydalanishda davom etish uchun uning zavod sozlamalarini tiklashingiz lozim. Shundan so‘ng, Google hisobingizga zaxiralangan barcha ma’lumotlaringizni qayta tiklab olishingiz mumkin bo‘ladi."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Siz kiritgan parol to‘g‘ri, biroq planshetdagi ma’lumotlar shikastlangan.\n\nPlanshetdan foydalanishda davom etish uchun uning zavod sozlamalarini tiklashingiz lozim. Shundan so‘ng, /e/ hisobingizga zaxiralangan barcha ma’lumotlaringizni qayta tiklab olishingiz mumkin bo‘ladi."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Siz kiritgan parol to‘g‘ri, biroq telefondagi ma’lumotlar shikastlangan.\n\nTelefondan foydalanishda davom etish uchun uning zavod sozlamalarini tiklashingiz lozim. Shundan so‘ng, /e/ hisobingizga zaxiralangan barcha ma’lumotlaringizni qayta tiklab olishingiz mumkin bo‘ladi."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Yozish usulini o‘zgartirish"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Ekranni qulfini o‘rnatish"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Qurilmangizni himoyalang"</string>
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Tarmoq sozlamalari qayta tiklandi"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Quril-ni ilk holatga qaytarish"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Zavod sozlamalarini tiklash"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Planshetning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" Google hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Telefonning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" Google hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Planshetning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" /e/ hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Telefonning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" /e/ hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Siz hozir tizimga quyidagi hisoblardan kirgansiz:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Bu qurilmada boshqa foydalanuvchilar ham bor.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musiqa"</li>\n<li>"Rasmlar"</li>\n<li>"Foydalanuvchining boshqa ma\'lumotlari"</li></string>
@@ -1325,7 +1325,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth orqali aniqlash"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Joylashuv axboroti aniq bo‘lishi uchun tizimga oid ilova va xizmatlarga xohlagan vaqtda yaqin-atrofdagi Bluetooth qurilmalarni qidirishiga ruxsat bering."</string>
     <string name="location_network_based" msgid="6010456018401296590">"Wi‑Fi va mobil tarmoq"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Joylashuvingizni tezroq aniqlash uchun ilovalarga Google joylashuv xizmatlaridan foydalanishga ruxsat berish. Joylashuv haqida anonim ma’lumot to‘planib, Google‘ga yuboriladi."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Joylashuvingizni tezroq aniqlash uchun ilovalarga /e/ joylashuv xizmatlaridan foydalanishga ruxsat berish. Joylashuv haqida anonim ma’lumot to‘planib, /e/‘ga yuboriladi."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi‑Fi orqali aniqlangan joylashuv"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS sun\'iy yo‘ldoshlari"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Ilovalarga joylashuvingizni aniq aniqlashlari uchun planshetingizdagi GPS‘dan foydalanishga ruxsat beradi"</string>
@@ -1333,8 +1333,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Ko‘rsatilgan GPS’dan foydalanish"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS uchun server yordamidan foydalanish  (trafikni kamaytirish uchun belgilanmani tozalang)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS uchun server yordamidan foydalanish  (GPS‘ni ko‘proq qo‘llash uchun belgilanmani tozalang)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Joylashuv va Google qidiruvi"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google sizning joylashuvingiz ma’lumotini qidiruv natijalari va boshqa xizmatlarni yaxshilash maqsadlarida foydalanishiga ruxsat bering"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Joylashuv va /e/ qidiruvi"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ sizning joylashuvingiz ma’lumotini qidiruv natijalari va boshqa xizmatlarni yaxshilash maqsadlarida foydalanishiga ruxsat bering"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Joylashuvim ma‘lumotiga kirish"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Sizdan ruxsat so‘ragan ilovalarga joylashuvingiz ma‘lumotidan foydalanishga ruxsat beradi"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Joylashuv manbalari"</string>
@@ -1433,7 +1433,7 @@
     <string name="applications_settings_header" msgid="1014813055054356646">"Ilova sozlamalari"</string>
     <string name="install_applications" msgid="4872012136210802181">"Noma’lum manbalar"</string>
     <string name="install_applications_title" msgid="4987712352256508946">"Barcha manbalarga ruxsat"</string>
-    <string name="install_unknown_applications_title" msgid="663831043139080992">"Google Play’dan boshqa manba-dan ol-gan ilova-ni o‘rnatish imkonini beradi"</string>
+    <string name="install_unknown_applications_title" msgid="663831043139080992">"/e/ Play’dan boshqa manba-dan ol-gan ilova-ni o‘rnatish imkonini beradi"</string>
     <string name="install_unknown_applications" msgid="176855644862942064">"Begona manbalardan olingan ilovalarni o‘rnatishga ruxsat berish"</string>
     <string name="install_all_warning" product="tablet" msgid="3263360446508268880">"Planshetingiz va shaxsiy ma‘lumotlaringiz no‘malum manbalardan o‘rnatilgan ilovalar xujumiga zaif bo‘ladi. Siz shunday ilovalardan foydalanish bilan birga ularning planshetizga yetkazadigan shikast va ma‘lumotlaringizni o‘chirib yuborishiga javobgarlikni o‘z zimmangizga olasiz."</string>
     <string name="install_all_warning" product="default" msgid="8113734576826384682">"Telefoningiz va shaxsiy ma’lumotlaringiz noma’lum manbalardan olingan ilovalarning hujumlariga qarshi himoyalanmagan. Bunday ilovalardan foydalanish orqali siz telefongizga yetishi mumkin bo‘lgan zarar uchun to‘liq o‘zingiz javobgar hisoblanasiz."</string>
@@ -2035,7 +2035,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Zaxira nusxa va qayta tiklash"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Shaxsiy ma‘lumotlar"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Ma’lumotlarni zaxiralash"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Ilova ma’lumotlari, Wi-Fi parollari va boshqa sozlamalarning zaxira nusxasini Google serveriga saqlang"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Ilova ma’lumotlari, Wi-Fi parollari va boshqa sozlamalarning zaxira nusxasini /e/ serveriga saqlang"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Zaxiralash uchun hisob"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Ilova ma’lumotini ham qo‘shish"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Avtomatik tiklash"</string>
@@ -2043,9 +2043,9 @@
     <string name="backup_inactive_title" msgid="5355557151569037197">"Zaxiralash xizmati faol emas."</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Hozir hech qaysi hisobda zahiralangan ma’lumotlar mavjud emas"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Wi-Fi parollari, xatcho‘plar, boshqa sozlamalar va ilova ma’lumotlarining zaxira nusxasini saqlash to‘xtatilib, ularning barcha nusxalari Google serveridan o‘chirib tashlansinmi?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Wi-Fi parollari, xatcho‘plar, boshqa sozlamalar va ilova ma’lumotlarining zaxira nusxasini saqlash to‘xtatilib, ularning barcha nusxalari /e/ serveridan o‘chirib tashlansinmi?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Qurilmadagi ma’lumotlar (m-n, Wi-Fi parollari va qo‘ng‘iroqlar tarixi) va ilova ma’lumotlarining (m-n, sozlamalar va ilovalar tomonidan saqlangan fayllar) zaxira nusxasini saqlash to‘xtatililib, ularning olis serverlardagi barcha nusxalari o‘chirib tashlansinmi?"</string>
-    <string name="fullbackup_data_summary" msgid="960850365007767734">"Qurilmadagi ma’lumotlar (m-n, Wi-Fi parollari va qo‘ng‘iroqlar tarixi) va ilovalarga oid ma’lumotlar (m-n, sozlamalar va ilovalar tomonidan saqlangan fayllar) zaxira nusxasini Google Drive xizmatiga avtomatik saqlang.\n\nAgar avtomatik zaxiralash funksiyasi yoqilsa, qurilma va ilova ma’lumotlarining zaxira nusxasi vaqti-vaqti bilan Google Drive xizmatidagi shaxsiy jildga saqlab turiladi. Ilova ma’lumotlariga ilova tomonidan saqlangan har qanday ma’lumot (dasturchi sozlamalari asosida), jumladan, kontaktlar, xabar va rasmlar kabi maxfiy ma’lumotlar ham kiradi."</string>
+    <string name="fullbackup_data_summary" msgid="960850365007767734">"Qurilmadagi ma’lumotlar (m-n, Wi-Fi parollari va qo‘ng‘iroqlar tarixi) va ilovalarga oid ma’lumotlar (m-n, sozlamalar va ilovalar tomonidan saqlangan fayllar) zaxira nusxasini /e/ Drive xizmatiga avtomatik saqlang.\n\nAgar avtomatik zaxiralash funksiyasi yoqilsa, qurilma va ilova ma’lumotlarining zaxira nusxasi vaqti-vaqti bilan /e/ Drive xizmatidagi shaxsiy jildga saqlab turiladi. Ilova ma’lumotlariga ilova tomonidan saqlangan har qanday ma’lumot (dasturchi sozlamalari asosida), jumladan, kontaktlar, xabar va rasmlar kabi maxfiy ma’lumotlar ham kiradi."</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"Qurilmani boshqarish sozlamalari"</string>
     <string name="active_device_admin_msg" msgid="6930903262612422111">"Qurilma administratori"</string>
     <string name="remove_device_admin" msgid="7736174723276745230">"Qurilma administratorini faolsizlashtirish"</string>
@@ -2130,7 +2130,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Taqvim"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontaktlar"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google sinxronlashga marhamat qiling!"</font>" \nGoogle‘ning ma‘lumotlarni sinxronlashga yondashishi qaerda bo‘lmang aloqalaringiz ro‘yxatiga, uchrashuvlaringiz va boshqa ma‘lumotlaringizga kirishga imkon beradi."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ sinxronlashga marhamat qiling!"</font>" \n/e/‘ning ma‘lumotlarni sinxronlashga yondashishi qaerda bo‘lmang aloqalaringiz ro‘yxatiga, uchrashuvlaringiz va boshqa ma‘lumotlaringizga kirishga imkon beradi."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Ilova sinx-lash sozlamalari"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Ma‘lumotlar &amp; sinxronlashuv"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Parolni o‘zgartirish"</string>
@@ -2218,8 +2218,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="5871168521456832764">"Ushbu funksiya faqat mobil tarmoqlar mavjud bo‘lganida orqa fonda internetdan foydalanishga bog‘liq ilovaning ishlashini to‘xtatib qo‘yishi mumkin.\n\nIlovadagi mavjud sozlamalar yordamida internetdan foydalanishni o‘zingizga mos tarzda nazorat qilishingiz mumkin."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="1493134803720421674">"Orqa fonda internetdan foydalanishni cheklashdan oldin mobil internet uchun cheklovni o‘rnatish lozim."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Avto-sinxronizatsiya yoqilsinmi?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Internet orqali hisoblaringizda qilingan har qanday o‘zgarish avtomatik tarzda planshetingizda ham aks etadi.\n\nBa’zi hisoblar planshet orqali qilingan o‘zgarishlarni internetga nusxalash imkoniyati ham mavjud. Google hisobi xuddi shunday ishlaydi."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Internet orqali hisoblaringizda qilingan har qanday o‘zgarish avtomatik tarzda telefoningizda ham aks etadi.\n\nBa’zi hisoblar telefon orqali qilingan o‘zgarishlarni internetga nusxalash imkoniyati ham mavjud. Google hisobi xuddi shunday ishlaydi."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Internet orqali hisoblaringizda qilingan har qanday o‘zgarish avtomatik tarzda planshetingizda ham aks etadi.\n\nBa’zi hisoblar planshet orqali qilingan o‘zgarishlarni internetga nusxalash imkoniyati ham mavjud. /e/ hisobi xuddi shunday ishlaydi."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Internet orqali hisoblaringizda qilingan har qanday o‘zgarish avtomatik tarzda telefoningizda ham aks etadi.\n\nBa’zi hisoblar telefon orqali qilingan o‘zgarishlarni internetga nusxalash imkoniyati ham mavjud. /e/ hisobi xuddi shunday ishlaydi."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Avto-sinxronizatsiya o‘chirilsinmi?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Bu trafik va batareya quvvati sarfini tejaydi. Biroq, yangi ma’lumotlarni olish uchun har bir hisobni qo‘lda sinxronlash lozim. Bunda, yangilanishlar haqida hech qanday bildirishnoma ko‘rsatilmaydi."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Trafik sarfini yangilash sanasi"</string>
